--- a/content/weekly-update/חג-המים-הקציר-והטרקטורים.md
+++ b/content/weekly-update/חג-המים-הקציר-והטרקטורים.md
@@ -2,11 +2,12 @@
 title: 'חג המים, הקציר - והטרקטורים!'
 date: '2020-05-30T17:14:59+03:00'
 ---
+
 חג אדמה שמח,
 
 אנחנו כבר מורגלים למדי לשגרה החדשה שלנו, ומרגישים די נינוחים בגן החדש-ישן שלנו. לאט לאט מתחילים להחזיר לגן נהלים ומנהגים מלפני הקורונה:
 
-1. **אוספים נוספים** - אנחנו עדיין ממשיכים במתווה הנוכחי, אך מבינים את הצורך באוספים נוספים בסוף היום. לכן, החל מיום א', יוכלו להגיע לגן מטפלות/ סבים סבתות. עם זאת, הם לא יוכלו להיכנס לגן. אנחנו נוציא את הילדימות אליהם. בהזדמנות זו, מזכירים לכם לשלוח הודעה על איסופים אחרים בסוף היום.  בבוגרים יש לשלוח הודעה לחולוד. בצעירים יש לשלוח הודעה למיכל/אורטל בהתאם לקבוצה. 
+1. **אוספים נוספים** - אנחנו עדיין ממשיכים במתווה הנוכחי, אך מבינים את הצורך באוספים נוספים בסוף היום. לכן, החל מיום א', יוכלו להגיע לגן מטפלות/ סבים סבתות. עם זאת, הם לא יוכלו להיכנס לגן. אנחנו נוציא את הילדימות אליהם. בהזדמנות זו, מזכירים לכם לשלוח הודעה על איסופים אחרים בסוף היום. בבוגרים יש לשלוח הודעה לחולוד. בצעירים יש לשלוח הודעה למיכל/אורטל בהתאם לקבוצה.
 2. **תורנות שושנה** – עד לפני הקורונה ניהלה שכבת הבוגרים תורנות טיפול בשושנה בהצלחה רבה. כעת אנו פותחים אפשרות זו לכל קבוצות הגן, החל מהשבוע הבא.
 
 \- מה זה אומר?
@@ -19,7 +20,7 @@ date: '2020-05-30T17:14:59+03:00'
 
 \- מה שוש אוכלת?
 
-דגנים וקטניות קטנות, וירקות חתוכים (אוהבת במיוחד זרעים של פלפלים)  - לא יותר מחופן אחד של מזון, אחרת כל המזון הזה הופך לקקי בלתי נשלט...
+דגנים וקטניות קטנות, וירקות חתוכים (אוהבת במיוחד זרעים של פלפלים) - לא יותר מחופן אחד של מזון, אחרת כל המזון הזה הופך לקקי בלתי נשלט...
 
 נשמח לראות גם את שכבת הצעירים משתתפת במסורת!
 
@@ -31,7 +32,7 @@ date: '2020-05-30T17:14:59+03:00'
 
 **אחינועם וכל צוות גן ילדי הטבע הדמוקרטי**
 
-## **<br>**שכבת הצעירים
+## \*\*\*\*שכבת הצעירים
 
 בשבועות הראשונים אחרי החזרה מהקורונה התמקדנו בחזרה לשגרה ויצירת סדר יום קבוע שהילדימות יכולים לחוש בו בנוח. היום הילדימות כבר נכנסים ל"אזור הסטרילי" ומיד מניחים את התיק, חולצים סנדלים, לוקחים בקבוק ורצים פנימה – כל אחד ואחת לחלל שלהם – ומזכירים לנו בעצמם לעצור בתחנת האלכוג'ל לחטא ידיים.
 
@@ -45,7 +46,7 @@ date: '2020-05-30T17:14:59+03:00'
 
 קראנו את הסיפור על שאול הטרקטור מאת גידי וענת גוב.
 
-> "פעם אחת היה טרקטור קטן אדום, עם גלגלים צהובים, שקראו לו שאול..." 
+> "פעם אחת היה טרקטור קטן אדום, עם גלגלים צהובים, שקראו לו שאול..."
 
 התבוננו בתמונות וראינו איזה דברים שאול יכול לעשות ואיזה דברים הוא לא יכול. תירגלנו את הקולות השונים שבני משפחתו משמיעים והחלטנו שאנו יכולים להיות טרקטורים לכמה רגעים. יצאנו למסע בדמיון כטרקטורים התגלגלנו בעזרת הגלגלים הגדולים, בעזרת שתי כפות ידיים שהפכו לכף גדולה אספנו אדמה לחה, האצבעות עזרו לנו ליצור מחרשה ואיתה חרצנו חריצים ארוכים ועמוקים. באמצעות הכף הקדמית הגדולה שלנו הזזנו גבעות של חול ממקום למקום.
 
@@ -63,8 +64,6 @@ date: '2020-05-30T17:14:59+03:00'
 
 הכנסנו גם את החימר לפעילות וגילינו שנורא כיף לנעוץ אותם בחימר הרך. לכבוד חג השבועות חשבנו כיצד נוכל לקחת את התבלין הזה הביתה: אולי ביד, אולי בשקית, אולי בקערה? כל אחד מהחברימות קיבל כדור של חימר, למדנו לעשות גומה עם האצבע ולהרחיב אותה. גילינו שברגע שאנו צובטים את דפנות החימר נוצרת קערה. הילדימות בחרו איך הם רוצים לשלב את הרוזמרין - בנעיצת הגבעול, המחטים, או במילוי הקערה.
 
-<br>
-
 # הפינה הכחולה
 
 השבוע התחלנו להכיר את תנועת האחוות שלנו – הפילים והקיפודים. הפילים החלו לצעוד לאט ולרקוע. הקשבנו לשיר [הפיל ](https://youtu.be/96-j4vwEip0)/ תנועחיה. תירגלנו מקצבים איטיים ומהירים וצעדים רועשים ושקטים.
@@ -76,8 +75,6 @@ date: '2020-05-30T17:14:59+03:00'
 אנחנו אוהבים טקסים! במיוחד את טקס המזרנים שלנו!
 
 את חלוקת המזרנים אנו מבצעים יחד: מוציאים את המזרנים אחד אחד, מסתכלים על צבע הסדין ומודיעים למי הוא שייך. ומה קורה כשיש ילדימות על מזרנים? הם קופצים... בעזרת השיר [פופקורן ](https://youtu.be/DBYjZTdrJlA)אנו משחקים משחק קפיצה/ישיבה כשהשיר מתנגן אנו קופצים וכשהשיר פוסק אנו יושבים.
-
-<br>
 
 # הפינה הצהובה
 
@@ -93,13 +90,13 @@ date: '2020-05-30T17:14:59+03:00'
 
 **אורטל, אלינור, ימית ומיכל**
 
-**<br>**
+---
 
 ## שכבת הבוגרים
 
 השבוע פתחנו את הבוקר שלנו בחצר עם שירי שבועות כיפיים במיוחד, ויצרנו לעצמנו טקס נפלא! כל מי שמגיעים בבוקר הולכים לשטוף ידיים, מניחים את הבקבוק בסלסלה המתאימה ויתר החברימות מברכים את הנכנסים החדשים ומזמינים אותם להצטרף לעבודה בחומרים. חלק מהילדימות בוחרים לפתוח את הבוקר דווקא בחלק שלנו של החצר, ואחרים נהנים מהגשת החומרים.
 
-במסגרת העבודה שלנו באחוות, התחלנו להתייחס לתכונות המאפיינות את החיות השונות שלנו. אנחנו שומעים את השיר השכבתי החדש שלנו: “[I Like to Move it](https://www.youtube.com/watch?v=hdcTmpvDO0I)” מ"מדגסקר 2", בו מופיעות כל חיות האחוות – הפינגווינים, הציפורים, האריות והטיגריסים. התחלנו להתנסות בלנוע כמו החיות השונות – הליכת פינגווינים מצחיקה, התגנבות אריות וטיגריסים וקפצוצי ציפורים. 
+במסגרת העבודה שלנו באחוות, התחלנו להתייחס לתכונות המאפיינות את החיות השונות שלנו. אנחנו שומעים את השיר השכבתי החדש שלנו: “[I Like to Move it](https://www.youtube.com/watch?v=hdcTmpvDO0I)” מ"מדגסקר 2", בו מופיעות כל חיות האחוות – הפינגווינים, הציפורים, האריות והטיגריסים. התחלנו להתנסות בלנוע כמו החיות השונות – הליכת פינגווינים מצחיקה, התגנבות אריות וטיגריסים וקפצוצי ציפורים.
 
 **פעילות בקבוצות קטנות**
 
@@ -113,7 +110,7 @@ date: '2020-05-30T17:14:59+03:00'
 
 **טרקטורים!**
 
-לכבוד חג הקציר, דיברנו רבות השבוע על טרקטורים, עבודתם ומאפייניהם. השתמשנו בטרקטורים שלנו בארגז החול וגם באדמה, צבענו יחדיו טרקטורים, וגם קראנו את הספר "שאול הטרקטור" מאת גידי וענת גוב, וראינו איזה פעולות הטרקטור יכול לעשות שילדימות לא יכולים לעשות – וגם להיפך. 
+לכבוד חג הקציר, דיברנו רבות השבוע על טרקטורים, עבודתם ומאפייניהם. השתמשנו בטרקטורים שלנו בארגז החול וגם באדמה, צבענו יחדיו טרקטורים, וגם קראנו את הספר "שאול הטרקטור" מאת גידי וענת גוב, וראינו איזה פעולות הטרקטור יכול לעשות שילדימות לא יכולים לעשות – וגם להיפך.
 
 **מסיבת שבועות**
 
@@ -121,13 +118,9 @@ date: '2020-05-30T17:14:59+03:00'
 
 אחרי ארוחת הבוקר החגיגית עשינו מסיבת שבועות: השמענו שירים ורקדנו. באמצע החצר הצבנו ממטרה מסתובבת שהרטיבה אותנו ועשתה לנו מסיבת מים כמנהג חג השבועות! החברים נהנו לרקוד ולקפץ סביבה ולהירטב מכף רגל ועד ראש! ואפילו דאגנו להשקות את העציצים שלנו שלא יהיו צמאים!
 
-<br>
-
 # הפינה הורודה
 
 אחי העבירה לנו מפגש השבוע, וזה היה ממש מרגש! היא הראתה לנו את החיטה: פתחנו אותה והרגשנו את הגרגרים. מיששנו ותהינו איך זה הופך לקמח? הילדימות הציעו רעיונות וכולם ממש צדקו! בסוף דיברנו על מה שאפשר להכין מהקמח: הילדימות זרקו מלא רעיונות, אבל מה שהכי סקרן אותנו זה איך מכינים קמח עם רוזמרין!
-
-<br>
 
 # הפינה האדומה
 
