--- a/content/weekly-update/חופשה-נעימה.md
+++ b/content/weekly-update/חופשה-נעימה.md
@@ -2,6 +2,7 @@
 title: חופשה נעימה!
 date: '2020-08-18T18:22:19+03:00'
 ---
+
 הי לכולם!
 
 ואו, קצת קשה להאמין שהשנה הזו הסתיימה.
@@ -34,7 +35,7 @@ date: '2020-08-18T18:22:19+03:00'
 
 **חיבוקים רחוקים,**
 
-**אחינועם <br>**
+**אחינועם **
 
 ## שכבת הצעירים
 
@@ -106,19 +107,15 @@ date: '2020-08-18T18:22:19+03:00'
 
 [אילו הייתי](https://www.youtube.com/watch?v=aM856Z3t_l0)
 
-
-
 **בברכת קיץ נעים ומהנה, ניפגש ב-1 בספטמבר!**
 
 **צוות שכבת הצעירים: אורטל, מיכל, אלינור, ימית וגבי**
-
-
 
 שכבת הבוגרים
 
 ילדימות אהובים ויקרים שלנו, איך אפשר לסכם שנתיים, ועוד כשהזמן טס כל כך מהר ומוזר לחשוב שבכלל שנתיים (ואצל חלק מכם יותר) כבר עברו. הגעתם אלינו ממש תינוקות, חלקכם לא ידעו ללכת וחלקכם בקושי דיברו, והיום אנחנו כבר בקושי מצליחים להשחיל מילה בשיח הפורה שלכם, הבוגרים המדהימים שלנו.
 
-בתור צעירים בגן, הילדימות חקרו כמעט את הכל! למדנו מה זה גן בעצם, הכרנו את סדר היום ולאט לאט תפסנו ביטחון.  כשאנחנו יודעים איך נראה סדר היום שלנו, יש לנו תחושת שליטה ואנחנו יכולים לקבל החלטות מבוססות ידע. כמונו גם הילדימות – ההיכרות הזו איפשרה לילדימות לחקור את העצמאות שלהם. מה זאת עצמאות? לבחור את הלבוש שלי היום, לבחור איך אני רוצה להיפרד, לבחור איפה אני פותחת את הבוקר שלי, האם אני מעדיף לפתוח את הבוקר שלי בחצר? או בפנים בכיתה. באיזה חומרים אני אוהב לגעת ובאיזה פחות? איך אפשר להתגבר על התחושה? איך אני מאתגרת את עצמי לנסות כל יום משהו חדש?
+בתור צעירים בגן, הילדימות חקרו כמעט את הכל! למדנו מה זה גן בעצם, הכרנו את סדר היום ולאט לאט תפסנו ביטחון. כשאנחנו יודעים איך נראה סדר היום שלנו, יש לנו תחושת שליטה ואנחנו יכולים לקבל החלטות מבוססות ידע. כמונו גם הילדימות – ההיכרות הזו איפשרה לילדימות לחקור את העצמאות שלהם. מה זאת עצמאות? לבחור את הלבוש שלי היום, לבחור איך אני רוצה להיפרד, לבחור איפה אני פותחת את הבוקר שלי, האם אני מעדיף לפתוח את הבוקר שלי בחצר? או בפנים בכיתה. באיזה חומרים אני אוהב לגעת ובאיזה פחות? איך אפשר להתגבר על התחושה? איך אני מאתגרת את עצמי לנסות כל יום משהו חדש?
 
 למדנו לטעום את המאכלים ולזהות מה אנחנו כן אוהבים ומה לא: אולי עם קצת שמן זית? אולי קצת לימון חמוץ? מה עם קצת פלפל? זעתר? בתוך לחם? בסוף הגענו לשלב בו אנו בוחרים מתוך מגש את הירקות שנרצה לאכול, איזו תוספת, והאם אני רוצה את התוספת מעל או בצד? אוכל מעורבב או מחולק? זה דבר לא מובן מאליו! העצמאות שלנו הלכה והתפתחה, רכשנו מיומנויות ופתרון בעיות שילוו אותנו גם בהמשך הדרך.
 
@@ -126,9 +123,9 @@ date: '2020-08-18T18:22:19+03:00'
 
 הדרך לעצמאות
 
-עכשיו כשאנחנו בוגרים אנחנו מסוגלים כמעט לכל! תחושת המסוגלות שלנו מתפתחת מיום ליום, כל דבר חדש שניסינו (גם אם חששנו ממנו) בסוף הדרך היה להצלחה. למדנו לנסות שוב ושוב עד שנצליח במשימה שלנו. למדנו שגם לבקש עזרה זאת דרך להצליח, וצריך לדעת ממי אני מבקש ואיך אני מבקש, לשים לב האם מי שביקשתי ממנו עזרה שמע אותי או שהוא רחוק. 
+עכשיו כשאנחנו בוגרים אנחנו מסוגלים כמעט לכל! תחושת המסוגלות שלנו מתפתחת מיום ליום, כל דבר חדש שניסינו (גם אם חששנו ממנו) בסוף הדרך היה להצלחה. למדנו לנסות שוב ושוב עד שנצליח במשימה שלנו. למדנו שגם לבקש עזרה זאת דרך להצליח, וצריך לדעת ממי אני מבקש ואיך אני מבקש, לשים לב האם מי שביקשתי ממנו עזרה שמע אותי או שהוא רחוק.
 
-מנגד, למדנו גם לעזור לחברימות, ולהקשיב, ובכלל, הילדימות פיתחו המון אמפטיה זה לזו: מה אפשר לעשות אם חבר מקבל מכה? או נופל? או אם חטפו לחברה משחק והיא עצובה? למדנו לשאול אותם: איך אפשר לעזור לך? כשמפנים למישהו את השאלה, הופכים אותם לאקטיביים בסיטואציה, והבחירה בידיים שלהם. כך הם יכולים לבחור מה יעזור להם, והאם הם בכלל זקוקים לעזרה.  בנוסף, עצם שאילת השאלה גורמת לנו לחשוב מה התשובה שלנו לשאלה זו, וללמוד במקביל להרגיע את עצמנו.
+מנגד, למדנו גם לעזור לחברימות, ולהקשיב, ובכלל, הילדימות פיתחו המון אמפטיה זה לזו: מה אפשר לעשות אם חבר מקבל מכה? או נופל? או אם חטפו לחברה משחק והיא עצובה? למדנו לשאול אותם: איך אפשר לעזור לך? כשמפנים למישהו את השאלה, הופכים אותם לאקטיביים בסיטואציה, והבחירה בידיים שלהם. כך הם יכולים לבחור מה יעזור להם, והאם הם בכלל זקוקים לעזרה. בנוסף, עצם שאילת השאלה גורמת לנו לחשוב מה התשובה שלנו לשאלה זו, וללמוד במקביל להרגיע את עצמנו.
 
 מה קורה אם חבר עשה לנו משהו לא נעים? איך נגיב? האם נגיב מכעס? החברימות הבוגרים שלנו כבר יודעים לקחת נשימה עמוקה, ולדבר אחד עם השני בשביל לפתור בעיות. למדנו המון סוגים של פתרונות לבעיות. החברימות אלופים במציאת פתרונות ! זאת מיומנות מאוד חשובה - לדעת להתאים את עצמך לסיטואציה ולנסות כמה סוגים של פתרונות. לשם כך נחוץ ארגז כלים מקיף לפתרון בעיות, שניסינו להקנות לפחות את חלקו לחברימות. לעתים, לילדימות פתרונות טובים ויצירתיים אף יותר ממה שאנו עצמנו חשבנו עליהם.
 
@@ -140,9 +137,9 @@ date: '2020-08-18T18:22:19+03:00'
 
 ובנימה אישית:
 
-כשהתחלתי את המסע שלי בגן ילדי הטבע התחלתי אותו אתכם ולמדתי להכיר אתכם. ממש כפי שאתם עברתם תקופת הסתגלות, גם אני הסתגלתי לגן.  כל אחד מכם תרם להתפתחות האישית שלי בסמע המרגש הזה וככל שגדלתם אל מול עיני כך אני גדלתי אתכם. חוויתי איתכם כל שלב, ראיתי כל קפיצת גדילה, כל אבן דרך - וכל מילה חדשה שאמרתם עוררה בי רצון להמשיך איתכם את המסע המופלא הזה.
+כשהתחלתי את המסע שלי בגן ילדי הטבע התחלתי אותו אתכם ולמדתי להכיר אתכם. ממש כפי שאתם עברתם תקופת הסתגלות, גם אני הסתגלתי לגן. כל אחד מכם תרם להתפתחות האישית שלי בסמע המרגש הזה וככל שגדלתם אל מול עיני כך אני גדלתי אתכם. חוויתי איתכם כל שלב, ראיתי כל קפיצת גדילה, כל אבן דרך - וכל מילה חדשה שאמרתם עוררה בי רצון להמשיך איתכם את המסע המופלא הזה.
 
-קיבלתי מכם כוחות ורצון - היה לי כיף לחשוב על היום שלי איתכם וההגעה לגן הייתה כל יום חוויה עבורי.  תודה לכם על שנתיים נפלאות מלאות בחיבוקים, חיזוקים והמון אהבה!
+קיבלתי מכם כוחות ורצון - היה לי כיף לחשוב על היום שלי איתכם וההגעה לגן הייתה כל יום חוויה עבורי. תודה לכם על שנתיים נפלאות מלאות בחיבוקים, חיזוקים והמון אהבה!
 
 מאחלת לכם לצלוח את הדרך החדשה ללא פחד וללא חששות ומאמינה שיש לכם את כל הכלים והמיומנויות הדרושים לכך.
 
