--- a/content/weekly-update/חלזונות-חתולים-וציפורים-נודדות.md
+++ b/content/weekly-update/חלזונות-חתולים-וציפורים-נודדות.md
@@ -2,13 +2,14 @@
 title: 'חלזונות, חתולים וציפורים נודדות'
 date: '2020-11-21T16:48:48+02:00'
 ---
+
 **שבת שלום ומנוחה לכולם,**
 
 נפתח כרגיל בכמה הודעות כלליות בטרם אעביר את השרביט לעדכוני הקפטניות שלכם:
 
-\-	**רישום פנימי**: התחלנו את הרישום הפנימי, כל המידע בנושא נשלח אליכם במייל ביום שלישי, אבל אם יש לכם עוד שאלות, מוזמנים לפנות אלינו. בנוסף, שמנו לב שבשכבת הבוגרים יש לכם שאלות בנושא, ולכן נקיים מפגש זום ביום שני בשעה 10:00 על בוגרים שממשיכים לעוד שנה.
+\- **רישום פנימי**: התחלנו את הרישום הפנימי, כל המידע בנושא נשלח אליכם במייל ביום שלישי, אבל אם יש לכם עוד שאלות, מוזמנים לפנות אלינו. בנוסף, שמנו לב שבשכבת הבוגרים יש לכם שאלות בנושא, ולכן נקיים מפגש זום ביום שני בשעה 10:00 על בוגרים שממשיכים לעוד שנה.
 
-\-	**דרכי התקשרות**: אנחנו מזכירים לכם שלכל הקפטניות והמנהלים יש מייל לצרכי התקשרות עם הורים! מנסיון השנה שעברה, פניה דרך המייל היא מאוד אפקטיבית. מדוע? כי אתם יכולים לכתוב את כל שעל לבכם, גם אם זה ארוך. אנחנו מצידנו מגיבות כשאנחנו פנויות לכך ומרוכזות רק בזה. בצורה זו אנחנו גם יכולות לחשוב, להתייעץ ולאסוף מידע לפני שאנחנו עונות לכן ולתת תשובות בהירות ומדוייקות יותר (למשל, אם אתם רוצים להתיעץ על נושא אוכל, אנחנו יכולות לברר עם הצוות כולו מה הרגלי האכילה בגן).
+\- **דרכי התקשרות**: אנחנו מזכירים לכם שלכל הקפטניות והמנהלים יש מייל לצרכי התקשרות עם הורים! מנסיון השנה שעברה, פניה דרך המייל היא מאוד אפקטיבית. מדוע? כי אתם יכולים לכתוב את כל שעל לבכם, גם אם זה ארוך. אנחנו מצידנו מגיבות כשאנחנו פנויות לכך ומרוכזות רק בזה. בצורה זו אנחנו גם יכולות לחשוב, להתייעץ ולאסוף מידע לפני שאנחנו עונות לכן ולתת תשובות בהירות ומדוייקות יותר (למשל, אם אתם רוצים להתיעץ על נושא אוכל, אנחנו יכולות לברר עם הצוות כולו מה הרגלי האכילה בגן).
 
 לא זוכרים את המיילים? זה ממש ממש קל - שם הקפטנית ואז כתובת הגן, הנה לכם הרשימה:
 
@@ -26,13 +27,13 @@ gabrielle@ganyeledteva.org
 
 ועוד לגבי התקשרות: לאורך היום הקפטניות בדרך כלל לא מתעסקות עם הטלפון. אם יש לכם הודעה חשובה ששכחתם לעדכן בבוקר / משהו שתרצו לבקש באופן ספציפי, אתם מוזמנים להתקשר למשרד הגן שם תענה לכם חן קורן: 03-6969323.
 
-\-	**כניסה לגן עם חפצים/אוכל**: אנחנו רוצים להזכיר לכם כי בבקרים לא תוכלו להיכנס לגן עם משחק/חפץ/אוכל ביד. מעבר לכך שיש בגן ילדים עם אלרגיות מזון ולכן איננו יכולים לאפשר הכנסת מזון מן החוץ, יש כאן עניין חברתי מבחינתנו. כשילד נכנס לגן עם לחמניה/עוגיה/חטיף, גם חברים אחרים רוצים – ובצדק.
+\- **כניסה לגן עם חפצים/אוכל**: אנחנו רוצים להזכיר לכם כי בבקרים לא תוכלו להיכנס לגן עם משחק/חפץ/אוכל ביד. מעבר לכך שיש בגן ילדים עם אלרגיות מזון ולכן איננו יכולים לאפשר הכנסת מזון מן החוץ, יש כאן עניין חברתי מבחינתנו. כשילד נכנס לגן עם לחמניה/עוגיה/חטיף, גם חברים אחרים רוצים – ובצדק.
 
 לגבי משחק - כשילד/ה נכנסים לגן עם משחק לרוב מאוד קשה להם לשחרר אותו. בגן שלנו כל המשחקים שייכים לכולם וברגע שיש חפץ ששייך למישהו אחד האיזון מופר. למה? כי החברים גם רוצים לשחק בחפץ אבל הילד/ה לא מסכימים כי זה שלהם – גם כן בצדק. מעבר לכך, קשה לנו לשמור על משחק בודד בתוך הגן והוא עלול ללכת לאיבוד בין שלל המשחקים שיש בגן. חשוב להדגיש שאנחנו לא מדברים על חפץ מעבר שמסייע לילד/ה בקושי ספציפי - זהו חפץ שהוסכם ותואם עם הקפטניות.
 
 זה צריך להיות כלל מוקפד והילדימות מכירים אותו. כשאתם מסבירים להם מדוע, נסו להימנע ממשפטים כמו "המחנכת לא מרשה", ולתת הסבר הגיוני. אנחנו רוצים שהילדימות יבינו שיש כללים הגיוניים שכולנו – אתם וגם אנחנו – מסכימים עליהם.
 
-אנחנו מבינות שלעתים הנשנוש או המשחק עוזרים לכם ולילדימות בדרך לגן, וזה בסדר גמור. כדי שלא ליצור מצב שבו בשער הגן הילדימות צריכים להיפרד גם מכם וגם מהחפץ שבידם, מציעות לכם לעצור רגע, לשבת על החומה/מדרגות ממול ולסיים את הנשנוש יחד, או לבקש להכניס יחד את המשחק לתיק (למשל, להשכיב את הבובה לישון בתוך התיק). כך תרוויחו כמה דקות קלילות, בהן אפשר גם לצפות בחברימות האחרים הנכנסים לגן, לשים לב מי כבר הגיעו – במקום כמה דקות של ריב על משחק בכניסה. 
+אנחנו מבינות שלעתים הנשנוש או המשחק עוזרים לכם ולילדימות בדרך לגן, וזה בסדר גמור. כדי שלא ליצור מצב שבו בשער הגן הילדימות צריכים להיפרד גם מכם וגם מהחפץ שבידם, מציעות לכם לעצור רגע, לשבת על החומה/מדרגות ממול ולסיים את הנשנוש יחד, או לבקש להכניס יחד את המשחק לתיק (למשל, להשכיב את הבובה לישון בתוך התיק). כך תרוויחו כמה דקות קלילות, בהן אפשר גם לצפות בחברימות האחרים הנכנסים לגן, לשים לב מי כבר הגיעו – במקום כמה דקות של ריב על משחק בכניסה.
 
 **המשך שבוע רגוע ונעים**
 
@@ -68,7 +69,7 @@ gabrielle@ganyeledteva.org
 
 **יום הולדת חגיגה נחמדת**
 
-מתי עוד רקדנו ונהנינו? בימי ההולדת! באופן רשמי נפתחו חגיגות ימי ההולדת בגן ומי שחנכו את הטקס החגיגי הן נוגה ומימי. המון מזל טוב לבנות ותודה על קאפקייס נפלאים :)  מתנות יום ההולדת נועדו לחבר בין הגן לבית, ומזמנות לכם הזדמנות לדבר עם הילדימות על הפינות השונות של הגן, דרך המשחק. ובמה עטפנו אותן?
+מתי עוד רקדנו ונהנינו? בימי ההולדת! באופן רשמי נפתחו חגיגות ימי ההולדת בגן ומי שחנכו את הטקס החגיגי הן נוגה ומימי. המון מזל טוב לבנות ותודה על קאפקייס נפלאים :) מתנות יום ההולדת נועדו לחבר בין הגן לבית, ומזמנות לכם הזדמנות לדבר עם הילדימות על הפינות השונות של הגן, דרך המשחק. ובמה עטפנו אותן?
 
 **עבודה בחומרים**
 
@@ -76,7 +77,7 @@ gabrielle@ganyeledteva.org
 
 # ביחד ולבד
 
-לפעמים אנחנו שמות לב בגן שיש ילדימות שרוצים להיות לבד. גם הילדימות הכי חברותיים לפעמים צריכים קצת שקט ומשחק עצמי, וזה ממש בסדר לרצות להיות לבד. לפעמים אנחנו לא רוצים לחלוק את המשחק שלנו, ולפעמים אנחנו פשוט רוצים לשבת בלי אף אחד.  התייחסנו השבוע לצורך הזה באמצעות שעת הסיפור שלנו, שהתמקדה בספר "לבד על המרבד" (בריאן וילדסמית):
+לפעמים אנחנו שמות לב בגן שיש ילדימות שרוצים להיות לבד. גם הילדימות הכי חברותיים לפעמים צריכים קצת שקט ומשחק עצמי, וזה ממש בסדר לרצות להיות לבד. לפעמים אנחנו לא רוצים לחלוק את המשחק שלנו, ולפעמים אנחנו פשוט רוצים לשבת בלי אף אחד. התייחסנו השבוע לצורך הזה באמצעות שעת הסיפור שלנו, שהתמקדה בספר "לבד על המרבד" (בריאן וילדסמית):
 
 > "חָתוּל אֶחָד נֶחְמָד יָשַב עַל הַמַרְבָד
 >
@@ -106,11 +107,11 @@ gabrielle@ganyeledteva.org
 
 השבוע נדדנו עם הציפורים דרומה לאפריקה, עם תחנה באתיופיה לרגל חג הסיגד. ציינו את החג בטקס קפה מסורתי, וחגגנו גם את ימי ההולדת הראשונים שלנו השנה! נתחיל בכמה הודעות, ואז נספר לכם הכל!
 
-\-	**מגבונים**: שמנו לב שרובכם לא הבאתם מגבונים החודש! מזכירות כי עדיין אנחנו עושות שימוש במגבונים, וכי כל ילד גמול מתבקש להביא חבילה אחת, בעוד מי שעדיין עם חיתולים מתבקשים להביא שתיים. הבנו שחלק מכם הנחתם חבילה בתיק, אבל אין לנו יכולת לדעת האם יש לכם חבילה בתיק באופן סדיר, או שהיא מיועדת לגן. לכן, מיום ראשון נניח ארגז המיועד למגבונים באזור הסטרילי – רישמו שם על החבילה שלכם והניחו בצורה מסודרת בארגז. תודה!
+\- **מגבונים**: שמנו לב שרובכם לא הבאתם מגבונים החודש! מזכירות כי עדיין אנחנו עושות שימוש במגבונים, וכי כל ילד גמול מתבקש להביא חבילה אחת, בעוד מי שעדיין עם חיתולים מתבקשים להביא שתיים. הבנו שחלק מכם הנחתם חבילה בתיק, אבל אין לנו יכולת לדעת האם יש לכם חבילה בתיק באופן סדיר, או שהיא מיועדת לגן. לכן, מיום ראשון נניח ארגז המיועד למגבונים באזור הסטרילי – רישמו שם על החבילה שלכם והניחו בצורה מסודרת בארגז. תודה!
 
-\-	**שמות**: לא לשכוח לרשום שמות על כל דבר – תיק, נעליים, בגדים, בקבוקים וחיתולים. זה מקל עלינו לעזור לילדימות לאתר חפצים שהונחו לא במקום.
+\- **שמות**: לא לשכוח לרשום שמות על כל דבר – תיק, נעליים, בגדים, בקבוקים וחיתולים. זה מקל עלינו לעזור לילדימות לאתר חפצים שהונחו לא במקום.
 
-\-	**יום ראשון**: לא לשכוח סדינים רעננים ובקבוקים מלאים!
+\- **יום ראשון**: לא לשכוח סדינים רעננים ובקבוקים מלאים!
 
 ועכשיו לעיקר!
 
@@ -126,31 +127,31 @@ gabrielle@ganyeledteva.org
 
 > [**ציפורים נודדות / מארש דונדורמה**](https://www.youtube.com/watch?v=bWPxj6cVjAs&list=PLLjInCvHPnCep9z14Icvp2tnqSbjquTH5&index=5)
 >
-> צִפּוֹרִים! צִפּוֹרִים! 
+> צִפּוֹרִים! צִפּוֹרִים!
 >
-> לְאָן אַתֶּן עָפוֹת? לְאָן אַתֶּן עָפוֹת? 
+> לְאָן אַתֶּן עָפוֹת? לְאָן אַתֶּן עָפוֹת?
 >
-> קַר לָנוּ קְצָת בַּנּוֹצוֹת 
+> קַר לָנוּ קְצָת בַּנּוֹצוֹת
 >
-> לַדָּרוֹם אָנוּ עָפוֹת 
+> לַדָּרוֹם אָנוּ עָפוֹת
 >
-> צִפּוֹרִים! צִפּוֹרִים! 
+> צִפּוֹרִים! צִפּוֹרִים!
 >
-> מָתַי אַתֶּן חוֹזְרוֹת? מָתַי אַתֶּן חוֹזְרוֹת? 
+> מָתַי אַתֶּן חוֹזְרוֹת? מָתַי אַתֶּן חוֹזְרוֹת?
 >
-> כְּשֶׁהַחֹרֶף יַעֲבֹר 
+> כְּשֶׁהַחֹרֶף יַעֲבֹר
 >
-> לַצָּפוֹן שׁוּב נַחֲזֹר 
+> לַצָּפוֹן שׁוּב נַחֲזֹר
 
 בכל יום אנו מנסות למצוא רגע כזה שכולם יושבים, לכולם נוח ונעים, כולם שבעים ורוויים והגוף פנוי… זו הזדמנות לעצום את העיניים ולהכנס לעולם של דמיון. כשהנעימה מתחילה להתנגן הילדימות מתעמקים בה, קשובים ושקטים.
 
 פתחנו בסיפור קצר על ציפור שקר לה. שמענו על ההחלטה לצאת לדרך לחפש מקום חמים יותר, והרגשנו יחדיו את רגע הנפת הכנפיים וההמראה אל על לשמיים. יחד עם הנעימה ישבנו בגב זקוף, הנפנו כנפיים והנענו אותן לפי הקצב… לאט לאט המילים פסקו ורק המנגינה ותנועות הידיים נשארו.
 
-ביום אחר עשינו גם תירגול בעמידה: הפעם התעמקנו בכלי הנגינה המרשים פסנתר, האצבעות הזריזות המקישות על הקלידים משפיעות על קצב המנגינה וכמובן על קצב הנפת הכנפיים. הסתובבנו בחלל, נענו בין טיפות המים, לעיתים בזריזות לעיתים צעד צעד בהססנות. 
+ביום אחר עשינו גם תירגול בעמידה: הפעם התעמקנו בכלי הנגינה המרשים פסנתר, האצבעות הזריזות המקישות על הקלידים משפיעות על קצב המנגינה וכמובן על קצב הנפת הכנפיים. הסתובבנו בחלל, נענו בין טיפות המים, לעיתים בזריזות לעיתים צעד צעד בהססנות.
 
 # חג הסיגד
 
-ביום שלישי, הנדידה שלנו הביאה אותנו לאתיופיה. עצרנו לראות חגיגה מרשימה – חגיגת הסיגד של יהודי אתיופיה. תמר שהתארחה אצלנו הזמינה אותנו להתארח בטקס ה"בונה" המסורתי – טקס קפה. תמר הכינה יחד עם הילדימות קפה מההתחלה ועד הסוף - ראינו את הכלים המיוחדים, מיששנו את פולי הקפה, ואחר כך קלינו, טחנו ובישלנו אותם עד שקיבלנו קפה חום ומריר. כל הכיתה התמלאה בניחוחות נעימים, ולבסוף הילדימות קיבלו גם טעימה קטנה של קפה (אל תדאגו - מדולל מאוד!). במהלך הטקס, תמר גם סיפרה לנו על המשמעות של החג, שבו כולם מטפסים יחד על הר גבוה, ושמים דגש על ערך החברות. זהו יום של בקשת סליחה האחד מהשני. 
+ביום שלישי, הנדידה שלנו הביאה אותנו לאתיופיה. עצרנו לראות חגיגה מרשימה – חגיגת הסיגד של יהודי אתיופיה. תמר שהתארחה אצלנו הזמינה אותנו להתארח בטקס ה"בונה" המסורתי – טקס קפה. תמר הכינה יחד עם הילדימות קפה מההתחלה ועד הסוף - ראינו את הכלים המיוחדים, מיששנו את פולי הקפה, ואחר כך קלינו, טחנו ובישלנו אותם עד שקיבלנו קפה חום ומריר. כל הכיתה התמלאה בניחוחות נעימים, ולבסוף הילדימות קיבלו גם טעימה קטנה של קפה (אל תדאגו - מדולל מאוד!). במהלך הטקס, תמר גם סיפרה לנו על המשמעות של החג, שבו כולם מטפסים יחד על הר גבוה, ושמים דגש על ערך החברות. זהו יום של בקשת סליחה האחד מהשני.
 
 העליה להר גבוה יחד מגבשת מעצימה ונותנת זווית חדשה לחיים שלנו - מאמץ פיזי משותף כדי להגיע לפסגה.
 
@@ -158,7 +159,7 @@ gabrielle@ganyeledteva.org
 
 על מה אפשר לבקש סליחה, מה זה אומר בכלל, ואיך נראית הסליחה? בפועל אנחנו מדגישות את המאמץ להיות קשובים לחברים, לעזור ולתמוך באחרים, במיוחד אם מישהו מתקשה. כשאנו מבקשים סליחה אנו יודעים שהכוונה היא לא המילה אלה שינוי דפוס החשיבה וההתנהגות שלנו. את משמעות הסליחה נדגים באמצעות הסליחה שאנחנו המבוגרים מבקשים.
 
-המטרה היא לחזק את המצפן הפנימי ביותר של הילדימות. כדי שילמדו לבחור לבד ונכון להם ולחבריהם. שידעו להרגיש מתי קורה משהו לא נעים ויבחרו לעצור אותו ולא משנה מי מבצע. 
+המטרה היא לחזק את המצפן הפנימי ביותר של הילדימות. כדי שילמדו לבחור לבד ונכון להם ולחבריהם. שידעו להרגיש מתי קורה משהו לא נעים ויבחרו לעצור אותו ולא משנה מי מבצע.
 
 בגן עלינו וטיפסנו בכל מקום בחצר ובכיתה גילינו שלפעמים כדאי שיהיה חבר מתחתנו שיכוון ,שייוודא שבטוח שם למטה. וחבר בפיסגה שיגיש יד לעזרה ומים לרוויה.
 
@@ -176,10 +177,10 @@ gabrielle@ganyeledteva.org
 
 לבסוף נגלה שאין לנו עוגה! נשיר וונפגין על המחדל: עוגה, עוגה רוצים את העוגה! נספור לאחור מ-10, נתיישב, נכבה את האור ו…. עוגה!
 
-עוגת יום ההולדת מספקת לנו הזדמנות לשיח על אש ובטיחות בגן. נושא הבטיחות מאוד חשוב בגן שלנו ויותר מזה המניעה. לכן אנו נלמד את הילדימות מהו מקור הסכנה, למה הוא מסוכן, מה יכול לקרות וכמובן - איך אפשר להשתמש בזה ועדיין לשמור על עצמנו. כידוע לכל עוגת יומולדת חייב שיהיה לה נר, לפחות אחד. 
+עוגת יום ההולדת מספקת לנו הזדמנות לשיח על אש ובטיחות בגן. נושא הבטיחות מאוד חשוב בגן שלנו ויותר מזה המניעה. לכן אנו נלמד את הילדימות מהו מקור הסכנה, למה הוא מסוכן, מה יכול לקרות וכמובן - איך אפשר להשתמש בזה ועדיין לשמור על עצמנו. כידוע לכל עוגת יומולדת חייב שיהיה לה נר, לפחות אחד.
 
 לפני כל פעילות שכזו אנו נוודא שהילדימות זוכרים את הכללים: רק מחנכת מדליקה גפרורים ונרות בגן. כשהנרות בוערים על העוגה, הידיים של כולנו על הברכיים, וכולנו יושבים. לאחר כיבוי האש המחנכת תוציא את הנר למרות שהוא כבוי. השעווה חמה ועדיין יכולה לגרום לכוויה.
 
 נושא האש ימשיך ללוות אותנו בימי ההולדת, ובקרוב גם יחד עם החג הקרב ובא – חנוכה. אבל לפני שנגיע לאש, בשבוע הקרוב נתחיל לדבר על אור, חושך, וכמובן מה שבאמצע – הצל!
 
-**שיהיה לנו שבוע מואר ונעים,<br>צוות שכבת הבוגרים – שיר, רוני, מיכל, ימית ואורטל**
+**שיהיה לנו שבוע מואר ונעים,צוות שכבת הבוגרים – שיר, רוני, מיכל, ימית ואורטל**
