--- a/content/weekly-update/כך-באים-השותלים.md
+++ b/content/weekly-update/כך-באים-השותלים.md
@@ -2,21 +2,22 @@
 title: כך באים השותלים
 date: '2020-02-15T19:00:13+02:00'
 ---
+
 שבת שלום,
 
 נפתח בכמה הודעות קצרות:
 
-•	להזכירכם: ה-2.3.2020 הוא יום בחירות - זהו יום שבתון והגן לא פועל בו. היערכו בהתאם.
+• להזכירכם: ה-2.3.2020 הוא יום בחירות - זהו יום שבתון והגן לא פועל בו. היערכו בהתאם.
 
-•	אנחנו בשיאו של תהליך גיוס מחנכות - אם אתם מכירים או שומעים על נשים ואנשים רלוונטיים, נשמח אם תפנו אלינו, כיף לעבוד כאן!
+• אנחנו בשיאו של תהליך גיוס מחנכות - אם אתם מכירים או שומעים על נשים ואנשים רלוונטיים, נשמח אם תפנו אלינו, כיף לעבוד כאן!
 
-•	בימים גשומים וקרים אנחנו משאירות את המבואה פנויה, כדי שתוכלו להתארגן בנחת ובנוחיות. נשמח מאוד אם ברגע האיסוף תצאו עם הילדימות מחלל המשחקים ותתארגנו במבואה הפנויה, כדי למנוע עומס וריבוי הורים בכיתה.
+• בימים גשומים וקרים אנחנו משאירות את המבואה פנויה, כדי שתוכלו להתארגן בנחת ובנוחיות. נשמח מאוד אם ברגע האיסוף תצאו עם הילדימות מחלל המשחקים ותתארגנו במבואה הפנויה, כדי למנוע עומס וריבוי הורים בכיתה.
 
-•	החודש לא יתקיים פורום הורים מאחר ומתקיימות שיחות אישיות.
+• החודש לא יתקיים פורום הורים מאחר ומתקיימות שיחות אישיות.
 
-•	הרצאה של אחי בנושא ניהול רגשות וכלכלת בחירות אצל הילדים תתקיים ביום שלישי, ה-3.3.20. ישלח אליכם בנפרד מייל לרישום.
+• הרצאה של אחי בנושא ניהול רגשות וכלכלת בחירות אצל הילדים תתקיים ביום שלישי, ה-3.3.20. ישלח אליכם בנפרד מייל לרישום.
 
-•	השבוע ישלח אליכם שאלון שביעות רצון. אנחנו שולחים אותו אליכם ומצפים לקבל מכם תשובות כנות וספונטניות. השאלון אנונימי אז תרגישו בנוח לכתוב הכל. המטרה שלנו היא ללמוד ולהשתפר, ולהבין מה החוויה ההורית שלכם בגן שלנו. תודה על שיתוף הפעולה.
+• השבוע ישלח אליכם שאלון שביעות רצון. אנחנו שולחים אותו אליכם ומצפים לקבל מכם תשובות כנות וספונטניות. השאלון אנונימי אז תרגישו בנוח לכתוב הכל. המטרה שלנו היא ללמוד ולהשתפר, ולהבין מה החוויה ההורית שלכם בגן שלנו. תודה על שיתוף הפעולה.
 
 שבת מנוחה
 
@@ -28,15 +29,15 @@ date: '2020-02-15T19:00:13+02:00'
 
 אבל בטרם ניכנס לעולם התוכן שלנו:
 
-•	 מזכירה שלילדי אטרף וכוורת יש מגירות אישיות במבואה. מזמינה אתכם לפתוח אותן ולגלות בהן עולם שלם של סיכות, משחקים מהבית, מוצצים, סדינים וכמובן יצירות :) 
+• מזכירה שלילדי אטרף וכוורת יש מגירות אישיות במבואה. מזמינה אתכם לפתוח אותן ולגלות בהן עולם שלם של סיכות, משחקים מהבית, מוצצים, סדינים וכמובן יצירות :)
 
-•	נוהל ימי ראשון - בקבוקי מים מלאים וסדינים רעננים. שימו לב שבשלב זה של השנה השמות די דוהים מהסדינים מה שמאתגר אותנו לזהות למי שייך הסדין. נשמח אם תעברו שוב עם ארטליין על השמות לפני שמניחים את הסדינים בתיק. ממליצות גם לשאול את הילדימות אם יש איזה ציור שהם רוצים על הסדין – זה מאוד עוזר להם לזהות בעצמם את הסדין שלהם בטקס המזרנים.
+• נוהל ימי ראשון - בקבוקי מים מלאים וסדינים רעננים. שימו לב שבשלב זה של השנה השמות די דוהים מהסדינים מה שמאתגר אותנו לזהות למי שייך הסדין. נשמח אם תעברו שוב עם ארטליין על השמות לפני שמניחים את הסדינים בתיק. ממליצות גם לשאול את הילדימות אם יש איזה ציור שהם רוצים על הסדין – זה מאוד עוזר להם לזהות בעצמם את הסדין שלהם בטקס המזרנים.
 
-•	סבב השיחות האישיות בעיצומו. אבקש להקפיד להגיע בזמן כדי שנספיק לדבר על הכל. אנחנו משתדלות להספיק לדבר עם כמה שיותר מכם, והלו"ז שלנו די צפוף. קחו בחשבון שכל איחור ייגרע מהזמן שלנו יחד, ובמידה והאיחור יעלה על 10 דק׳ ניאלץ לבטל את השיחה. השיחות כולן מתקיימות בכיתה שצמודה למבואה.
+• סבב השיחות האישיות בעיצומו. אבקש להקפיד להגיע בזמן כדי שנספיק לדבר על הכל. אנחנו משתדלות להספיק לדבר עם כמה שיותר מכם, והלו"ז שלנו די צפוף. קחו בחשבון שכל איחור ייגרע מהזמן שלנו יחד, ובמידה והאיחור יעלה על 10 דק׳ ניאלץ לבטל את השיחה. השיחות כולן מתקיימות בכיתה שצמודה למבואה.
 
-•	בשבוע הקרוב נדבר על יום המשפחה, בין היתר באמצעות שיח על בעלי חיים וחיות המחמד שלנו. מי מכם שמגדלים חיות מחמד בבית מוזמנים לשלוח תמונה שלהם לויקה או מיכל עם סיפור קצר על החיה, דברים מיוחדים שהיא יודעת לעשות והקשר של הילד/ה הילדה לחיה – למשל, להוציא לטיול בערב או לדאוג למים ומזון בכלים, או סתם לשחק ולהתכרבל.
+• בשבוע הקרוב נדבר על יום המשפחה, בין היתר באמצעות שיח על בעלי חיים וחיות המחמד שלנו. מי מכם שמגדלים חיות מחמד בבית מוזמנים לשלוח תמונה שלהם לויקה או מיכל עם סיפור קצר על החיה, דברים מיוחדים שהיא יודעת לעשות והקשר של הילד/ה הילדה לחיה – למשל, להוציא לטיול בערב או לדאוג למים ומזון בכלים, או סתם לשחק ולהתכרבל.
 
-•	מחכות לתמונות מהכנת הראש דשא :)
+• מחכות לתמונות מהכנת הראש דשא :)
 
 **ועכשיו לעיקר:**
 
@@ -44,7 +45,7 @@ date: '2020-02-15T19:00:13+02:00'
 
 את השבוע פתחנו במזג אוויר הפכפך, גשמים ורוחות, ובהמשכו נהנינו משמש מלטפת ומפנקת. השינויים סיפקו לנו הזדמנויות למידה נהדרות: מה אנחנו עושים כשקר לנו? איך שומרים על חום הגוף? מה קורה לחצר שלנו כשהגשם יורד? האם נעים לנו להיות רטובים, ואיך נוכל להתייבש?
 
-ברגע שהגשם פסק יצאנו לחצר לחפש את תוצריו. ראינו שלוליות מים על הדק ובארגז החול, האדמה באדניות רטובה ובוצית מכל המשקעים שספגה, והחצר שלנו ריקה כמעט לחלוטין ממשחקים אשר מצאו להם מקומות מסתור שונים בפני הגשם. 
+ברגע שהגשם פסק יצאנו לחצר לחפש את תוצריו. ראינו שלוליות מים על הדק ובארגז החול, האדמה באדניות רטובה ובוצית מכל המשקעים שספגה, והחצר שלנו ריקה כמעט לחלוטין ממשחקים אשר מצאו להם מקומות מסתור שונים בפני הגשם.
 
 התבוננו בחצר שלנו ולא ממש ידענו מה לעשות. גילינו שכשאין הרבה משחקים, אנחנו יכולים לשחק זה עם זה! למשל, החברימות גילו שכיף לשחק יחדיו בבריכת הכדורים הריקה - גלשו, נכנסו פנימה וצחקו… המרחב הפנוי איפשר לנו משחק חופשי הרבה יותר. למשל, כשהחצר פנויה ואין בה מכשולים או ילדים שיושבים על הדשא הרטוב, כיף מאוד לשחק תופסת! כמה כיף ומשחרר זה פשוט לרוץ, וזה גם מאוד מחמם!
 
@@ -52,7 +53,7 @@ date: '2020-02-15T19:00:13+02:00'
 
 במהלך השבוע הסתובבנו לנו בחצר והתבוננו בצמחייה של הגן, מצאנו פרחי נוי, עצים, שיחים ותבלינים. ניצלנו את שבוע ט"ו בשבט שלנו גם לחיזוק המשולש המשמעותי ביותר בחיי הילדימות: הוא משולש בית-גן-ילד. ביקשנו מכם להתחיל להתבונן על הטבע בסביבתכם או בדרככם לגן, ולאסוף עלים, זרדים ופרחים. את כל מה שהילדימות הביאו עימם שמרנו, והגשנו להם ליצירת תמונת טבע משל עצמם.
 
-על הדפים הראינו להם כיצד אנחנו מורחות דבק פלסטי, והילדימות בחרו מתוך שלל אוצרות הטבע שאספתם והניחו על הדף שלהם. ראינו כיצד יש דברים שנדבקים בקלות, ואחרים שצריך יותר ללחוץ עליהם. הילדימות נהנו להרגיש את הדביקות, ולחשוב איך לסדר את העלים בדיוק בצורה הנכונה. חלק מהילדימות הרימו את העלים גם לאחר ההדבקה והרגישו איך הם גם הפכו דביקים מהדבק. גילינו שהדבק הוא חומר מסקרן במיוחד. 
+על הדפים הראינו להם כיצד אנחנו מורחות דבק פלסטי, והילדימות בחרו מתוך שלל אוצרות הטבע שאספתם והניחו על הדף שלהם. ראינו כיצד יש דברים שנדבקים בקלות, ואחרים שצריך יותר ללחוץ עליהם. הילדימות נהנו להרגיש את הדביקות, ולחשוב איך לסדר את העלים בדיוק בצורה הנכונה. חלק מהילדימות הרימו את העלים גם לאחר ההדבקה והרגישו איך הם גם הפכו דביקים מהדבק. גילינו שהדבק הוא חומר מסקרן במיוחד.
 
 **חומר חדש נוסף שגילינו השבוע הוא החימר.**
 
@@ -66,9 +67,9 @@ date: '2020-02-15T19:00:13+02:00'
 
 את הלמידה שלנו אודות הצמחים והעצים סיימנו השבוע בפעילות השתילה, שהובילה אותנו לשיח מעניין על כלי עבודה בהם אנחנו משתמשים על מנת לחפור באדמה ובארגז החול.
 
-גילינו שעם את החפירה אנחנו חופרים בורות באדמה, עם המעדר עודרים את האדמה ומזיזים כמויות קטנות של אדמה, שותלים את הזרעים או השתילים, ועם הידיים אפשר לכסות ולהדק את השתילים באדמה. אחרי השתילה, הבטנו סביב וראינו שכל הדשא שלנו התמלא באדמה, הוצאנו את מטאטא הרחוב ובעזרתו אספנו את האדמה לתוך ערמה גדולה שאותה החזרנו לאדניות. 
+גילינו שעם את החפירה אנחנו חופרים בורות באדמה, עם המעדר עודרים את האדמה ומזיזים כמויות קטנות של אדמה, שותלים את הזרעים או השתילים, ועם הידיים אפשר לכסות ולהדק את השתילים באדמה. אחרי השתילה, הבטנו סביב וראינו שכל הדשא שלנו התמלא באדמה, הוצאנו את מטאטא הרחוב ובעזרתו אספנו את האדמה לתוך ערמה גדולה שאותה החזרנו לאדניות.
 
-# הפינה של אטרף <br>
+# הפינה של אטרף
 
 בעזרת דיקלום חדש שהכרנו, התחלנו להעמיק בחלקי העץ:
 
@@ -88,15 +89,15 @@ date: '2020-02-15T19:00:13+02:00'
 
 **יבש מול רטוב **
 
-במהלך המשחק החופשי בחצר יצרנו לנו מעמד לתליית בדים יבשים ורטובים. מעבר לאחיזת הפינצטה ושימוש בחגורת הכתפיים שאותם תירגלנו, הפעילות איפשרה לנו לדבר על יבש ורטוב. תלינו בד יבש ובד רטוב יחד על המתלה. עניין אותנו נורא האם הבד הרטוב יהפוך גם ליבש. מה יעזור לו להתייבש? השמש והרוח. את מתלה הייבוש העמדנו באיזור שימשי בחצר ולמחרת שוב באנו לבדוק מה קרה לבד הרטוב. גילינו שהבד התייבש לחלוטין! 
+במהלך המשחק החופשי בחצר יצרנו לנו מעמד לתליית בדים יבשים ורטובים. מעבר לאחיזת הפינצטה ושימוש בחגורת הכתפיים שאותם תירגלנו, הפעילות איפשרה לנו לדבר על יבש ורטוב. תלינו בד יבש ובד רטוב יחד על המתלה. עניין אותנו נורא האם הבד הרטוב יהפוך גם ליבש. מה יעזור לו להתייבש? השמש והרוח. את מתלה הייבוש העמדנו באיזור שימשי בחצר ולמחרת שוב באנו לבדוק מה קרה לבד הרטוב. גילינו שהבד התייבש לחלוטין!
 
 **מנוחת הצהריים**
 
-רגע לפני שאנו צוללים לתוך שנת צהריים מתקתקה, אנו מקשיבים לסיפור אשר מתקשר לעיתים לנושא השבועי שלנו.  השבוע שמענו את ״העץ הנדיב״ מאת של סילברסטיין, דרך הסיפור גילינו שאפשר לעשות לא מעט דברים עם העץ כמו לשחק מחבואים, לתפס, ליצור כתרים מעניינים ולהישען עליו למנוחה טובה. 
+רגע לפני שאנו צוללים לתוך שנת צהריים מתקתקה, אנו מקשיבים לסיפור אשר מתקשר לעיתים לנושא השבועי שלנו. השבוע שמענו את ״העץ הנדיב״ מאת של סילברסטיין, דרך הסיפור גילינו שאפשר לעשות לא מעט דברים עם העץ כמו לשחק מחבואים, לתפס, ליצור כתרים מעניינים ולהישען עליו למנוחה טובה.
 
-עטפנו עצמנו טוב טוב בשמיכות הנעימות והמחממות שלנו והאזרנו לשיר [ברוש ](https://www.youtube.com/watch?v=hYzVAxTT9Pw)/ עלמה זוהר. 
+עטפנו עצמנו טוב טוב בשמיכות הנעימות והמחממות שלנו והאזרנו לשיר [ברוש ](https://www.youtube.com/watch?v=hYzVAxTT9Pw)/ עלמה זוהר.
 
-# הפינה של כוורת <br>
+# הפינה של כוורת
 
 אחרי שהתנסינו בנגינה בחליל צד וגילינו שזה ממש קשה, ניסינו גם כלי נשיפה אחר. השבוע ירדן הביא לנו חלילית, וגילינו שזה כבר הרבה יותר קל. התאמנו בנשיפה חזקה שמוציאה צליל גבוה, ונשיפה עדינה שמוציאה צליל נמוך יותר. למדנו שנשיפה זה כשאנחנו מוציאים אוויר, ושאיפה זה כשאנחנו מכניסים אוויר פנימה לריאות.
 
@@ -114,44 +115,44 @@ date: '2020-02-15T19:00:13+02:00'
 
 **שיהיה שבוע נפלא מלא בצמיחה**
 
-**ויקה, מיכל, טניה, ימית ואלינור   **
+**ויקה, מיכל, טניה, ימית ואלינור **
 
 ## שכבת הבוגרים
 
-בשבועות האחרונים עסקנו הרבה באדמה והעולם המופלא שנמצא מתחת לרגלינו. השיח על הנסתר הביא איתו הרבה למידה על הגלוי ובעקבותיו הכרנו את חלקי העץ, השורשים, הגזע, הצמרת, הענפים. הבנו כיצד העץ מושפע מעונות השנה, והלמידה הביאה אותנו עד לחגיגת ט”ו בשבט! 
+בשבועות האחרונים עסקנו הרבה באדמה והעולם המופלא שנמצא מתחת לרגלינו. השיח על הנסתר הביא איתו הרבה למידה על הגלוי ובעקבותיו הכרנו את חלקי העץ, השורשים, הגזע, הצמרת, הענפים. הבנו כיצד העץ מושפע מעונות השנה, והלמידה הביאה אותנו עד לחגיגת ט”ו בשבט!
 
 **אך לפני שניכנס לעובי הקורה, כמה הודעות: **
 
-•	**ריקון מגירות: **לחלקכם הצטברו יצירות ושאר ירקות במגירות. אנחנו מכוונים לשם את הילדימות במהלך היום כדי להניח חפצים אישיים, וכשהמגירה מפוצצת זה מקשה עליהם. אנא רוקנו מגירות
+• **ריקון מגירות: **לחלקכם הצטברו יצירות ושאר ירקות במגירות. אנחנו מכוונים לשם את הילדימות במהלך היום כדי להניח חפצים אישיים, וכשהמגירה מפוצצת זה מקשה עליהם. אנא רוקנו מגירות
 
-•	**הגעה עם משחקים לגן:** חלק מהחברים בוחרים להגיע בבוקר עם משחק/ספר מהבית ולנו כמו שאתם יודעים אין שום בעיה עם זה, להיפך. אם בחרנו להביא משהו מהבית חשוב לדעת מה האפשרויות שלנו בעת הגעה לגן:
+• **הגעה עם משחקים לגן:** חלק מהחברים בוחרים להגיע בבוקר עם משחק/ספר מהבית ולנו כמו שאתם יודעים אין שום בעיה עם זה, להיפך. אם בחרנו להביא משהו מהבית חשוב לדעת מה האפשרויות שלנו בעת הגעה לגן:
 
-1. נכנסים עם המשחק לגן ומיד שמים בתיק. 
+1. נכנסים עם המשחק לגן ומיד שמים בתיק.
 2. משאירים את המשחק אתנו. אם בחרנו באפשרות הזו, יש לנו אחריות לחלוק אותו עם החברים. למה? יש כאן הזדמנות מצוינת ללמידה. אנחנו רוצות שהמשחק יביא דווקא לקירוב ואפילו חיבורים חדשים בין החברים ולא יבודד כל אחד בעולמו (היי גם לי יש משחק כזה בבית! יש לנו מכנה משותף נוסף!). כל עוד בחרנו להשאיר את המשחק מחוץ לתיק/מגירה, אנחנו מתייחסים אליו כמשחק בגן לכל דבר. בשעה 9:30 מחזירים הכל לתיק, אנחנו לא נשארים כל היום עם המשחק שהבאנו. נשמח אם גם אתם תזכירו לחברים שהאחריות לגבי המשחק שהביאו היא שלהם - זו למידה מצוינת בפני עצמה.
 
-•	**ארוחת בוקר**: שעת ארוחת הבוקר שלנו השתנתה מעט, ואנחנו אוכלים 15 דקות מאוחר יותר מבדרך כלל. זה נשמע שינוי מזערי אך כיוון שמימד הזמן עדיין לא מוחשי עבור הילדימות, יש לכך השפעה. אנחנו מנשנשים פרי בחצר לפני ארוחת הבוקר אך ממליצות בכל מקרה לתת לילדימות משהו קטן לאכול לפני היציאה לגן.
+• **ארוחת בוקר**: שעת ארוחת הבוקר שלנו השתנתה מעט, ואנחנו אוכלים 15 דקות מאוחר יותר מבדרך כלל. זה נשמע שינוי מזערי אך כיוון שמימד הזמן עדיין לא מוחשי עבור הילדימות, יש לכך השפעה. אנחנו מנשנשים פרי בחצר לפני ארוחת הבוקר אך ממליצות בכל מקרה לתת לילדימות משהו קטן לאכול לפני היציאה לגן.
 
-•	**בשבוע הבא**: נלמד על מגוון רחב של משפחות ודמויות הנכנסות אלינו פנימה והופכות לחלק מהמשפחה, כמו בעלי החיים. נתמקד במערכות היחסים של חיה קסומה – הפינגווין! ננסה להקביל את חיי המשפחה של הפינגווינים לחיים שלנו. 
+• **בשבוע הבא**: נלמד על מגוון רחב של משפחות ודמויות הנכנסות אלינו פנימה והופכות לחלק מהמשפחה, כמו בעלי החיים. נתמקד במערכות היחסים של חיה קסומה – הפינגווין! ננסה להקביל את חיי המשפחה של הפינגווינים לחיים שלנו.
 
 **ועכשיו, הצצה לעולם התוכן שלנו בשבועיים האחרונים: **
 
 **עץ חדש נולד**
 
-בזכות אוצרות מהטבע שהחברימות אספו והביאו איתם, יכולנו להחליף חוויות ולספר סיפורים, ואף הכנו שרביט קסמים מיוחד. לקחנו ענף והדבקנו עליו עלים, זרדים פרחים, ולא תאמינו אילו קסמים מיוחדים עשינו איתו: חלק מהחברים הפכו לגזעים, ענפים, עלים, פרחים. חלקינו הפכנו לנמלים שזוחלות סביב העץ ומחפשות משהו טעים לנשנש.  
+בזכות אוצרות מהטבע שהחברימות אספו והביאו איתם, יכולנו להחליף חוויות ולספר סיפורים, ואף הכנו שרביט קסמים מיוחד. לקחנו ענף והדבקנו עליו עלים, זרדים פרחים, ולא תאמינו אילו קסמים מיוחדים עשינו איתו: חלק מהחברים הפכו לגזעים, ענפים, עלים, פרחים. חלקינו הפכנו לנמלים שזוחלות סביב העץ ומחפשות משהו טעים לנשנש.
 
-דרך החוויה האישית שלנו בעולמו של העץ יכולנו להרחיב את השיח על תפקיד העץ בחיינו. אנחנו יכולים לנוח בצילו של העץ, לנשנש מהפירות העסיסיים ולנשום אוויר צח. שאלנו למה כל כך חשוב לנו לשמור על העצים ומה יקרה לעצים אם תפרוץ שריפה? החברים מיד הזכירו כיצד אנחנו מכבים את השריפה בשיר "[אלף כבאים](<https://www.youtube.com/watch?v=2dgOhxgFios >)". 
+דרך החוויה האישית שלנו בעולמו של העץ יכולנו להרחיב את השיח על תפקיד העץ בחיינו. אנחנו יכולים לנוח בצילו של העץ, לנשנש מהפירות העסיסיים ולנשום אוויר צח. שאלנו למה כל כך חשוב לנו לשמור על העצים ומה יקרה לעצים אם תפרוץ שריפה? החברים מיד הזכירו כיצד אנחנו מכבים את השריפה בשיר "[אלף כבאים](<https://www.youtube.com/watch?v=2dgOhxgFios >)".
 
 הבחנו בין סוגים שונים של פירות: פירות עסיסיים הטובים למאכל ופירות סרק, איתם אפשר לשחק משחקים ואפילו להפוך אותם לכלי נגינה, אך לא לאוכלם. בנוסף, הכרנו כמה פירות יבשים, שפעם היו גם הם פירות עסיסיים. במה הם שונים? הם קטנים יותר כי איבדו נוזלים, וגם ויטמינים.. אבל הם עדיין טעימים וכיפיים לנשנוש!
 
 הכרנו את השיר של דתיה בן דור, "[איך צומח](<  https://www.youtube.com/watch?v=Y6zLCtrRVUY >)?" ודיברנו על האופן שבו אנחנו צומחים לעומת צמחים שונים בטבע.
 
-לקראת ט"ו בשבט התחלנו ללמוד איך נוטעים ושותלים: חילקנו לחברים שתילים דמיוניים שונים כמו בזיליקום, נענע, אמנון ותמר ולבנדר. היו גם בקשות מיוחדות כמו "שתיל של סבתא לאה", "שתיל מסטיקים", "שתיל פתיתים"... אילנות מעניינים יצמחו לנו בשנה הקרובה. 
+לקראת ט"ו בשבט התחלנו ללמוד איך נוטעים ושותלים: חילקנו לחברים שתילים דמיוניים שונים כמו בזיליקום, נענע, אמנון ותמר ולבנדר. היו גם בקשות מיוחדות כמו "שתיל של סבתא לאה", "שתיל מסטיקים", "שתיל פתיתים"... אילנות מעניינים יצמחו לנו בשנה הקרובה.
 
-באחד המפגשים החלטנו שאנחנו עצמנו נהפוך לשתילים, אך מי ישתול אותנו? היו חברים שהתנדבו להחזיק במעדר הכבד ולחפור עבורנו גומות קטנות באדמה, אנחנו התחפרנו ונהנינו משמש חמימה, מים ומלא חיבוקים שקיבלנו מהשותלים שלנו. 
+באחד המפגשים החלטנו שאנחנו עצמנו נהפוך לשתילים, אך מי ישתול אותנו? היו חברים שהתנדבו להחזיק במעדר הכבד ולחפור עבורנו גומות קטנות באדמה, אנחנו התחפרנו ונהנינו משמש חמימה, מים ומלא חיבוקים שקיבלנו מהשותלים שלנו.
 
 **חגיגת ט"ו בשבט בגן **
 
-את השבוע סיכמנו בחגיגות ט"ו בשבט בגן, ולשמחתנו הגיעו שתי אורחות להן ציפינו מאוד. האחת היא השמש, שבלעדיה החגיגה לא הייתה כל כך נעימה וכיפית. והשנייה היא צופית, שהגיעה במיוחד כדי לשתול עם החברים ולרענן את חצר הגן שלנו. למדנו כיצד כדאי לטפל באדניות, בהן כבר הייתה מעט אדמה יבשה. בתוך האדמה הישנה מצאנו כל מיני אוצרות כמו אבנים וחלקי פלסטיק ישנים, חלק יכולים להשתלב עם השתילים וחלקם פחות, אז מיינו כמו שאנחנו יודעים ואוהבים. החברים הציעו להוסיף קצת חול לאדמה ובעזרת מברשות שמצאו בארגז חול דאגו לנקות את האדניות ולהכין אותן לקראת הגעתה של האדמה החדשה. יחד עם צופית מילאנו, ערבבנו וחפרנו גומות, הכרנו שתילים שונים של פרחים וצמחי תבלין ותוך כדי נשנשנו לנו קצת כוסברה ופטרוזיליה. חקרנו את השורשים הלבנים שעוטפים את השתילים וזו הייתה התבוננות מרתקת. 
+את השבוע סיכמנו בחגיגות ט"ו בשבט בגן, ולשמחתנו הגיעו שתי אורחות להן ציפינו מאוד. האחת היא השמש, שבלעדיה החגיגה לא הייתה כל כך נעימה וכיפית. והשנייה היא צופית, שהגיעה במיוחד כדי לשתול עם החברים ולרענן את חצר הגן שלנו. למדנו כיצד כדאי לטפל באדניות, בהן כבר הייתה מעט אדמה יבשה. בתוך האדמה הישנה מצאנו כל מיני אוצרות כמו אבנים וחלקי פלסטיק ישנים, חלק יכולים להשתלב עם השתילים וחלקם פחות, אז מיינו כמו שאנחנו יודעים ואוהבים. החברים הציעו להוסיף קצת חול לאדמה ובעזרת מברשות שמצאו בארגז חול דאגו לנקות את האדניות ולהכין אותן לקראת הגעתה של האדמה החדשה. יחד עם צופית מילאנו, ערבבנו וחפרנו גומות, הכרנו שתילים שונים של פרחים וצמחי תבלין ותוך כדי נשנשנו לנו קצת כוסברה ופטרוזיליה. חקרנו את השורשים הלבנים שעוטפים את השתילים וזו הייתה התבוננות מרתקת.
 
 > " קצת חופרים במעדר, לא לאט ולא מהר
 >
@@ -163,33 +164,33 @@ date: '2020-02-15T19:00:13+02:00'
 >
 > נשקה אותו מיד שיצמח ויגדל"
 
-השיר האהוב "[עץ חדש נולד"](https://www.youtube.com/watch?v=fxsINVc-Doc) של קרוסלה עזר לנו מאוד בסדר הפעולות בעת השתילה, החברים היו אלופים והצליחו לחבר בין המילים של השיר לבין פעולת השתילה עצמה, זה היה מדהים לראות. 
+השיר האהוב "[עץ חדש נולד"](https://www.youtube.com/watch?v=fxsINVc-Doc) של קרוסלה עזר לנו מאוד בסדר הפעולות בעת השתילה, החברים היו אלופים והצליחו לחבר בין המילים של השיר לבין פעולת השתילה עצמה, זה היה מדהים לראות.
 
-בכיתה הכרנו שתילה מסוג אחר, שתילת זרעי דשא. זוכרים שהנבטנו שעועית מש בצמר גפן? אז השבוע הוספנו עוד צורת חיים ייחודית, על מצע רך ואוורירי יותר מאדמה, הנסורת. סיפרנו לחברים שזרעי הדשא יכולים לצמוח גם בנסורת, אם היא תהיה מספיק דחוסה ותקבל מים, שמש והרבה אהבה. בעזרת כפות מילאנו גרביונים בזרעי דשא, הוספנו נסורת, קשרנו והדבקנו קישוטי עיניים, אף, פה...והנה לנו מר דשא. לא לשכוח להשקות עם שפריצר פעם ביומיים ולזכור שהדשא גדל מהצד השני של הקשר. (אפילו שרוב החברים החליטו שהקשר הוא הצוואר ולכן הפרצוף ממוקם הפוך, אנחנו לגמרי זרמנו איתם). 
+בכיתה הכרנו שתילה מסוג אחר, שתילת זרעי דשא. זוכרים שהנבטנו שעועית מש בצמר גפן? אז השבוע הוספנו עוד צורת חיים ייחודית, על מצע רך ואוורירי יותר מאדמה, הנסורת. סיפרנו לחברים שזרעי הדשא יכולים לצמוח גם בנסורת, אם היא תהיה מספיק דחוסה ותקבל מים, שמש והרבה אהבה. בעזרת כפות מילאנו גרביונים בזרעי דשא, הוספנו נסורת, קשרנו והדבקנו קישוטי עיניים, אף, פה...והנה לנו מר דשא. לא לשכוח להשקות עם שפריצר פעם ביומיים ולזכור שהדשא גדל מהצד השני של הקשר. (אפילו שרוב החברים החליטו שהקשר הוא הצוואר ולכן הפרצוף ממוקם הפוך, אנחנו לגמרי זרמנו איתם).
 
-בקיצור, הייתה לנו חוויה שסיכמה את כל הדברים הקטנים והגדולים שעסקנו בהם בחודש האחרון. תודה ענקית לצופית על ההשקעה והאהבה, ולכל האמהות האלופות שהתגייסו למבצע הגרביונים. 
+בקיצור, הייתה לנו חוויה שסיכמה את כל הדברים הקטנים והגדולים שעסקנו בהם בחודש האחרון. תודה ענקית לצופית על ההשקעה והאהבה, ולכל האמהות האלופות שהתגייסו למבצע הגרביונים.
 
 **מחיי היום יום שלנו בגן: משחק חופשי ותיווך **
 
-המשחק החופשי בגיל שלנו מאופיין יותר מבעבר בניסיונות לייצר קשרים חברתיים ויחסי גומלין.  
+המשחק החופשי בגיל שלנו מאופיין יותר מבעבר בניסיונות לייצר קשרים חברתיים ויחסי גומלין.
 
-מי שמסתובבים בחצר בזמן המשחק החופשי יוכלו להבחין בילדימות שמשחקים אחד עם השני משחקי דמיון משוכללים, משחקי תפקידים והחלפות תפקידים. גם באיזורים מובנים כמו ארגז החול, הג'ימבורי והקוביות אפשר לראות שיש שינוי באופן המשחק, הרבה יותר משותף ודו-כיווני. 
+מי שמסתובבים בחצר בזמן המשחק החופשי יוכלו להבחין בילדימות שמשחקים אחד עם השני משחקי דמיון משוכללים, משחקי תפקידים והחלפות תפקידים. גם באיזורים מובנים כמו ארגז החול, הג'ימבורי והקוביות אפשר לראות שיש שינוי באופן המשחק, הרבה יותר משותף ודו-כיווני.
 
-המשחק המשותף מביא איתו באופן טבעי דינמיקות שונות בין ילדימות, חיבורים, וגם ויכוחים וחילוקי דעות. כל אלו הם חלק חשוב וטוב בלמידה ובהתפתחות. 
+המשחק המשותף מביא איתו באופן טבעי דינמיקות שונות בין ילדימות, חיבורים, וגם ויכוחים וחילוקי דעות. כל אלו הם חלק חשוב וטוב בלמידה ובהתפתחות.
 
 כיום יש הרבה סיטואציות שנפתרות בין החברים באופן עצמאי, בלי התערבות מצד גורם מתווך, בין היתר בזכות העובדה שהחברים מרגישים מספיק בטוחים בעצמם ובסביבה שלהם וכבר למדו לנהל שיח עם החבר שנמצא לידי.
 
-ישנם מצבים בהם הילדימות זקוקים להתערבות של מחנכות, אם זה כי נכנסו לסערה רגשית או אם כי אנחנו עדיין לומדים כיצד להתנהל בסיטואציות חברתיות שונות. ההתערבות אינה לצורך קבלת החלטה חד משמעית מצידנו, נעדיף תמיד לשאול את החברים שאלות מכוונות וננסה להבין דרכם את המתרחש – גם אם אנחנו יודעים בדיוק מה קרה בסיטואציה, חשוב לתת לחברימות לתאר בעצמם מה קרה וכיצד הם מרגישים. כך הם מבהירים גם לעצמם וגם לצד השני את תחושותיהם. לחברימות כבר יש את הכלים לייצר ולחשוב על פתרונות, זאת כמובן אחרי שהצליחו להגיע להבנה כי אכן יש כאן בעיה שצריך לפתור. כך, גם אם יצאתי מתוסכלת כי נורא רציתי את המשחק הזה עכשיו והוא לא יכול להיות אצלי, לפחות אני יודעת שהעברתי את המסר - זו תחושה משחררת בפני עצמה. 
+ישנם מצבים בהם הילדימות זקוקים להתערבות של מחנכות, אם זה כי נכנסו לסערה רגשית או אם כי אנחנו עדיין לומדים כיצד להתנהל בסיטואציות חברתיות שונות. ההתערבות אינה לצורך קבלת החלטה חד משמעית מצידנו, נעדיף תמיד לשאול את החברים שאלות מכוונות וננסה להבין דרכם את המתרחש – גם אם אנחנו יודעים בדיוק מה קרה בסיטואציה, חשוב לתת לחברימות לתאר בעצמם מה קרה וכיצד הם מרגישים. כך הם מבהירים גם לעצמם וגם לצד השני את תחושותיהם. לחברימות כבר יש את הכלים לייצר ולחשוב על פתרונות, זאת כמובן אחרי שהצליחו להגיע להבנה כי אכן יש כאן בעיה שצריך לפתור. כך, גם אם יצאתי מתוסכלת כי נורא רציתי את המשחק הזה עכשיו והוא לא יכול להיות אצלי, לפחות אני יודעת שהעברתי את המסר - זו תחושה משחררת בפני עצמה.
 
-האינטראקציות החברתיות בזמן המשחק החופשי שלנו הן הזדמנויות ללמידה עבור כל החברים, ולכן אנחנו משתדלים לפתור את הבעיה בזמן אמת ובמקום, מבלי לבודד את עצמנו מאזור המשחק ושאר החברים שמשחקים בו. אנחנו שואפים לכך שהילדימות ירגישו מספיק בנוח לנהל שיח מכבד ורציני אודות הצרכים והרצונות שלהם. 
+האינטראקציות החברתיות בזמן המשחק החופשי שלנו הן הזדמנויות ללמידה עבור כל החברים, ולכן אנחנו משתדלים לפתור את הבעיה בזמן אמת ובמקום, מבלי לבודד את עצמנו מאזור המשחק ושאר החברים שמשחקים בו. אנחנו שואפים לכך שהילדימות ירגישו מספיק בנוח לנהל שיח מכבד ורציני אודות הצרכים והרצונות שלהם.
 
 **פיתוח קריאה ביקורתית **
 
-את שבוע העץ שלנו ליווה הספר "העץ הנדיב" מאת של סילברסטיין. בזכות הספר אנחנו יכולים להעלות נושאים מורכבים יותר להבנה כמו שימוש האדם בעץ לצרכיו האישיים, לבנייה, למגורים ולמשחק. אנחנו מעודדים את הילדימות לקרוא קריאה אקטיבית, לעצור ולשאול שאלות: האם זה נעים לעץ, האם באמת העץ מאושר כמו שהוא טוען, והאם בכלל העץ היה צריך להסכים לילד לכרות אותו? קריאה ביקורתית של ספרי ילדים יכולה להתחיל כבר בגיל מאוד צעיר והיא מייצרת בסיס נהדר לחקר ומזכירה לנו לא לקבל את הדברים כמובנים מאליהם. 
+את שבוע העץ שלנו ליווה הספר "העץ הנדיב" מאת של סילברסטיין. בזכות הספר אנחנו יכולים להעלות נושאים מורכבים יותר להבנה כמו שימוש האדם בעץ לצרכיו האישיים, לבנייה, למגורים ולמשחק. אנחנו מעודדים את הילדימות לקרוא קריאה אקטיבית, לעצור ולשאול שאלות: האם זה נעים לעץ, האם באמת העץ מאושר כמו שהוא טוען, והאם בכלל העץ היה צריך להסכים לילד לכרות אותו? קריאה ביקורתית של ספרי ילדים יכולה להתחיל כבר בגיל מאוד צעיר והיא מייצרת בסיס נהדר לחקר ומזכירה לנו לא לקבל את הדברים כמובנים מאליהם.
 
-עוד ספר נהדר שהכרנו השבוע בהקשר לעולמם של העצים הוא "מה צריך בשביל?" מאת ג'יאני רודארי. "בשביל לבנות שולחן צריך... פרח?!" ספר מקסים שמזמין אותנו לעיין בפרטים הקטנים ולחשוב על הקשר המופלא שבין תהליכי הטבע לתהליך של יצירה ובנייה. 
+עוד ספר נהדר שהכרנו השבוע בהקשר לעולמם של העצים הוא "מה צריך בשביל?" מאת ג'יאני רודארי. "בשביל לבנות שולחן צריך... פרח?!" ספר מקסים שמזמין אותנו לעיין בפרטים הקטנים ולחשוב על הקשר המופלא שבין תהליכי הטבע לתהליך של יצירה ובנייה.
 
-קראנו גם את "שישה בשקיק" מאת לוין קיפניס, סיפור ט"ו בשבט מיתולוגי ואהוב, שמעבר ללמידה אודות הפירות היבשים השונים והמשונים, מזמן לנו שיח חשוב ורלוונטי על כניסה והצטרפות למשחק, על קשיים במציאת מקום וצפיפות, נושא חשוב שעולה בגן הרבה ורלוונטי לכל תושב תל אביב והסביבה. בדוכן העץ בחצר החברים חילקו מיוזמתם תפקידים והיו מצחיקים נורא. 
+קראנו גם את "שישה בשקיק" מאת לוין קיפניס, סיפור ט"ו בשבט מיתולוגי ואהוב, שמעבר ללמידה אודות הפירות היבשים השונים והמשונים, מזמן לנו שיח חשוב ורלוונטי על כניסה והצטרפות למשחק, על קשיים במציאת מקום וצפיפות, נושא חשוב שעולה בגן הרבה ורלוונטי לכל תושב תל אביב והסביבה. בדוכן העץ בחצר החברים חילקו מיוזמתם תפקידים והיו מצחיקים נורא.
 
 > "דפיק דפוק דפיק מי שם בשקיק?
 >
@@ -203,7 +204,7 @@ date: '2020-02-15T19:00:13+02:00'
 >
 > דפיק דפוק דפיק מי שם בשקיק?
 >
-> אני שקד שקדוני !אני תמר תמרוני,  ואתה מי ?
+> אני שקד שקדוני !אני תמר תמרוני, ואתה מי ?
 >
 > אני חרוב חרובוני אפשר להכנס?
 >
@@ -215,11 +216,11 @@ date: '2020-02-15T19:00:13+02:00'
 
 **"יש לי יום הולדת..."**
 
-בשבועיים האחרונים חגגנו ימי הולדת לדר ואלה, והשמחה הייתה רבה! 
+בשבועיים האחרונים חגגנו ימי הולדת לדר ואלה, והשמחה הייתה רבה!
 
-בבוקר יום ההולדת אנחנו פותחים דוכן ברכות בחצר, בו החברים ניגשים ורושמים ברכה לחברים על כרטיסיות. מעבר לכך שכיף לנו לחזור הביתה עם מזכרת מהחברים ומלא ברכות ואיחולים, סביב טקס כתיבת הברכות יש המון למידה... על פרטיות מהי? לא כל החברים רוצים שכולם ישמעו את הברכה שלהם. אנחנו נותנים לחברים פרטיות ומכבדים אותם. בימי ההולדת האחרונים יכולנו לראות איך החברים באופן עצמאי מבקשים אחד מהשני "לתת לי פרטיות". אנחנו מזכירים לחברים שזה בסדר אם אין להם רעיון לברכה, לפעמים לוקח לנו זמן לחשוב. אפשר תמיד לחזור מאוחר יותר. 
+בבוקר יום ההולדת אנחנו פותחים דוכן ברכות בחצר, בו החברים ניגשים ורושמים ברכה לחברים על כרטיסיות. מעבר לכך שכיף לנו לחזור הביתה עם מזכרת מהחברים ומלא ברכות ואיחולים, סביב טקס כתיבת הברכות יש המון למידה... על פרטיות מהי? לא כל החברים רוצים שכולם ישמעו את הברכה שלהם. אנחנו נותנים לחברים פרטיות ומכבדים אותם. בימי ההולדת האחרונים יכולנו לראות איך החברים באופן עצמאי מבקשים אחד מהשני "לתת לי פרטיות". אנחנו מזכירים לחברים שזה בסדר אם אין להם רעיון לברכה, לפעמים לוקח לנו זמן לחשוב. אפשר תמיד לחזור מאוחר יותר.
 
-אז בנימה זו נאחל לאלה, דר והמשפחות המון מזל טוב, "שמש וירח", "סוכריות ועוגת גזר", "מלא חגיגות", "עוגה ורודה ותות ורוד", "עוגת תפוזים", "עננים" ועוד המון ברכות וחיבוקים! 
+אז בנימה זו נאחל לאלה, דר והמשפחות המון מזל טוב, "שמש וירח", "סוכריות ועוגת גזר", "מלא חגיגות", "עוגה ורודה ותות ורוד", "עוגת תפוזים", "עננים" ועוד המון ברכות וחיבוקים!
 
 **שבוע שמשי מלא בצמיחה והתחדשות **
 
