--- a/content/weekly-update/מנווה-המדבר-לים-סוף.md
+++ b/content/weekly-update/מנווה-המדבר-לים-סוף.md
@@ -2,6 +2,7 @@
 title: מנווה המדבר לים סוף
 date: '2020-08-01T18:34:39+03:00'
 ---
+
 **שלום לכולם**,
 
 שבוע נוסף עבר עלינו בכיף בגן, ותוך כדי, כבר מורגשת ההתרגשות לקראת מסיבות הסיום שלנו, שיתקיימו השבוע בשתי השכבות. שכבת הבוגרים תצא למסע משימות בין האקלימים השונים בהם ביקרנו עד כה, ביום חמישי, ה-6.8. שכבת הצעירים תתכנס ליום שכולו ים ודגים בגן, ביום שישי ה-7.8.
@@ -14,15 +15,15 @@ date: '2020-08-01T18:34:39+03:00'
 
 **מה צפוי לכם?**
 
-כל משפחה מגיעה לגן בשעה המיועדת לה. בגן תקבלו את הרמז הראשון ומפת התמצאות. משם תנווטו בכוחות עצמכם בין התחנות, בהתאם לרמזים. לכל סוג אקלים שלמדנו עליו יהיו 2 תחנות, ובסך הכל - 6 תחנות. 
+כל משפחה מגיעה לגן בשעה המיועדת לה. בגן תקבלו את הרמז הראשון ומפת התמצאות. משם תנווטו בכוחות עצמכם בין התחנות, בהתאם לרמזים. לכל סוג אקלים שלמדנו עליו יהיו 2 תחנות, ובסך הכל - 6 תחנות.
 
 **מה צריך להביא?**
 
 \- כובע (וכדאי למרוח מראש קרם הגנה, עוד חם ושמש)
 
-\- מים 
+\- מים
 
-\- מצלמה 
+\- מצלמה
 
 \- מצב רוח טוב !
 
@@ -30,7 +31,7 @@ date: '2020-08-01T18:34:39+03:00'
 
 בכל תחנה יש רמז המיועד לפתרון הילדימות, כך שיוכלו הם להנחות אתכם. שאפו לתת לילדים לפתור את החידה לבד, ותנו להם להוביל. עם זאת, כדי שלא יווצר מצב שתיתקעו, כתבנו גם את הכתובת של כל תחנה כך שתוכלו לעזור במקרה הצורך.
 
-בכל תחנה תחכה לכם אחת המחנכות להנחיה והדרכה, ובכל תחנה יהיה דגל, כך שתדעו שאתם במקום הנכון. 
+בכל תחנה תחכה לכם אחת המחנכות להנחיה והדרכה, ובכל תחנה יהיה דגל, כך שתדעו שאתם במקום הנכון.
 
 נסו לא להתמהמה ולא להשהות בתחנות, אנחנו לא רוצים ליצור התגודדות.
 
@@ -48,13 +49,13 @@ date: '2020-08-01T18:34:39+03:00'
 
 **17:15** נועה חכים, אלה לולו, אווה, גור ותמרי, גאיה, מנור
 
-**17:30** עומר אליהו, ליעד, יואב, אלה אביחנן, טוני, נצ'י. 
+**17:30** עומר אליהו, ליעד, יואב, אלה אביחנן, טוני, נצ'י.
 
 **17:45** אדם, עמנואל, ארז, עידו, מנור, רות, יונתן.
 
 **18:00** מיה, אביגיל, גלי, דר, נעה פרידלנד, נבו, תמר, לילי
 
-בהצלחה לכולם! <br>
+בהצלחה לכולם!
 
 **צעירים**:
 
@@ -66,7 +67,7 @@ date: '2020-08-01T18:34:39+03:00'
 
 את הבוקר שלנו נפתח בארוחת בוקר חגיגית עם קריצות לים – בנוסף לארוחת הבוקר הרגילה שלנו, נאכל סושי (טבעוני בלבד)! במידה ויש הורים שמבקשים לא לתת לילדיהם סושי, אנא עדכנו אותנו מראש, שנוכל לדאוג לילדים לחלופה.
 
-אחרי ארוחת הבוקר נתחלק לאחוות וננוע בין שלל תחנות שיוצבו בחלל שלנו. מדובר בתחנות שהילדים אהבו במיוחד במהלך הפרויקט, שישלבו בין כל החושים וכל הנושאים עליהם למדנו. 
+אחרי ארוחת הבוקר נתחלק לאחוות וננוע בין שלל תחנות שיוצבו בחלל שלנו. מדובר בתחנות שהילדים אהבו במיוחד במהלך הפרויקט, שישלבו בין כל החושים וכל הנושאים עליהם למדנו.
 
 נקנח בקבלת שבת צוננת, ונתפזר לבתים כרגיל, עד 11:45!
 
@@ -84,13 +85,13 @@ date: '2020-08-01T18:34:39+03:00'
 
 זה גם אומר שלפעמים היא מדברת בקול רם. למדנו את ההבדל בין צעקה לבין לדבר בקול חזק. בעזרת ידיים על האוזניים, המחשנו לילדימות כמה קשה להתנהל מבלי לשמוע, ואיך גם הם מבלי לשים לב הם הגבירו את הקול. תירגלנו לחישות, דיבור רגיל, צעקה ודיבור בקול רם.
 
-חשבנו, מה נוכל לעשות כדי להקל על גבי? 
+חשבנו, מה נוכל לעשות כדי להקל על גבי?
 
 נסתכל עליה כשאנו מדברים איתה, מכיון שגבי נעזרת בתנועת הפה כדי להבין מה אנו אומרים. לפעמים כשנראה שהיא לא שומעת אותנו, ניגש אליה וניגע בה, וכך נוכל לקבל את תשומת ליבה.
 
 **ובחזרה לים**
 
-ואיפה עוד שומעים מעומעם? נכון! במעמקי הים! כשאנחנו צוללים פנימה בים, כמעט לא שומעים מה קורה מחוץ לים, וגם בפנים, הצלילים מאוד חלשים ומטושטשים. עמוק בים גם קצת חשוך, כי לקרני השמש קשה לחדור שכבה עמוקה כל כך של מים. אחרי שלא ממש הצלחנו בלי שום כלים מיוחדים לראות הרבה מתחת למים, חזרנו לנו לחוף. 
+ואיפה עוד שומעים מעומעם? נכון! במעמקי הים! כשאנחנו צוללים פנימה בים, כמעט לא שומעים מה קורה מחוץ לים, וגם בפנים, הצלילים מאוד חלשים ומטושטשים. עמוק בים גם קצת חשוך, כי לקרני השמש קשה לחדור שכבה עמוקה כל כך של מים. אחרי שלא ממש הצלחנו בלי שום כלים מיוחדים לראות הרבה מתחת למים, חזרנו לנו לחוף.
 
 בעודנו חופרים לנו עם הדלי והכף שלנו בחול, שמנו לב שגל גדול שטף המון "שקיות" שקופות-לבנבנות על החול. התקרבנו וראינו שזהו יצור רכרוכי שלא מסוגל לנוע על החול - המדוזה. צריך להיזהר כשנוגעים בה, כי כדי שלא יפגעו בה היא מפרישה חומר מאוד צורב ולא נעים!
 
@@ -156,7 +157,7 @@ date: '2020-08-01T18:34:39+03:00'
 
 אחרי שבנינו את האוהל ועבדנו עליו כל כך קשה, הרגשנו שאנחנו רעבים וצמאים. מה נאכל? חפרנו גומה והדלקנו בתוכה אש, מעליה בישלנו לנו מטעמים נפלאים. בבוקר כבר הכנו את הבצק - ובצהריים אפינו את הפיתות שלנו ואכלנו אותן בסוף היום!
 
-**בצק פיתות**: 
+**בצק פיתות**:
 
 (כמות ל14-16 פיתות)
 
