--- a/content/weekly-update/נייר-נייר-ועוד-נייר.md
+++ b/content/weekly-update/נייר-נייר-ועוד-נייר.md
@@ -2,12 +2,13 @@
 title: 'נייר, נייר ועוד נייר'
 date: '2020-07-04T16:50:57+03:00'
 ---
+
 שבת שלום,
 
 כמה הודעות כרגיל בתור התחלה:
 
 1. מזכירים למי שעוד לא הביאו מגבונים לחודש יולי: כל ילד/ה מתבקש/ת להביא חבילת מגבונים אחת.
-2. שעות שיחות עם הצוות: אנחו מבקשים להזכיר כי ישנם זמנים מיועדים בהם אנחו זמינות לכם, ואנחנו מבקשים לפנות אלינו רק בזמנים אלו. בין השעות 7:30-19:00. מציינות כי המחנכות עסוקות עם הילדימות בשעות פעילות הגן ולכן במקרים לא דחופים יתכן שנתעכב בתשובתנו, מבטיחות לחזור אליכן ברגע שמתפנות. בנוסף, ימי שישי הינם ימי מנוחה (גם כשאנחנו עובדים) ונבקש שלא לפנות אלינו בימים אלו, אלא אם מדובר בנושא חירום. 
+2. שעות שיחות עם הצוות: אנחו מבקשים להזכיר כי ישנם זמנים מיועדים בהם אנחו זמינות לכם, ואנחנו מבקשים לפנות אלינו רק בזמנים אלו. בין השעות 7:30-19:00. מציינות כי המחנכות עסוקות עם הילדימות בשעות פעילות הגן ולכן במקרים לא דחופים יתכן שנתעכב בתשובתנו, מבטיחות לחזור אליכן ברגע שמתפנות. בנוסף, ימי שישי הינם ימי מנוחה (גם כשאנחנו עובדים) ונבקש שלא לפנות אלינו בימים אלו, אלא אם מדובר בנושא חירום.
 3. שעות הגעה לגן: להזכירכם, יש שעות מוגדרות לקבלת הילדימות בבוקר והן נקבעו בהתאם לרציונאלים חינוכיים. נבקשכם לכבד שעות אלה. במקרים מיוחדים, כמו בדיקה או טיפול, יש להודיע על כך לפחות יום מראש למחכנת האחראית – חולוד / מיכל / אורטל. הגעה לגן במקרה כזה תתאפשר עד שעה 11:00. לאחר שעה זו הגן לא יקבל ילדימות.
 
 מהן שעות הקבלה?
@@ -16,15 +17,15 @@ date: '2020-07-04T16:50:57+03:00'
 
 מדוע? בין השעות 8:30-9:00 סדר היום מתחיל, הקבוצות כבר יושבות לחברותא ולארוחות בוקר. בזמן זמן יש ריבוי משימות שמצריכות את כל הצוות. בזמן זה, קבלת ילד משמעותה עזיבת מחנכת אחת את הקבוצה בזמן מעבר, והדבר מייצר עומס ומשבש את התנהלות הרציפה של הקבוצות.
 
-בשכבת הבוגרים שעות קבלת הילדימות הן בין 7:30-9:00, ולא יאוחר מזה. 
+בשכבת הבוגרים שעות קבלת הילדימות הן בין 7:30-9:00, ולא יאוחר מזה.
 
-מדוע? בשעה זו אנחנו מתחילים את סדר היום ואיחור משעה זו משבש את התנהלות הלו"ז, כמו כן הילד/ה המאחרים מפספסים חלק חשוב מהפעילויות שמוגשות רק בשעות אלו. 
+מדוע? בשעה זו אנחנו מתחילים את סדר היום ואיחור משעה זו משבש את התנהלות הלו"ז, כמו כן הילד/ה המאחרים מפספסים חלק חשוב מהפעילויות שמוגשות רק בשעות אלו.
 
 משפחות אשר מאחרות באופן קבוע ומגיעות ב9:30, לתשומת לבכם.
 
 **שבת של שמש וכיף**
 
-**אחינועם וכל צוות ילדי הטבע הדמוקרטי**<br>
+**אחינועם וכל צוות ילדי הטבע הדמוקרטי**
 
 ## שכבת הצעירים
 
@@ -32,11 +33,11 @@ date: '2020-07-04T16:50:57+03:00'
 
 אבל קודם כל, כמה הודעות:
 
-\-	**נוהל יום ראשון** – לא לשכוח בקבוקים מלאים וסדינים נקיים!
+\- **נוהל יום ראשון** – לא לשכוח בקבוקים מלאים וסדינים נקיים!
 
-\-	**לבוש **– אנא דאגו לארוז בתיק 2 סטים של בגדים להחלפה, לפעמים אנחנו נרטבים ומתלכלכים. בנוסף, אנחנו משתדלות לחנך את הילדימות לעצמאות, וחלק מזה הוא ללמוד להתלבש לבד. חישבו כשאתם בוחרים בגדים בבוקר ואורזים ספיירים בתיק – האם קל ללבוש לבד את הבגד הזה? אולי המכנסיים האלה צמודים מדי? הצווארון בחולצה הדוק מדי? הדבר נכון במיוחד לגבי ילדימות בתהליך גמילה: מאוד מסובך ללמוד לעשות פיפי באסלה תוך כדי שמתעסקים עם שמלה מסורבלת, או להספיק להגיע לשירותים כשעליך להיחלץ מאוברול. ודבר אחרון: כשבנות מגיעות עם שמלה לגן, נבקש ללבוש גם מכנס מתחת. הילדימות משחקים הרבה בחצר ובחול, ורצוי שתהיה עוד שכבה מעל התחתון/חיתול.
+\- **לבוש **– אנא דאגו לארוז בתיק 2 סטים של בגדים להחלפה, לפעמים אנחנו נרטבים ומתלכלכים. בנוסף, אנחנו משתדלות לחנך את הילדימות לעצמאות, וחלק מזה הוא ללמוד להתלבש לבד. חישבו כשאתם בוחרים בגדים בבוקר ואורזים ספיירים בתיק – האם קל ללבוש לבד את הבגד הזה? אולי המכנסיים האלה צמודים מדי? הצווארון בחולצה הדוק מדי? הדבר נכון במיוחד לגבי ילדימות בתהליך גמילה: מאוד מסובך ללמוד לעשות פיפי באסלה תוך כדי שמתעסקים עם שמלה מסורבלת, או להספיק להגיע לשירותים כשעליך להיחלץ מאוברול. ודבר אחרון: כשבנות מגיעות עם שמלה לגן, נבקש ללבוש גם מכנס מתחת. הילדימות משחקים הרבה בחצר ובחול, ורצוי שתהיה עוד שכבה מעל התחתון/חיתול.
 
-\-	**ברוך הבא לגבע!** השבוע הצטרף אלינו לשכבה גבע, שעבר בשבועות האחרונים תהליך הסתגלות בשכבה הבוגרת, אך משתלב הרבה יותר טוב עם שכבת הגיל שלנו. הילדימות מאוד שמחו לקראתו ועזרו לו במהלך הימים הראשונים שלו בשכבה. כשגילו שהוא אוהב מכוניות, הוא מצא עצמו מוקף מכוניות בן רגע! ברוך הבא לשכבת הצעירים גבע!
+\- **ברוך הבא לגבע!** השבוע הצטרף אלינו לשכבה גבע, שעבר בשבועות האחרונים תהליך הסתגלות בשכבה הבוגרת, אך משתלב הרבה יותר טוב עם שכבת הגיל שלנו. הילדימות מאוד שמחו לקראתו ועזרו לו במהלך הימים הראשונים שלו בשכבה. כשגילו שהוא אוהב מכוניות, הוא מצא עצמו מוקף מכוניות בן רגע! ברוך הבא לשכבת הצעירים גבע!
 
 **אז מה היה לנו השבוע?**
 
@@ -48,7 +49,7 @@ date: '2020-07-04T16:50:57+03:00'
 
 **מעטפות**
 
-גילינו גם משהו נוסף שעשוי מנייר השבוע: מעטפות. הילדימות קיבלו כל אחת מעטפה, אותה יכלו לפתוח ולחקור. ומה אפשר לעשות עם מעטפות? להכניס לתוכן דברים! המשכנו את השיח שלנו על קריעת הנייר – זה נכון שספרים לא קורעים, אבל יש דפים שאפשר לקרוע, וכך לעשות בהם שימוש חוזר, אחרי שכבר אין לנו צורך בשימוש המקורי שלהם. הילדימות קיבלו ערימה של גזירות מנייר עיתון ומגזינים: הם סרקו, בדקו ומצאו את אלה שהכי עניינו אותם, 
+גילינו גם משהו נוסף שעשוי מנייר השבוע: מעטפות. הילדימות קיבלו כל אחת מעטפה, אותה יכלו לפתוח ולחקור. ומה אפשר לעשות עם מעטפות? להכניס לתוכן דברים! המשכנו את השיח שלנו על קריעת הנייר – זה נכון שספרים לא קורעים, אבל יש דפים שאפשר לקרוע, וכך לעשות בהם שימוש חוזר, אחרי שכבר אין לנו צורך בשימוש המקורי שלהם. הילדימות קיבלו ערימה של גזירות מנייר עיתון ומגזינים: הם סרקו, בדקו ומצאו את אלה שהכי עניינו אותם,
 
 היכן נשמור את האוצרות האלה? במעטפה שלנו! הילדימות התנסו בהכנסת הגזירות פנימה, והתמודדו עם ניירות גדולים שצריך לקפל. את המעטפות קישטו במדבקות צבעוניות. בשבוע הבא נוכל לעשות שימוש חוזר נוסף בתוכן המעטפות שלנו, כשניצור מהן קולאז'.
 
@@ -58,19 +59,19 @@ date: '2020-07-04T16:50:57+03:00'
 
 לפילים בחרנו את "[הכבש השישה עשר](https://www.youtube.com/watch?v=OiqiiTkiL5k&list=PLl4dAhw20YU249WLwc9LFWAH-up_GL6zd&index=19)" / יהונתן גפן:
 
-> ״כשאני לא מצליח להרדם 
+> ״כשאני לא מצליח להרדם
 >
-> ומחשבות יוצאות ונכנסות 
+> ומחשבות יוצאות ונכנסות
 >
-> אני יושב על המיטה שלי 
+> אני יושב על המיטה שלי
 >
 > וסופר כבשים (ולפעמים גם כבשות).״
 
 הקיפודים קראו את "[לוקה](https://www.youtube.com/watch?v=_lFi8T50ec8)" / רן כהן אהרונוב:
 
-> "מצאתי כלבה בצבע שחור 
+> "מצאתי כלבה בצבע שחור
 >
-> עם עיניים חומות וזנב מאחור 
+> עם עיניים חומות וזנב מאחור
 >
 > אמא אמרה 'איזו חמודה'
 >
@@ -84,7 +85,7 @@ date: '2020-07-04T16:50:57+03:00'
 >
 > אם במקרה אני פוגש מישהו כזה,
 >
->  אני תכף מספר לו על האיש הירוק".
+> אני תכף מספר לו על האיש הירוק".
 
 והקואלות קראו את השיר שהם רגילים לשמוע במפגש:
 
@@ -104,7 +105,7 @@ date: '2020-07-04T16:50:57+03:00'
 
 **הנה באה הרכבת**
 
-השבוע תרגלנו הרבה את בניית רכבת החברימות שלנו: הרכבת עוזרת לנו להגיע ממקום למקום – גם בגן, כשאנחנו רוצים לעבור כקבוצה. אנחנו בוחרים קטר, ואחד אחת מתחברים אליו. איך? אוחזים בעדינות בשולי החולצה של מי שלפנינו. הרכבת צריכה לחכות בסבלנות עד שכולם עולים, ורק כשנשמע הצופר – "טווו, טוווווו", היא יוצאת מהתחנה  - כמובן, לאט ובזהירות ומבלי להפיל אף אחת.
+השבוע תרגלנו הרבה את בניית רכבת החברימות שלנו: הרכבת עוזרת לנו להגיע ממקום למקום – גם בגן, כשאנחנו רוצים לעבור כקבוצה. אנחנו בוחרים קטר, ואחד אחת מתחברים אליו. איך? אוחזים בעדינות בשולי החולצה של מי שלפנינו. הרכבת צריכה לחכות בסבלנות עד שכולם עולים, ורק כשנשמע הצופר – "טווו, טוווווו", היא יוצאת מהתחנה - כמובן, לאט ובזהירות ומבלי להפיל אף אחת.
 
 **יום הולדת הנה בא**
 
@@ -132,9 +133,9 @@ date: '2020-07-04T16:50:57+03:00'
 
 **אך קודם כל פינת ההודעות:**
 
-\-	**מחר יום ראשון** – לא לשכוח בקבוקים מלאים וסדינים נקיים!
+\- **מחר יום ראשון** – לא לשכוח בקבוקים מלאים וסדינים נקיים!
 
-\-	לצורך פעילות שברצוננו לעשות השבוע, נשמח לקבל מכם צנצנות קטנות וריקות שכבר אינכם צריכים!
+\- לצורך פעילות שברצוננו לעשות השבוע, נשמח לקבל מכם צנצנות קטנות וריקות שכבר אינכם צריכים!
 
 ועכשיו לעיקר!
 
@@ -152,7 +153,7 @@ date: '2020-07-04T16:50:57+03:00'
 >
 > לֵךְ יָשָׁר וְאַל תִּשְׁכַּח
 >
-> יוֹסִי, יֶלֶד שֶׁלִּי מֻצְלָח". 
+> יוֹסִי, יֶלֶד שֶׁלִּי מֻצְלָח".
 
 בתחילת השבוע שמענו את השיר בקריאה. הילדימות הזדהו עם יוסי, והציעו רעיונות מעולים לאיך אפשר להסתדר גם בלי חלב, לחם וזיתים. בנוסף הכרנו את השיר "[לוקה](https://www.youtube.com/watch?v=_lFi8T50ec8)" מ"ילדי בית העץ". אחרי השיר כולנו יצאנו למסע חיפושים אחר כלבים ובחרנו להם שמות מגוונים ומעניינים, השם שהם הכי התחברו אליו היה "באבידק" והכלבים שלנו חברו אלינו בכל פעם שקראנו את השיר.
 
