--- a/content/weekly-update/שבוע-אהבה-וגאווה-בגן-שלנו.md
+++ b/content/weekly-update/שבוע-אהבה-וגאווה-בגן-שלנו.md
@@ -3,23 +3,16 @@ title: 'שבוע אהבה וגאווה בגן שלנו '
 date: '2019-06-15T20:20:04+03:00'
 ---
 
-
 **שבת של אהבה וגאווה,
 **
 
-ממש לפני שניה עוד ליטפנו ילדימות שהצטרפו אלינו בתקופת ההסתגלות, למדנו והכרנו זה את זו, ומבלי ששמנו לב השנה כבר עומדת להסתיים. אכן תדהמה. הזמן עובר מהר מדי, והילדימות שלנו גדלים בקצב מסחרר. הזכרו על מה דיברנו בספטמבר ואיפה אנחנו היום 
+ממש לפני שניה עוד ליטפנו ילדימות שהצטרפו אלינו בתקופת ההסתגלות, למדנו והכרנו זה את זו, ומבלי ששמנו לב השנה כבר עומדת להסתיים. אכן תדהמה. הזמן עובר מהר מדי, והילדימות שלנו גדלים בקצב מסחרר. הזכרו על מה דיברנו בספטמבר ואיפה אנחנו היום
 
 זה פשוט מדהים ומרגש.
 
-
-
-ומסיבות הסיום שלנו בפתח! 
-
-
+ומסיבות הסיום שלנו בפתח!
 
 רשמו לפניכם:
-
-
 
 **שולה- יום שישי 19.7.19 שעה 9:30
 **
@@ -27,48 +20,28 @@ date: '2019-06-15T20:20:04+03:00'
 **יעקב- יום שישי 19.7.19 שעה 15:30
 **
 
-**תקווה- יום שני 22.7.19 שעה 17:30 
+**תקווה- יום שני 22.7.19 שעה 17:30
 **
 
-**שמוליק- יום חמישי 25.7.19 שעה 17:30 
+**שמוליק- יום חמישי 25.7.19 שעה 17:30
 **
-
-
-
-
-
-
 
 **כמה נקודות לגבי מסיבות הסיום:
 **
 
-
-
 \# המסיבות שלנו הן לא הופעה או מיצג אלא להפך, הזמנות לסכם נושא של פרויקט שנלמד, כל קבוצה והפרויקט שלה. יש לכם את ההזדמנות להכנס לעולם שלנו, ללמוד, להקשיב, להתבונן בילדימות, ולראות אותם במרחב הכי טבעי שלהם
-
-
 
 \# המסיבה בפורמט של תחנות, בכל תחנה פעילות אחרת ולכל מסיבה הקונספט שלה. אנחנו משקיעים המון מחשבה כך שהילדימות יקחו חלק ממש כמעט בכל!
 
+\# המסיבה היא אך ורק לשני הורים ולילד. בבקשה- בלי אחים! (תינוקות מותר ומובן...אם יש לכם בכל זאת אפשרות העניקו לילד/ שלכם זמן איכות פרטי והגיעו גם בלעדיהם) כבדו את הבקשה הזו. כל שנה אנחנו מוצאים עצמנו ניצבים מול סיטואציה שאחים פשוט מגיעים
 
-
-\# המסיבה היא אך ורק לשני הורים ולילד. בבקשה- בלי אחים! (תינוקות מותר ומובן...אם יש לכם בכל זאת אפשרות העניקו לילד/ שלכם זמן איכות פרטי והגיעו גם בלעדיהם) כבדו את הבקשה הזו. כל שנה אנחנו מוצאים עצמנו ניצבים מול סיטואציה שאחים פשוט מגיעים 
-
-
-
-\# אתם חלק פעיל מהאירוע! בשבועות הקרובים הצוות יפנה אליכם בבקשות להרתמות לאירוע, קחו את ההזדמנות להשפיע ולהעצים את הילד/ה שלכם בתוך הגן. כשילד/ה רואים את ההורים שלהם לוקחים חלק הם זוכים להרגיש משמעותיים ולהיות מועצמים 
+\# אתם חלק פעיל מהאירוע! בשבועות הקרובים הצוות יפנה אליכם בבקשות להרתמות לאירוע, קחו את ההזדמנות להשפיע ולהעצים את הילד/ה שלכם בתוך הגן. כשילד/ה רואים את ההורים שלהם לוקחים חלק הם זוכים להרגיש משמעותיים ולהיות מועצמים
 
 גם במסיבה עצמה- היו פעילים, הקדישו את הזמן ותשומת הלב לילד/ה שלכם.
 
-
-
 \# מתנות אישיות להזכירכם הן מחוץ לתחום. אנחנו מבינים במיוחד בבוגרים שחשוב לכם להודות באופן אישי, אז מכתב הוא המתנה הכי מרגשת עבורנו, ואם ממש מתחשק לכם אפשק לפנק במזכרת צנועה/ משהו מתוק קטן. אבל באמת, צנוע. בבקשה בלי מתנות, ועשו זאת ברגישות
 
-
-
 \# משך כל מסיבה כשעה וחצי. נשמח לעזרה בסיום בקיפול האירוע
-
-
 
 **שבוע נפלא לכולנו,
 **
@@ -76,21 +49,9 @@ date: '2019-06-15T20:20:04+03:00'
 **אחי.  
 **
 
-
-
-
-
-
-
-## צעירים א'- שמוליק 
-
-
-
-
+## צעירים א'- שמוליק
 
 שבוע קצרצר אך מלא בגאווה ואהבה בשמוליק.
-
-
 
 **מפגש
 **
@@ -99,153 +60,122 @@ date: '2019-06-15T20:20:04+03:00'
 
 בעקבות מצעד הגאווה שהתקיים השבוע, התמקדנו במפגשים שלנו בייחודיות שלנו כיחידים, בדרך בה אנו מביעים חיבה או אהבה וכיצד אנחנו שומרים על החברים שלנו ומכבדים אותם.
 
-המחשנו את הסיפור "מיץ פטל" מאת חיה שנהב. או לפחות ניסינו... התאמנו את הסיפור בהתאם לבקשות של החברים (היו לא מעט) ולדגשים עליהם רצינו לדבר. למשל גבע ביקש שלא ניקרא לסיפור מיץ פטל אלא מיץ תפוז ... מה לא נחליף לו את השם? 
+המחשנו את הסיפור "מיץ פטל" מאת חיה שנהב. או לפחות ניסינו... התאמנו את הסיפור בהתאם לבקשות של החברים (היו לא מעט) ולדגשים עליהם רצינו לדבר. למשל גבע ביקש שלא ניקרא לסיפור מיץ פטל אלא מיץ תפוז ... מה לא נחליף לו את השם?
 
-מיץ תפוז גר רחוק רחוק בלב היער. ביער בו הוא גר, ישנם רק חיות גדולות כמו ג'ירפות, אריות, פילים ואפילו קרנפים אבל חיות קטנות כמו מיץ תפוז אין. החיות הגדולות לעגו למיץ תפוז בגלל גודלו, מה שגרם לו להסתגר בתוך ביתו. 
+מיץ תפוז גר רחוק רחוק בלב היער. ביער בו הוא גר, ישנם רק חיות גדולות כמו ג'ירפות, אריות, פילים ואפילו קרנפים אבל חיות קטנות כמו מיץ תפוז אין. החיות הגדולות לעגו למיץ תפוז בגלל גודלו, מה שגרם לו להסתגר בתוך ביתו.
 
 יום אחד יצאו האריה והג'ירפה לטייל ביער ונתקלו בביתו של מיץ תפוז. הסקרנות גברה עליהם והם החליטו להכיר את מיץ תפוז, איזו מין חיה הוא. הם דפקו בדלת וברגע ששמעו שמיץ תפוז מתקרב הם הסתתרו, לפתע ראו כפות ידיים מבצבצות מבעד לדלת ואוזניים ארוכות נעות מצד אל צד... ואז נשמע קול נחמד ועדין "שלום! מי הקיש על דלת ביתי?.." בהתחלה האריה והג'ירפה לא הבינו למי שייכות האוזניים הארוכות וכפות הידיים הפרוותיות. לאחר שהתפתחה ביניהם בה הם גילו שמיץ תפוז הוא בעצם ארנב. דיברנו על התכונות המיוחדות של הארנב, למשל על יכולות הקפיצה שלו ועל הדרך בה הוא אוחז את האוכל שהוא אוכל. כל אחת מהחיות שיתפה וסיפרה על התכונות המיוחדות שלה. ניסינו גם אנחנו לקפץ כמו ארנבים, לשאוג כמו אריות ולהוציא לשון ארוכה כמו הג'ירפה .
 
-הסיפור הוביל אותנו לדבר על עצמינו ועל החברים שסביבנו... שמנו לב שלרוב החברים יש שיער חלק אבל לאלי, גור ונועה יש תלתלים מיוחדים! לחלק מהחברים יש שיער בלונדיני ולחלק חום או שחור אבל לדנדון שלנו יש שיער ג'ינג'י! הוא יחיד ומיוחד! 
+הסיפור הוביל אותנו לדבר על עצמינו ועל החברים שסביבנו... שמנו לב שלרוב החברים יש שיער חלק אבל לאלי, גור ונועה יש תלתלים מיוחדים! לחלק מהחברים יש שיער בלונדיני ולחלק חום או שחור אבל לדנדון שלנו יש שיער ג'ינג'י! הוא יחיד ומיוחד!
 
-ציינו את התכונות המיוחדות של כל אחד ואחת מהחברים בשמוליק כך חיזקנו והעצמנו רגשית את החברים שלנו בעזרת חיזוקים חיוביים.  
+ציינו את התכונות המיוחדות של כל אחד ואחת מהחברים בשמוליק כך חיזקנו והעצמנו רגשית את החברים שלנו בעזרת חיזוקים חיוביים.
 
-גבע אוהב להיות אחראי ולעזור, מאור מצחיקה כשהיא אומרת שטויות, לילי יוצרת משחקים עם חברים, לולו עוטפת את כולם בחיבוקים, אלי דואגת שבתי העץ יהיו תמיד נקיים, עומר אופה עוגות בארגז החול, גור תמיד מצחיק אותנו עם צחוקו המתגלגל, אלה.ל אוהבת לשתף את החברים במשחקים, דניאל אוהב שירים ולעזור לחן להכין טחינה, תהל עוזרת לחברים להתגבר על מכה, נועה תמיד מחייכת וגורמת לחייך, אווה אלופת מסלולי הג'ימבורי וקפצנית נהדרת , לביא אוהב מאוד להיות עצמאי ולנסות לעשות דברים בכוחות עצמו, ואיתן הנסיך הכובש עם מבטים ממיסים! 
+גבע אוהב להיות אחראי ולעזור, מאור מצחיקה כשהיא אומרת שטויות, לילי יוצרת משחקים עם חברים, לולו עוטפת את כולם בחיבוקים, אלי דואגת שבתי העץ יהיו תמיד נקיים, עומר אופה עוגות בארגז החול, גור תמיד מצחיק אותנו עם צחוקו המתגלגל, אלה.ל אוהבת לשתף את החברים במשחקים, דניאל אוהב שירים ולעזור לחן להכין טחינה, תהל עוזרת לחברים להתגבר על מכה, נועה תמיד מחייכת וגורמת לחייך, אווה אלופת מסלולי הג'ימבורי וקפצנית נהדרת , לביא אוהב מאוד להיות עצמאי ולנסות לעשות דברים בכוחות עצמו, ואיתן הנסיך הכובש עם מבטים ממיסים!
 
 את כל השיח הזה בעצם ניהלנו לאחר שהתיישבנו במעגל חברים .
 
+"אני עומדת במעגל ומביטה סביבי, אני מושיטה את ידי , מי יעמוד איתי?"
 
+איך אנחנו יוצרים מעגל? כיצד מצטרפים? איך מתנהלים במעגל? למעשה הלמידה שלנו תחילה מאוד בסיסית, עם חוקים וככלי התנהגות מאוד ברורים.
 
-"אני עומדת במעגל ומביטה סביבי, אני מושיטה את ידי , מי יעמוד איתי?" 
+במעגל שלנו יש מקום לכולם... אנחנו מצטרפים בתורנו ומושיטים יד לחבר/ה. אנחנו שומרים אחד על השנייה זה אומר שלא משתוללים אלא עומד ברוגע ואוחזים ביד של החבר/ה.
 
-איך אנחנו יוצרים מעגל? כיצד מצטרפים? איך מתנהלים במעגל? למעשה הלמידה שלנו תחילה מאוד בסיסית, עם חוקים וככלי התנהגות מאוד ברורים. 
+לאט לאט החברימות מצטרפים והמעגל שלנו הולך וגדל... התקרבנו לאט לאט פנימה והלכנו אחורה והתרחקנו, ראינו איך המעגל הופך מגדול לקטן ומקטן לגדול.
 
-במעגל שלנו יש מקום לכולם... אנחנו מצטרפים בתורנו ומושיטים יד לחבר/ה. אנחנו שומרים אחד על השנייה זה אומר שלא משתוללים אלא עומד ברוגע ואוחזים ביד של החבר/ה. 
+ישבנו יחדיו במעגל, דיברנו על דברים שאנחנו אוהבים, למשל לאכול ארטיק או להיפגש עם חבר או חברה מהגן בגינה.
 
-לאט לאט החברימות מצטרפים והמעגל שלנו הולך וגדל... התקרבנו לאט לאט פנימה והלכנו אחורה והתרחקנו, ראינו איך המעגל הופך מגדול לקטן ומקטן לגדול. 
-<br>
-ישבנו יחדיו במעגל, דיברנו על דברים שאנחנו אוהבים, למשל לאכול ארטיק או להיפגש עם חבר או חברה מהגן בגינה. 
-
-וסיכמנו הכל בשיר " [אני אוהב"/הכבש השישה עשר](<https://www.youtube.com/watch?v=vC1T5vkLs-k \>). 
+וסיכמנו הכל בשיר " [אני אוהב"/הכבש השישה עשר](<https://www.youtube.com/watch?v=vC1T5vkLs-k \>).
 
 כאשר החוקים התבססו הוספנו רובד נוסף למעגל והפעם חיבוקים.
 
 דיברנו על כך שלא כולם אוהבים או רוצים חיבוק והאמת ממש לא חייבים, לכן לפני שאנחנו שאנחנו נותנים חיבוק לחבר/ה קודם נשאל אותם מה הם רוצים לקבל- כיף או חיבוק ונישוק. חלק מהחברימות בחרו כיף וחלק נשיקה, חלק בחרו חיבוק וחלק שילבו בין שני הדברים חיבוק ונשיקה .
 
-<br>
-
-
-<br>
-**פעילות בקבוצות קטנות 
+**פעילות בקבוצות קטנות
 **
 
-השבוע יצרנו עם שירזי דגלים צבעוניים בצבעי דגל הגאווה. בהתחלה צבענו את הדפים בשלל צבעים, למחרת גזרנו מהדפים הצבעוניים רצועות והתאמנו את הרצועות למדבקות הצבעוניות, רצועה סגולה ליד מדבקה סגולה ורצועה צהובה ליד מדבקה צהובה. עבדנו על היכולת שלנו להתאים בין הצבעים למדבקות, מרחנו את הדבק רק על הרצועה ושמרנו על הכיתה שלנו נקייה ומסודרת. 
+השבוע יצרנו עם שירזי דגלים צבעוניים בצבעי דגל הגאווה. בהתחלה צבענו את הדפים בשלל צבעים, למחרת גזרנו מהדפים הצבעוניים רצועות והתאמנו את הרצועות למדבקות הצבעוניות, רצועה סגולה ליד מדבקה סגולה ורצועה צהובה ליד מדבקה צהובה. עבדנו על היכולת שלנו להתאים בין הצבעים למדבקות, מרחנו את הדבק רק על הרצועה ושמרנו על הכיתה שלנו נקייה ומסודרת.
 
-בשעת סיפור המחשתי להם את הסיפור "משהו אחר" מאת קתרין קייב . הפעם השתמשתי בבובות פרווה ובובות יד. החברימות היו פשוט מהופנטים מהסיפור. החיבור לבובות היד ולרגשות עליהם הם דיברנו במהלך הסיפור היה פשוט מדהים! בכינו וצחקנו יחד עם בובות היד שלנו ובכל תחילת המחשה עטפנו אותם בחיבוקים עדינים. 
+בשעת סיפור המחשתי להם את הסיפור "משהו אחר" מאת קתרין קייב . הפעם השתמשתי בבובות פרווה ובובות יד. החברימות היו פשוט מהופנטים מהסיפור. החיבור לבובות היד ולרגשות עליהם הם דיברנו במהלך הסיפור היה פשוט מדהים! בכינו וצחקנו יחד עם בובות היד שלנו ובכל תחילת המחשה עטפנו אותם בחיבוקים עדינים.
 
 בזמן המשחק החופשי התחפשנו יחד עם אלינור וחולוד, צעדנו אחד אחרי השנייה ובעיקר הסענו את המכוניות למצעד 
 
-<br>
-
-**מסיבת גאווה ואהבה 
+**מסיבת גאווה ואהבה
 **
 
-ביום שישי חגגנו את חג הגאווה והאהבה. 
-<br>
+ביום שישי חגגנו את חג הגאווה והאהבה.
+
 אירי מקבוצת הלו יעקב (הבוגרים) הגיעה לספר לנו על הדגל המיוחד שאיתו היא הגיעה לגן. דגל צבעוני שבו מנפנפים גבוה באוויר כאשר הולכים למצעד אי שם ליד הים. הדגל מסמל את היכולת שלנו לקבל את כל האנשים כשווים אחד לשניה.
 
 אם כבר אנחנו מדברים בצבעים אז חנצ'וק האלופה פינקה אותנו בארוחת בוקר חגיגית במיוחד והפעם פנקייקים ורודים! פנקייק סלק שאותו טבלנו בטחינה עם סילאן (הצלחה מסחררת!) וזאת כמובן לצד הירקות והממרחים הקבועים.
 
-לאחר מפגש שבו שרנו ורקדנו בזוגות לצלילי [שירו של בוב מארלי](https://www.youtube.com/watch?v=vdB-8eLEW8g)  ישבנו להתפנק ואכלנו אבטיח ומלון קפואים על הדק יחד עם קבוצת שולה. 
+לאחר מפגש שבו שרנו ורקדנו בזוגות לצלילי [שירו של בוב מארלי](https://www.youtube.com/watch?v=vdB-8eLEW8g) ישבנו להתפנק ואכלנו אבטיח ומלון קפואים על הדק יחד עם קבוצת שולה.
 
-משם המשכנו למסיבה הגדולה שבה הייתה עמדת איפור פנים של אחי והכנת דגלים צבעוניים עם חולוד . חוץ מזה לשנו בצק צבעוני ומנצנץ עם אדריאן, רקדנו ריקודים מקפיצים עם אורטל, שירז ואלינור בחצר ושחקנו במשחקי רצפה מיוחדים וצבעוניים איתי ועם דור בכיתה ממוזגת! 
-<br>
-החיבור בין הצעירים לבוגרים עובד פשוט נהדר! הילדימות נעו בחופשיות בין העמדות השונות, רקדו, בנו, לשו, הדביקו וציירו ובעיקר אהבו! 
+משם המשכנו למסיבה הגדולה שבה הייתה עמדת איפור פנים של אחי והכנת דגלים צבעוניים עם חולוד . חוץ מזה לשנו בצק צבעוני ומנצנץ עם אדריאן, רקדנו ריקודים מקפיצים עם אורטל, שירז ואלינור בחצר ושחקנו במשחקי רצפה מיוחדים וצבעוניים איתי ועם דור בכיתה ממוזגת!
 
-<br>
+החיבור בין הצעירים לבוגרים עובד פשוט נהדר! הילדימות נעו בחופשיות בין העמדות השונות, רקדו, בנו, לשו, הדביקו וציירו ובעיקר אהבו!
 
 **מסיבת תחתונים לגמולות החדשות שלנו
 **
 
-נגיד מזל טוב ללולו ונועל'ה האלופות שלנו שנפרדו מהחיתולים ועברו ללבוש תחתונים! חגגנו את המאורע במסיבת תחתונים לתפארת! החברות סיפרו בהתלהבות יתרה על הדרך שבה הן עכשיו עושות פיפי וקקי וכיצד הן שומרות על הבגדים שלהן. כל הכבוד לכן מקסימות שלנו! 
+נגיד מזל טוב ללולו ונועל'ה האלופות שלנו שנפרדו מהחיתולים ועברו ללבוש תחתונים! חגגנו את המאורע במסיבת תחתונים לתפארת! החברות סיפרו בהתלהבות יתרה על הדרך שבה הן עכשיו עושות פיפי וקקי וכיצד הן שומרות על הבגדים שלהן. כל הכבוד לכן מקסימות שלנו!
 
+<
 
-
-<<br>
-
-**לא תאמינו אבל סוף שנה ואנחנו כבר לקראת מסיבת הסיום! 
+**לא תאמינו אבל סוף שנה ואנחנו כבר לקראת מסיבת הסיום!
 **
 
-הלם! אין מילה אחרת לתאר את העובדה שהשנה אוטוטו נגמרת! 
+הלם! אין מילה אחרת לתאר את העובדה שהשנה אוטוטו נגמרת!
 
-אז פתחו יומנים  ושריינו לכם את ה25.7.19 בשעה 17:30 בגן שלנו! 
+אז פתחו יומנים ושריינו לכם את ה25.7.19 בשעה 17:30 בגן שלנו!
 
-נסביר בקצרה על האופן שבו מסיבת סוף השנה שלנו מתנהלת – אין מופע מיוחד להורים, נאמברים מטורפים או הפעלות למניהן. הדרך שלנו לחגוג את סיומה של השנה היא ביצירת חוויה משותפת בין ההורים לילדים. למעשה  המסיבה תתנהל בצורת יריד. יהיו מספר תחנות בהן תעברו יחד עם הילדימות. כל תחנה תהיה קשורה לפרוייקט הלימודי שבו נעסוק בחודש הקרוב, כך שגם אתם תרגישו חלק מהנעשה בגן. 
+נסביר בקצרה על האופן שבו מסיבת סוף השנה שלנו מתנהלת – אין מופע מיוחד להורים, נאמברים מטורפים או הפעלות למניהן. הדרך שלנו לחגוג את סיומה של השנה היא ביצירת חוויה משותפת בין ההורים לילדים. למעשה המסיבה תתנהל בצורת יריד. יהיו מספר תחנות בהן תעברו יחד עם הילדימות. כל תחנה תהיה קשורה לפרוייקט הלימודי שבו נעסוק בחודש הקרוב, כך שגם אתם תרגישו חלק מהנעשה בגן.
 
-החיבור ביניכם לבין הילדימות חשוב לכן המסיבות מתקיימות ללא אחים, סבים וסבתות. 
-
-
-<br>
+החיבור ביניכם לבין הילדימות חשוב לכן המסיבות מתקיימות ללא אחים, סבים וסבתות.
 
 **הודעות:
 **
 
-•	למסיבת הסיום שלנו אנו אוספות אביזרים מסויימים שישמשו אותנו במהלך המסיבה וכאן אנחנו זקוקות לעזרתכם – 7 קופסאות נעליים, 15 קופסאות תמ"ל וכמה שיותר פקקים של שתייה קלה. 
+• למסיבת הסיום שלנו אנו אוספות אביזרים מסויימים שישמשו אותנו במהלך המסיבה וכאן אנחנו זקוקות לעזרתכם – 7 קופסאות נעליים, 15 קופסאות תמ"ל וכמה שיותר פקקים של שתייה קלה.
 
-החל מיום ראשון יחכה לכם ארגז ליד פינת ההתארגנות שבחצר שם תוכלו להניח את הדברים שהבאתם.  
+החל מיום ראשון יחכה לכם ארגז ליד פינת ההתארגנות שבחצר שם תוכלו להניח את הדברים שהבאתם.
 
-•	היות והשבוע היה קצר לא החזרנו לכם סדינים. ביום ראשון אתם פטורים מהבאת סדין 
+• היות והשבוע היה קצר לא החזרנו לכם סדינים. ביום ראשון אתם פטורים מהבאת סדין 
 
-•	כמה כיף לקבל מכם תמונות ממפגשים אחה"צ! כל הכבוד המשיכו כך! 
+• כמה כיף לקבל מכם תמונות ממפגשים אחה"צ! כל הכבוד המשיכו כך!
 
-•	יום ראשון- לא לשכוח בקבוקי מים מלאים. 
-<br>
+• יום ראשון- לא לשכוח בקבוקי מים מלאים.
 
-
-
-
-**שבוע נפלא 
+**שבוע נפלא
 **
 
 **ויקה וחולוד.
 **
 
-
-
-
-
 ## צעירים ב- שולה
-
-
-<br>
 
 **חזרנו מחופשת השבועות לשבוע קצרצר, צבעוני ומלא באהבה:)  
 **
-<br>
-
 
 הילדימות פינקו אותנו בסיפורים וחוויות מהחופשה שלכם, ים, בריכה, טיולים.. נשמע שעשיתם כיף חיים!
 
-שמחנו לשמוע שחלק מהחוויות של שולה היו תוך בילוי משותף אחה"צ בגינה או בבית עם החברים. 
+שמחנו לשמוע שחלק מהחוויות של שולה היו תוך בילוי משותף אחה"צ בגינה או בבית עם החברים.
 
-מפגשי אחה"צ שלכם הם מבורכים ומקדמים את החברויות בין הילדימות, זה מורגש מאוד! 
+מפגשי אחה"צ שלכם הם מבורכים ומקדמים את החברויות בין הילדימות, זה מורגש מאוד!
 
-יחד עם זאת, כמו בכל אינטראקציה, לפעמים אנחנו נתקלים באתגרים של תקשורת וצורך בתיווך בין הילדימות. זה יכול לקרות בין החברים בקבוצה, בין אחים או בין ילדימות שמשחקים להם יחד בגינה כשלפתע משהו "משתבש". 
+יחד עם זאת, כמו בכל אינטראקציה, לפעמים אנחנו נתקלים באתגרים של תקשורת וצורך בתיווך בין הילדימות. זה יכול לקרות בין החברים בקבוצה, בין אחים או בין ילדימות שמשחקים להם יחד בגינה כשלפתע משהו "משתבש".
 
-בגילאים שלנו זה בא לידי ביטוי בעיקר במשחק. הרצון הטבעי של הילדימות לקבל את הרצוי בזה הרגע והתסכול שבדחיית הסיפוקים והרצונות.   
+בגילאים שלנו זה בא לידי ביטוי בעיקר במשחק. הרצון הטבעי של הילדימות לקבל את הרצוי בזה הרגע והתסכול שבדחיית הסיפוקים והרצונות.
 
-כשזה קורה בזירה הביתית שלנו או בגינה, זה אפילו יותר מאתגר. 
+כשזה קורה בזירה הביתית שלנו או בגינה, זה אפילו יותר מאתגר.
 
-לכן לנו יש תפקיד משמעותי בסיפור הזה, **ת י ו ו ך:)** 
+לכן לנו יש תפקיד משמעותי בסיפור הזה, **ת י ו ו ך:)**
 
-לשמחתנו שבוע הגאווה והאהבה הגיע בדיוק בזמן, ובחרנו להקדיש אותו להרחבת השיח והעיסוק בחברות, אמפתיה ופתרון בעיות. 
+לשמחתנו שבוע הגאווה והאהבה הגיע בדיוק בזמן, ובחרנו להקדיש אותו להרחבת השיח והעיסוק בחברות, אמפתיה ופתרון בעיות.
 
-
-<br>
-
-**מפגשולה 
+**מפגשולה
 **
 
-כבר תקופה שפרויקט כלי התחבורה שלנו מלווה אותנו בכיף רב, 
+כבר תקופה שפרויקט כלי התחבורה שלנו מלווה אותנו בכיף רב,
 
 אנחנו מתעמקים עוד ועוד ומגיעים למקומות מופלאים
 
@@ -255,57 +185,51 @@ date: '2019-06-15T20:20:04+03:00'
 
 לפתוח את הדלת כמובן...
 
-וגם את האוטו... 
+וגם את האוטו...
 
-ואפילו את הגן! 
+ואפילו את הגן!
 
 התחלנו לחשוב... גם לאוטובוס ולרכבת יש מפתח? בוודאי
 
-גם לאופניים יש מפתח ומנעול כדי שנוכל להשאיר אותן בבטחה. 
+גם לאופניים יש מפתח ומנעול כדי שנוכל להשאיר אותן בבטחה.
 
+השבוע במפגשולה שלנו יצאנו למסע בעקבות הספר "מפתחות הקסם של דידי".
 
+הספר אמנם ארוך ומעט מורכב עבורנו, אבל השיטה עליו הוא מתבסס, הנקראת שפת הג'ירף, אותה אנחנו לגמרי יכולים להתאים למידותינו.
 
-השבוע במפגשולה שלנו יצאנו למסע בעקבות הספר "מפתחות הקסם של דידי". 
+שפת הג'ירף מציעה לנו " מפתחות קסם", בעזרתם אנחנו יכולים לפתור בעיות באופן יצירתי ובדרכי נועם. היא מלמדת אותנו את שפת הלב, שפה של תקשורת בלתי אלימה הפותחת כל דלת.
 
-הספר אמנם ארוך ומעט מורכב עבורנו, אבל השיטה עליו הוא מתבסס, הנקראת שפת הג'ירף, אותה אנחנו לגמרי יכולים להתאים למידותינו. 
+לכיתה הגיע מפתח קסם. איך הוא נראה?
 
-שפת הג'ירף מציעה לנו " מפתחות קסם", בעזרתם אנחנו יכולים לפתור בעיות באופן יצירתי ובדרכי נועם. היא מלמדת אותנו את שפת הלב, שפה של תקשורת בלתי אלימה הפותחת כל דלת. 
+הילדימות טענו שהוא דומה למפתח בצרור המפתחות של אלי שפגשנו קודם, רק עם לב קטן בקצה..
 
-לכיתה הגיע מפתח קסם. איך הוא נראה? 
+ומה הוא פותח המפתח הזה? ניסינו לפתוח כל מיני דלתות, שום דבר לא עבד..
 
-הילדימות טענו שהוא דומה למפתח בצרור המפתחות של אלי שפגשנו קודם, רק עם לב קטן בקצה.. 
+סיפרתי לחברים שזה מפתח מיוחד, שפותח את הלב!
 
-ומה הוא פותח המפתח הזה? ניסינו לפתוח כל מיני דלתות, שום דבר לא עבד.. 
+בדקנו איפה הלב שלנו, הצצנו מתחת לחולצה ולא ראינו כלום.
 
-סיפרתי לחברים שזה מפתח מיוחד, שפותח את הלב! 
+אז הנחנו את היד ובשקט מופתי הקשבנו. זה היה רגע קסום, הוא פועם! קראו החברים בהתרגשות.
 
-בדקנו איפה הלב שלנו, הצצנו מתחת לחולצה ולא ראינו כלום. 
-
-אז הנחנו את היד ובשקט מופתי הקשבנו. זה היה רגע קסום, הוא פועם! קראו החברים בהתרגשות. 
-
-הלב שלנו פועם כל היום וכל הלילה, אפילו שלפעמים אנחנו לא שמים לב. 
-
-
+הלב שלנו פועם כל היום וכל הלילה, אפילו שלפעמים אנחנו לא שמים לב.
 
 על קירות הכיתה פיזרנו לבבות צבעוניים בצבעי הגאווה הססגוניים:)
 
-תהינו מה קורה שם בתוך הלבבות האלו, למה הם בצבעים שונים איך פותחים איתם ומה עושים? 
+תהינו מה קורה שם בתוך הלבבות האלו, למה הם בצבעים שונים איך פותחים איתם ומה עושים?
 
-כל חבר שרצה קיבל את ההזדמנות לפתוח לב אחד 
+כל חבר שרצה קיבל את ההזדמנות לפתוח לב אחד
 
 תחילה ניגשו ללב לפי הצבע שלו..
 
 בתוך הלבבות הסתתרו להן כל מיני מילים שאנחנו מכירים...
 
-חיבוק, חיוך, ליטוף, נשיקה, מילה טובה ועוד 
+חיבוק, חיוך, ליטוף, נשיקה, מילה טובה ועוד
 
-ומה נעשה עם הלב שנפתח? 
+ומה נעשה עם הלב שנפתח?
 
-החברים בחרו האם רוצים לתת אותו לאחד החברימות 
+החברים בחרו האם רוצים לתת אותו לאחד החברימות
 
 זה עשה לנו הרגשה ממש נעימה וטובה ועכשיו הלב שלנו שמח יותר
-
-
 
 בהמשך השבוע הכרנו את דידי, בובת יד שליוותה את המפגשים שלנו
 
@@ -313,35 +237,30 @@ date: '2019-06-15T20:20:04+03:00'
 
 רגע רגע, לא כל כך מהר.... מסתבר שדידי לא מעוניין
 
-אפשר להגיד לו שלום, לתת לו כיף של אלופים 
+אפשר להגיד לו שלום, לתת לו כיף של אלופים
 
 אבל חיבוק ונשיקה זה משהו שאנחנו חייבים קודם לשאול את החבר האם רוצה...
-<br>
+
 דידי סיפר לנו על היום שלו בגן, על הדברים שהוא אוהב לעשות ואנחנו הזדהינו מאוד
 
-הוא שיתף אותנו בכמה חוויות אישיות בהן  חברה לקחה ממנו את המשחק בו שיחק והוא מצידו כעס מאוד...
+הוא שיתף אותנו בכמה חוויות אישיות בהן חברה לקחה ממנו את המשחק בו שיחק והוא מצידו כעס מאוד...
 
-עצרנו לשאול מה אפשר לעשות, אולי נדחוף, אולי נחטוף בחזרה? לא ולא, מה פתאום.. 
+עצרנו לשאול מה אפשר לעשות, אולי נדחוף, אולי נחטוף בחזרה? לא ולא, מה פתאום..
 
-
-
-דיברנו על מילה אחת עם משמעות גדולה ולפעמים שגויה **ס ל י ח ה 
+דיברנו על מילה אחת עם משמעות גדולה ולפעמים שגויה **ס ל י ח ה
 **
 
-האם תמיד הסליחה עוזרת? לא... 
+האם תמיד הסליחה עוזרת? לא...
 
-אנחנו צריכים להבין שהסליחה הופכת לחסרת משמעות כשעושים בה שימוש רב מדי... 
+אנחנו צריכים להבין שהסליחה הופכת לחסרת משמעות כשעושים בה שימוש רב מדי...
 
-אולי אפשר להשתמש באחד הפתרונות שמציעים הלבבות הצבעוניים שלנו. 
+אולי אפשר להשתמש באחד הפתרונות שמציעים הלבבות הצבעוניים שלנו.
 
-שאלנו את דידי מה היה עוזר לו? מסתבר שהוא איש של חיוכים. 
+שאלנו את דידי מה היה עוזר לו? מסתבר שהוא איש של חיוכים.
 
 הבנו שיש הרבה דרכים לפתור בעיה, וסליחה היא לא תמיד אחת מהן.
 
-<br>
-<br>
-
-**שיר שהוא סיפור. על אהבה, אמפתיה וחברות 
+**שיר שהוא סיפור. על אהבה, אמפתיה וחברות
 **
 
 השבוע במפגשים שלנו עשינו תרגיל חדש
@@ -350,136 +269,106 @@ date: '2019-06-15T20:20:04+03:00'
 
 החברים התרגשו לגלות שמאחורי כל שיר יש כותב, כמו של ספר
 
-ומ<br>ת חשיבה עלילה דמויות... כמו סיפור קצר 
+ומת חשיבה עלילה דמויות... כמו סיפור קצר
 
 הקשבנו לשיר יוסי של חבר, של הכבש השישה עשר
 
-ושיר על הכלבה המקסימה באני שלנו, של מתי כספי 
+ושיר על הכלבה המקסימה באני שלנו, של מתי כספי
 
 השבוע מיה עשתה מעשה חברי במיוחד וחלקה אתנו את הספר "מר שמח" מאת רוג'ר הרגריבס שגורם לה בבית לצחוק ולהיות שמחה:)
 
 באופן קסום הספר התחבר לנו מאוד לשבוע שלנו ואת סוף הסיפור סיימנו תמיד עם תרגול של פרצופים מהאומלל עד השמח ביותר
 
-תודה למיה על השיתוף! מוזמנים להמשיך במסורת... 
-
-
-<br>
-
-
+תודה למיה על השיתוף! מוזמנים להמשיך במסורת...
 
 **עוד שירים וסיפורים שאהבנו השבוע
 **
 
-" שאול החתול והריקוד הכי קול"  מאת קימברלי וג׳ימס דין 
+" שאול החתול והריקוד הכי קול" מאת קימברלי וג׳ימס דין
 
-[אני אוהב אותך של היי פייב](https://www.youtube.com/watch?v=vQh3EIGoV7Y) 
+[אני אוהב אותך של היי פייב](https://www.youtube.com/watch?v=vQh3EIGoV7Y)
 
-[מקהלה עליזה 
+[מקהלה עליזה
 ](https://www.youtube.com/watch?v=ZKmJhSysnwE)
 
+\*\*כמה דברים אפשר לעשות במעגל
 
+-
 
-<br>
+המעגל שלנו הולך ומשתבח לו עם הזמן
 
-**כמה דברים אפשר לעשות במעגל 
-*<br>
+השבוע הפכנו אותנו למעגל מתוק של חיבוקים שאנחנו מעבירים מהאחד לשני
 
+ואם אחד החברים עוצר אותנו ואומר שלא רוצה? אז מדלגים וממשיכים
 
+מעגל העצמה שנותן לנו המון כוח להמשך היום שלנו:)
 
-המעגל שלנו הולך ומשתבח לו עם הזמן 
+גחק במעגל זה כיף לא פחות!
 
-השבוע הפכנו אותנו למעגל מתוק של חיבוקים שאנחנו מעבירים מהאחד לשני 
-
-ואם אחד החברים עוצר אותנו ואומר שלא רוצה? אז מדלגים וממשיכים 
-
-מעגל העצמה שנותן לנו המון כוח להמשך היום שלנו:) 
-
-ג<br>חק במעגל זה כיף לא פחות!
-
-בחצר שיחקנו את המשחק מי ראה את הגבינה של העכבר... הגבינה מסתתרת מאחורי אחד החתולים במעגל.  
+בחצר שיחקנו את המשחק מי ראה את הגבינה של העכבר... הגבינה מסתתרת מאחורי אחד החתולים במעגל.
 
 חבר אחד עומד מחוץ למעגל וכשמגלים מאחורי מי הגבינה...החתול צריך לרוץ ולתפוס אותו עד שהוא מצליח להתיישב חזרה במקום
 
-בנתיים כולם שרים! 
+בנתיים כולם שרים!
 
 "עכבר עכבר הישמר, פן החתול יבוא מהר...
 
 עכבר, עכבר, נוס, נוס, נוס!
 
-עכבר, עכבר, נוס, נוס!" 
+עכבר, עכבר, נוס, נוס!"
 
 אחרי כמה סיבובים שבהם למדנו קודם כל את החוקיות, מי רץ, מי תופס ואיפה צריך להתיישב
 
-המשחק הפך ללהיט גדול 
+המשחק הפך ללהיט גדול
 
+\*\*שישי של גאווה ואהבה LOVE IS LOVE
 
-<br>
-
-
-
-**שישי של גאווה ואהבה LOVE IS LOVE
-*<br>
+-
 
 סיימנו את השבוע שלנו בארוחת בוקר עם פנקייקים ורודים מאת חן האלופה
 
 הכנת מפתחות קסם עם מדבקות צבעוניות שיעזרו לנו לפתוח כל לב שרק נרצה
 
-ומסיבת חצר אחת ענקית שלא נופלת ממסיבת הגאווה בצ'ארלס קלור. 
+ומסיבת חצר אחת ענקית שלא נופלת ממסיבת הגאווה בצ'ארלס קלור.
 
-<br>
-<br>
-
-**הודעות ועדכונים 
+**הודעות ועדכונים
 **
 
-\# נוהל יום א'- בקבוקים בלבד, כמו שהבנתם הסדינים נשארו בגן כיוון שלא הספיקו להתלכלך עדיין:) 
+\# נוהל יום א'- בקבוקים בלבד, כמו שהבנתם הסדינים נשארו בגן כיוון שלא הספיקו להתלכלך עדיין:)
 
 \# תמונה מהסופ"ש שלכם, אל תפספסו, הילדימות מתאכזבים כשאין להם תמונה להראות
 
-\# מסיבת הסיום שלנו מתקרבת!  אשמח למספר הורים שיתנדבו לעזרה קלילה בתפעול. מוזמנים לפנות אליי בפרטי. 
+\# מסיבת הסיום שלנו מתקרבת! אשמח למספר הורים שיתנדבו לעזרה קלילה בתפעול. מוזמנים לפנות אליי בפרטי.
 
-**באהבה וגאווה, 
+**באהבה וגאווה,
 **
 
-**שירז ואלי 
+**שירז ואלי
 **
 
+## בוגרים א' – תקווה
 
-
-
-
-
-
-## בוגרים א' – תקווה 
-
-## 
-
-
-<br>
+##
 
 **שבת שלום לכם/ן!
 **
 
-השבוע היה שבוע ברוח האהבה והגאווה. 
+השבוע היה שבוע ברוח האהבה והגאווה.
 
-א<br>לעצמנו ואהבה לסובבים אותנו, קבלת השונה מאיתנו ואהבת השוני וההבנה שהגיוון והשוני הופך את החברה שלנו למעניינת יותר וטובה יותר!
-
-
-
-<br>
+אלעצמנו ואהבה לסובבים אותנו, קבלת השונה מאיתנו ואהבת השוני וההבנה שהגיוון והשוני הופך את החברה שלנו למעניינת יותר וטובה יותר!
 
 **תקווה בכל צבעי הקשת
 **
 
 השבוע התמקדנו בנושא השוני אחד מהשני. התחלנו במשחק כיפי! ביקשנו מהילדימות להסב את תשומת ליבם לשיער שלהם, בואו נעביר ידיים בשיער ונרגיש:
 
-השיער שלנו קצר או ארוך? 
+השיער שלנו קצר או ארוך?
 
-אנחנו מרגישים תלתלים גדולים או תלתלים קטנים? 
+אנחנו מרגישים תלתלים גדולים או תלתלים קטנים?
 
 השיער שלנו חלק לגמרי או קצת גלי?
-<br>
-על אחד הקירות הריקים בכיתה תלינו ציור של תלתל, קראנו לכל החברים שמרגישים תלתלים בשיער להגיע לקיר בספירה עד 5... החברים המתולתלים רצו לקיר ונעמדו, בין החברים שמנו לב לסוגים השונים של התלתלים, ללני ועידו תלתלים קטנים וקצרים, ואילו לליאו ואלונה תלתלים ארוכים יותר... וראינו שגם בין התלתלים התגנבו כמה חברים עם שיער חלק! קורה שמתבלבלים, ביקשנו שוב להסב את תשומת הלב לתחושה של השיער  והחברים עם השיער החל חזרו לשבת.
+
+על אחד הקירות הריקים בכיתה תלינו ציור של תלתל, קראנו לכל החברים שמרגישים תלתלים בשיער להגיע לקיר בספירה עד 5... החברים המתולתלים רצו לקיר ונעמדו, בין החברים שמנו לב לסוגים השונים של התלתלים, ללני ועידו תלתלים קטנים וקצרים, ואילו לליאו ואלונה תלתלים ארוכים יותר... וראינו שגם בין התלתלים התגנבו כמה חברים עם שיער חלק! קורה שמתבלבלים, ביקשנו שוב להסב את תשומת הלב לתחושה של השיער והחברים עם השיער החל חזרו לשבת.
 
 ועכשיו.... ההיפך! שורה של חברים עם שיער חלק נעמדה וגם ביניהם שמנו לב לשוני! כמובן שבין החברים היו כמה שלא בטוחים וציינו זאת, לתומר ולביא יש גם שיער חלק וגם קצת שיער מתולתל.
 
@@ -489,22 +378,17 @@ date: '2019-06-15T20:20:04+03:00'
 
 לאחר שדיברנו על השוני החיצוני שלנו... היה לנו חשוב גם לדבר על רצונות שונים, התמקדנו במשחק, נתנו לחברים לשחק במשחקי רצפה אהובים במשך כמה דקות, אנחנו המחנכות שמנו לב למשחק של כל אחד ודאגנו לפנות לילדימות ולהציע פתרונות לבעיות שמצאו ביניהם,
 
-החזרנו את כל המשחקים ואז ישבנו לשיחה. 
+החזרנו את כל המשחקים ואז ישבנו לשיחה.
 
 שאלנו את החברים איך היה להם במשחק ואם שמו לב לצורה בה שיחקו, שמענו מחברים שרצו לשחק ביחד, חלק רצו לשחק לבד, חלק היו צריכים המון חלקי משחק וחלק הסתפקו בכמה חלקים...
 
-גם ברצונותינו אנחנו שונים אחד מהשני. אבל איך נגשר בין כל השוני ונהפוך את המשחק הכיתתי לנעים? 
+גם ברצונותינו אנחנו שונים אחד מהשני. אבל איך נגשר בין כל השוני ונהפוך את המשחק הכיתתי לנעים?
 
 רצינו לשמוע מתומר וארבל, תומר סיפר שבזמן ששיחק ארבל רצה לשחק בחלקים מהמשחק שלו. תומר רצה לבנות מכונית מכל החלקים שהיו לו, וארבל רצה לבנות מגדל עם חלקים שיש לתומר, שניהם רצו דברים שונים אחד מהשני, איך נוכל שנינו להנות מהמשחק?
 
 תומר סיפר לנו שמצא פיתרון- שישחקו ביחד! ארבל אמר שביקש מתומר אם הוא יכול להצטרף אליו ושני החברים התחלקו במשחק.
 
 בסוף השבוע לקראת אירוע הגאווה, הסברנו שגם משפחות שונות אחת מהשניה, יש משפחות עם אבא ואמא, אמא ואמא, אבא ואבא, יש משפחות עם אמא אחת או אבא אחד, יש משפחות שיש לאמא בית ולאבא בית בנפרד... כל משפחה מיוחדת במינה!
-
-
-
-
-<br>
 
 **אירועי הגאווה והאהבה בגן
 **
@@ -518,17 +402,13 @@ date: '2019-06-15T20:20:04+03:00'
 הראינו לחברים את דגל הגאווה, ואמרנו שהיום בחגיגות הדגל הזה מתנוסס לו בתל אביב, זה דגל הגאווה, התייחסנו בעיקר לצבעים שלו ולשוני, כל הצבעים יוצרים קשת אחת מיוחדת! החברים נורא התלהבו מהצבעוניות של הדגל, ואף החליטו לשחק במיוני צבעים באמצעותו.
 
 החגיגה התחילה והחברים יצאו לשחק ולחגוג עם שאר חברי הגן, הייתה יצירת דגלונים וכתרים צבעוניים, בצק צבעוני ונוצץ, מוזיקה חגיגית ועמדת איפור צבעונית.
-<br>
+
 התרגשנו לראות את החברים חוגגים גם הם את האירוע המיוחד הזה, במיוחד אחרי שהבינו את העקרונות החשובים שעומדים מאחוריו.
-
-
-
-<br>
 
 **ספרים רבותיי, ספרים! – "לבד על המרבד", מאת: בריאן וילדסמית
 **
 
-השבוע לרגל ציון הגאווה והאהבה, בחרנו להתייחס גם לנושא החברות. 
+השבוע לרגל ציון הגאווה והאהבה, בחרנו להתייחס גם לנושא החברות.
 
 הספר "לבד על המרבד" הוא ספר קצר המעורר שיח חשוב ומשמעותי. הוא מתאר חתול שישב על המבד, ולאט לאט באו עוד חברים, חיות שונות, והתיישבו על המרבד. לבסוף החתול התעצבן, סילק אותם, ושמח להיות לבד על המרבד.
 
@@ -550,13 +430,13 @@ date: '2019-06-15T20:20:04+03:00'
 
 אם לחתול לא היה כל כך נעים כשכל החיות התיישבו לו על המרבד, מה הוא היה יכול לעשות במקום לגרש אותם בכעס? ארבל הציע שאפשר להגיד שזה לא נעים לו.
 
-וכמ<br> אחרי הדיבור על הספר, דיברנו על החיים האמיתיים והשוואנו את מה שקרה בספר למשחק של הילדים.
+וכמ אחרי הדיבור על הספר, דיברנו על החיים האמיתיים והשוואנו את מה שקרה בספר למשחק של הילדים.
 
 ליאו סיפר לנו שבאותו בוקר כשרק הגיע לגן הוא העדיף לשחק לבד.
 
 פלג סיפר שבחצר הוא הציע לתומר לשחק איתו ותומר אמר לו שהוא לא רוצה בצורה נעימה. פלג, בצורה בוגרת, הלך לשחק עם חבר אחר.
 
-לני אפילו הדגימה לנו כיצד אפשר להציע לחבר לשחק איתה, ושזה בסדר מצידו להגיד לא. 
+לני אפילו הדגימה לנו כיצד אפשר להציע לחבר לשחק איתה, ושזה בסדר מצידו להגיד לא.
 
 דיברנו ארוכות על התגובות שלנו. על הבחירה שלנו לדבר, להציע, לכבד את המרחב של האחר ואת הרצון שלו, וגם את הצורך לפעמים להיות לבד.
 
@@ -564,11 +444,7 @@ date: '2019-06-15T20:20:04+03:00'
 
 השיח בין הילדים היה מרגש ומאוד בוגר, וזה מאוד הורגש גם במשחק החופשי שהגיע בהמשך.
 
-
-
-<br>
-
-**<br> – בואו ונשתול!
+** – בואו ונשתול!
 **
 
 בזמן החצר אספנו את החברים מהלו יעקב ותקווה לרחבת הדק כדי לשתול ולטפל בעציצים שלנו.
@@ -576,8 +452,8 @@ date: '2019-06-15T20:20:04+03:00'
 הבאנו דלי מים, אתי חפירה ואחת מהאדניות.
 
 סיפרנו לחברים שהחום גורם לנו להזיע ולהתייבש, וכך גם הצמחים מרגישים, לכן צריכים לשים לב יותר ולטפל בהם.
-<br>
-שמנו לב לצמחים באדנית וראינו שחלקם מאוד מיובשים. 
+
+שמנו לב לצמחים באדנית וראינו שחלקם מאוד מיובשים.
 
 אחד אחד החברים, הוציאו את העלים היבשים שנפלו ומפריעים לצמחים לצמוח, איווררנו את האדמה והוצאנו צמחים שכבר לא גודלים. זו הייתה הזדמנות לבחון את שורשי הצמחים, יכולנו לראות שמתחת לאדמה השורשים מסתעפים ומתפזרים כדי לשאוב את המים, ומשם גדל לו גבעול.
 
@@ -587,8 +463,6 @@ date: '2019-06-15T20:20:04+03:00'
 
 לאחר שסיימנו אספנו ביחד את העלים היבשים והחזרנו את כל הכלים במקום, חלקם נזרקו וחלקם עברו למשחק מהנה בארגז החול. היה מקסים ומלמד.
 
-
-<br>
 **מוזיקה ללב היא חודרת
 **
 
@@ -596,15 +470,10 @@ date: '2019-06-15T20:20:04+03:00'
 
 [Your song ](https://youtu.be/GlPlfCy1urI)
 
-   [Goodbye Yellow Brick Road
+[Goodbye Yellow Brick Road
 ](https://youtu.be/DDOL7iY8kfo)
 
-  [ I'm still standing](https://youtu.be/5JfvAPZGjds)  
-
-
-
-
-<br>
+[ I'm still standing](https://youtu.be/5JfvAPZGjds)
 
 **הודעות חשובות
 **
@@ -613,32 +482,13 @@ date: '2019-06-15T20:20:04+03:00'
 
 \# תמונה מהסופ"ש לאדריאן עד יום ראשון ב8:00 
 
-
-
 **סופ"ש נעים,
 **
 
 **רעות,אדריאן, תמר ועינב
 **
 
-
-
-
-
-
-
-<br>
-
-
-
 ## בוגרים ב'- הלו יעקב
-
-
-
-
-
-
-<br>
 
 > במקום רחוק וקצת מבודד
 >
@@ -648,27 +498,17 @@ date: '2019-06-15T20:20:04+03:00'
 >
 > נראו בדיוק אותו הדבר!
 
-
-
-
-
-<br>
-
-
-
 לבשו את אותם הבגדים, את אותם התלתלים, את העיניים החומות ואפילו סנדלים אדומים.
 
 דיברו אותו הדבר, אהבו אותו הדבר…. בהתחלה זה היה נחמד בלי וויכוחים, בלי התפשרויות, ידענו בדיוק מתי כועסים ומתי עצובים, מה יעשה טוב ומה סתם יציק.…
 
-לכיתה נכנסה ילדה עם שיער ארוך ארוך ארוך, עיניים בהירות ונעליים כחולות… 
+לכיתה נכנסה ילדה עם שיער ארוך ארוך ארוך, עיניים בהירות ונעליים כחולות…
 
 כל מה שאמרה היה מעניין ושונה, המשחק ריתק ואתגר והשיח כאילו הגיע מעולם אחר.
 
 השונה הוא טוב, השונה עוזר לנו לצמוח וללמוד.
 
-
-
-**מה מיוחד בי? 
+**מה מיוחד בי?
 **
 
 משחק -
@@ -679,8 +519,6 @@ date: '2019-06-15T20:20:04+03:00'
 
 אנחנו שונים.
 
-
-
 האם יש איזשהו איבר או חלק בפרצוף שלנו שמייחד אותנו, שהופך אותנו מי שאנחנו?
 
 בחדר אחר התעטפתי בבד גדול את הפנים כיסיתי בדף לבן רק הראסטות בצבצו, נכנסתי לכיתה …
@@ -688,7 +526,7 @@ date: '2019-06-15T20:20:04+03:00'
 מי יודע מי אני? אורטל קראו כולם בקול…. איך ידעתם? הראסטות! הן מייחדות אותי, הן סימן חיצוני שיכול לעזור לזהות אותי, רק אותי.
 
 מה מייחד אתכן/ם ? הילדימות התבוננו במראה ולאחר מכן קיבלו דף לבן.
-<br>
+
 בזכות איזה איבר ידעו מי אתם/ן?
 
 הילדימות בחרו פה, אף, שיער או אוזן מיוחדת…
@@ -701,8 +539,6 @@ date: '2019-06-15T20:20:04+03:00'
 
 גילינו שלמרות שלכולנו יש אף הם שונים אחד עגול, אחד ארוך, אחד קטן …
 
-
-<br>
 השיח בתקופה האחרונה בחצר מדבר על הכוחות המיוחדים שלנו על היכולות שלנו ומידי פעם יש התנצחויות קטנות שנשמעות בכל פינה.
 
 כולם רוצים להוכיח שהם הכי טובים.
@@ -712,8 +548,6 @@ date: '2019-06-15T20:20:04+03:00'
 בנוסף לחברימות היה מקום לספר מה הם חושבים שהכי מיוחד בחבר שלצידם זה היה מדהים ממש.
 
 ולסיום כמובן חיבוק חברים חזק ואוהב.
-
-
 
 תום - אני אלוף בלמצוא דברים מגניבים.
 
@@ -736,7 +570,7 @@ date: '2019-06-15T20:20:04+03:00'
 אבינועם - מפקד העולם.
 
 שקד- אני רוכב על אופנוע.
-<br>
+
 גיא- אלוף הבוץ בארגז החול.
 
 אנה - אלופת עולם באיסוף צעצועים.
@@ -751,18 +585,8 @@ date: '2019-06-15T20:20:04+03:00'
 
 אביתר- אני יודע הכל על טרקטורים ומטוסים.
 
-
-
-
-
-<br>
-
-
-<br>
 [**עילי בוטנר -שווים
 **](https://youtu.be/lf72w9CMB-I)
-
-
 
 **שיר ריקודים -
 **
@@ -770,15 +594,7 @@ date: '2019-06-15T20:20:04+03:00'
 [תומר יוסף - אני רוצה לזוז
 ](https://youtu.be/TTnfsU1-PNg)
 
-
-
-
-
-<br>
-
-<br>
-
-**ספרי השבוע- 
+**ספרי השבוע-
 **
 
 משהו אחר
@@ -786,8 +602,6 @@ date: '2019-06-15T20:20:04+03:00'
 משהו אחר גר על הר בבית רחוק ומרוחק, בכל פעם ניסה להתקרב לחבריו וניסה להיות כמוהם. אך כל דבר שהוא עושה רק מראה עד כמה הוא שונה, לא קיבלו אותו רק בגלל שהוא שונה.
 
 ואז הגיע מישהו ומנסה להיות חבר שלו, הוא יכול להיות חבר שלי? הוא לא דומה לי? לאט לאט גילו השניים שאפשר להיות שונים וחברים סיפור רגיש, פשוט וקסום.
-
-
 
 האריה הרעמתן והג׳ירפה גם
 
@@ -799,22 +613,13 @@ date: '2019-06-15T20:20:04+03:00'
 
 האם שינוי הלבוש שלי משנה אותי?
 
-
-
 עמיתיפאי שלנו הסתפר השבוע! יהההה….
 
 זאת הזדמנות נהדרת לשאול:
 
 האם הוא ילד אחר? האם הוא כבר לא אוהב את המשחקים שאהב קודם, האם עכשיו הוא צריך להחליף חברים? על הכל ענינו לא.
 
-אני תמיד נשאר/ת אני, לא משנה מה אשנה בעצמי. 
-
-
-
-
-<br>
-
-
+אני תמיד נשאר/ת אני, לא משנה מה אשנה בעצמי.
 
 **מסיבת אהבה וגאווה בגן שלנו
 **
@@ -833,12 +638,6 @@ date: '2019-06-15T20:20:04+03:00'
 
 המון מים למשחק, אחינועם על עמדת איפור מוצלחת במיוחד, פינות יצירת דגלונים וכתרים, בצק ציבעוני ומנצנץ כמה כיף לסגור ככה את השבוע באהבה שמחה והמון המון צבע.
 
-
-
-
-
-<br>
-
 **תראו מה הגוף שלי יכול לעשות
 **
 
@@ -855,39 +654,20 @@ date: '2019-06-15T20:20:04+03:00'
 
 היה מצחיק, מאתגר ובכל ניסוי היינו אמיצים יותר ואת המקל עברנו מבלי לגעת...בערך(:
 
-
-
-
-
-
-<br>
-
 **הודעות ועדכונים
 **
 
-
-
 \# מזכירה שהסדינים אצלנו אז בקבוקי מים קרירים ורעננים.
-
-
 
 \# זכרו למרוח את הילדימות בקרם הגנה לפני הכניסה לגן.
 
-
-
 \# תמונות סוף שבוע- תמונה אחת מייצגת, תמיד נחמד עם הסבר קליל.
-
-
 
 \# מגבונים חודש יוני יש עדיין הורים שלא הביאו אז מזכירה חבילה אחת להניח בשידת ההחתלה בשירותים ולסמן את שמכם.
 
+\# תיקי ספר בימי חמישי כל הכבוד לכם על התזכורת בבוקר חמישי, עבודה משותפת שלכן/ם לטובת הילדימות.
 
-
-\# תיקי ספר בימי חמישי כל הכבוד לכם על התזכורת בבוקר חמישי, עבודה משותפת שלכן/ם לטובת הילדימות. 
-
-
-
-**שבוע נפלא וצונן 
+**שבוע נפלא וצונן
 **
 
 **אורטל ודור.
