--- a/content/weekly-update/שבוע-הספר-על-כריכות-ומה-שביניהן.md
+++ b/content/weekly-update/שבוע-הספר-על-כריכות-ומה-שביניהן.md
@@ -2,15 +2,16 @@
 title: 'שבוע הספר: על כריכות ומה שביניהן'
 date: '2020-06-27T18:03:03+03:00'
 ---
+
 **שבת שלום לכל ההורימות**,
 
 שבוע מהנה ופורה נוסף עבר עלינו בגן, וכעת אנחנו נכנסים לישורת האחרונה של השנה, תקופה שמתאפיינת אצלנו בגן בפרוייקטי סוף שנה. בהתאם לתפיסה החינוכית התהליכית שלנו, מסיבות סוף השנה אצלנו גם הן מהוות חלק מתהליך למידה ממושך, והינן רק הפינאלה שלו. אנחנו לא מתכננים מסיבה, ואז מלמדים את הילדים להעלות את הריקודים/שירים הנדרשים, אלא להיפך, המסיבה נבנית מתוך הפעילויות שלנו, ועל ידי הילדים והצוות יחדיו. בכל שנה, החודשיים אחרונים מוקדשים ללמידה דרך פרוייקט אחד או שניים שנובעים מתחומי העניין של הילדימות.
 
-למידה מבוססת פרוייקטים (PBL) היא שיטה שמגיעה מחינוך בגילאי תיכון, ואנחנו מצאנו דרך להתאים אותה לגילאים שלנו, ובמקרה הספיציפי שלנו היא יותר למידה מבוססת חקר. מי שמתעניין בגישה זו יכול להסתכל [בקישור הזה על דוגמא טובה](https://www.youtube.com/watch?v=OHrSbIi6V2A). 
+למידה מבוססת פרוייקטים (PBL) היא שיטה שמגיעה מחינוך בגילאי תיכון, ואנחנו מצאנו דרך להתאים אותה לגילאים שלנו, ובמקרה הספיציפי שלנו היא יותר למידה מבוססת חקר. מי שמתעניין בגישה זו יכול להסתכל [בקישור הזה על דוגמא טובה](https://www.youtube.com/watch?v=OHrSbIi6V2A).
 
 בסיום הפרוייקט מתקיים אירוע מסכם, וזוהי מסיבת הסיום שלנו. התוצאה היא שהמסיבה כולה שייכת לילדימות, הם מגיעים אליה לאחר שלמדו וחקרו נושא-על מסויים, נושא שלרוב עלה מתחומי העניין שהצוות זיהה אצל הילדימות. התחנות והפעילויות מיועדות לילדימות עצמם והן מתבססות על פעילויות שכבר עשינו בגן והילדימות מכירים אותן. כך הילדימות פעילים, נינוחים, ובעצם חוגגים את עצמאות הלמידה והחקר שלהם.
 
-עם זאת, השנה, בהתאם להנחיות משרד החינוך ומשרד הבריאות, לא נוכל לקיים מסיבות סיום עם ההורים בתוך הגן. לכן המסיבות השנה יראו קצת אחרת, והנה הפירוט: 
+עם זאת, השנה, בהתאם להנחיות משרד החינוך ומשרד הבריאות, לא נוכל לקיים מסיבות סיום עם ההורים בתוך הגן. לכן המסיבות השנה יראו קצת אחרת, והנה הפירוט:
 
 **בשכבת הצעירים**: מסיבת סיום בנושא "אל מעמקי הים", שתתקיים בתוך הגן, ללא הורים, **ביום שישי ה-7.8.20**. לקבוצות הממשיכות שלנו אנו רוצות לתת אירוע משותף שיחזק את הקשר של הילדימות אחד לשני ולגן. כמובן נשתף אתכם בשלל תמונות ובתיאור האירוע, אך לצערנו לא תוכלו להשתתף בו מפאת המגבלות.
 
@@ -20,39 +21,39 @@ date: '2020-06-27T18:03:03+03:00'
 
 אנחנו מתכננים לכם פעילות בסגנון "המירוץ למליון": במהלך האירוע יהיו מספר תחנות כשכל משפחה תצטרך לעבור ולבצע משימה מסויימת. לבסוף תגיעו לקו הסיום לקבל הפתעה. כרגע, אנחנו לא יכולים לרדת ליותר פרטים מאחר ותכנון האירוע לא הסתיים (עדיין עובדים על זה בתוך כל המגבלות שיש לנו).
 
-**האירוע יתקיים ביום חמישי 6.8.20 בין השעות 17:30-19:00 בפארק הירקון (לא סופי, אבל לשם אנחנו מתכווננים). ביום זה הגן יסיים פעילות בשעה 15:30**. 
+**האירוע יתקיים ביום חמישי 6.8.20 בין השעות 17:30-19:00 בפארק הירקון (לא סופי, אבל לשם אנחנו מתכווננים). ביום זה הגן יסיים פעילות בשעה 15:30**.
 
 ועוד קצת הודעות...
 
-**מגבונים**-  מגבוני חודש יולי, כל משפחה מביאה חבילה אחת בלבד. 
+**מגבונים**- מגבוני חודש יולי, כל משפחה מביאה חבילה אחת בלבד.
 
 **גבי ונטע**- יש לנו שתי מחנכות חדשות בגן, שהתחילו השנה, לקראת השנה החדשה שלנו .
 
 גבי - כרגע במשרת מילוי מקום, בשנה הבאה תכנס למשרה מלאה. מחנכת שעבדה 5 שנים באחד הגנים האהובים עלינו בעיר, עולה חדשה-ותיקה מארה"ב, בעלת שמחת חיים ורוח מרעננת, המבינה היטב את שפת הילדימות.
 
-נטע - נכנסת על תקן משרת מילוי מקום. סטודנטית לחינוך מיוחד לגיל הרך, מנוסה בתחום גני הילדים, בחורה סופר אינטלגנטית ונעימה שהשתלבה פה בקלילות. 
+נטע - נכנסת על תקן משרת מילוי מקום. סטודנטית לחינוך מיוחד לגיל הרך, מנוסה בתחום גני הילדים, בחורה סופר אינטלגנטית ונעימה שהשתלבה פה בקלילות.
 
-**צוות לשנה החדשה** - משפחות ממשיכות, אנחנו יודעים שמאוד חשוב לכם לדעת מי הצוות לשנה הבאה. אנחנו סוגרים את השיבוצים סופית רק בסוף חודש יולי. נדגיש כי אנחנו בשאיפה להשאיר את שיבוצי הצוות בקבוצות קבוע ככל שאפשר, אך מדי פעם ישנם שיקולים אירגוניים שמצריכים מאיתנו לעשות שינויים בשיבוץ. אנחנו שואפים להמשכיות מלאה ומבטיחים כמו תמיד סטנדרנט גבוה ביותר בכל הקשור לצוות המחנך. במקביל, נשתף כי ויקה עוזבת את תל אביב ועוברת דרומה, ולכן לא תחזור בשנה הבאה מחופשת הלידה לגן שלנו. אוהבים ומחבקים ולא באמת נפרדים. את השיבוצים הסופיים נשתף במפגש ההורים של שכבת הבוגרים תשפ"א ב-27.7.20. 
+**צוות לשנה החדשה** - משפחות ממשיכות, אנחנו יודעים שמאוד חשוב לכם לדעת מי הצוות לשנה הבאה. אנחנו סוגרים את השיבוצים סופית רק בסוף חודש יולי. נדגיש כי אנחנו בשאיפה להשאיר את שיבוצי הצוות בקבוצות קבוע ככל שאפשר, אך מדי פעם ישנם שיקולים אירגוניים שמצריכים מאיתנו לעשות שינויים בשיבוץ. אנחנו שואפים להמשכיות מלאה ומבטיחים כמו תמיד סטנדרנט גבוה ביותר בכל הקשור לצוות המחנך. במקביל, נשתף כי ויקה עוזבת את תל אביב ועוברת דרומה, ולכן לא תחזור בשנה הבאה מחופשת הלידה לגן שלנו. אוהבים ומחבקים ולא באמת נפרדים. את השיבוצים הסופיים נשתף במפגש ההורים של שכבת הבוגרים תשפ"א ב-27.7.20.
 
 **יתושים ועקיצות** – לאחרונה חלק מהילדימות נעקצים בזמן השהות בגן, ובכלל. אנחנו מבינים שזה לא נעים לראות עקיצות מגרדות ומציקות על גוף הילדימות. עם זאת נשמח להסביר כי יכולת הטיפול שלנו בנושא מוגבלת מכמה סיבות:
 
-\-	הגן נמצא במבנה צמוד קרקע, ובו צמחייה רבה, ולכן יש כאן חרקים שונים שמסתובבים. 
+\- הגן נמצא במבנה צמוד קרקע, ובו צמחייה רבה, ולכן יש כאן חרקים שונים שמסתובבים.
 
-\-	לא לכל החרקים יש הדברה (למשל אין הדברה נגד יתושים), וחלק מן ההדברות מסוכנות ואסורות בסביבת ילדים.
+\- לא לכל החרקים יש הדברה (למשל אין הדברה נגד יתושים), וחלק מן ההדברות מסוכנות ואסורות בסביבת ילדים.
 
 מה עושים בכל זאת ?
 
 מצד הגן:
 
-\- ביצענו בגן את כל ההדברות הרלוונטיות בתקופת הקורונה, ואנחנו מתכננים לבצע בסופש הבא הדברה נוספת. 
+\- ביצענו בגן את כל ההדברות הרלוונטיות בתקופת הקורונה, ואנחנו מתכננים לבצע בסופש הבא הדברה נוספת.
 
-\- אנחנו מקפידים לרוקן מאגרי מים ולודא שאין כאלו בסביבת הגן. 
+\- אנחנו מקפידים לרוקן מאגרי מים ולודא שאין כאלו בסביבת הגן.
 
 מצדכם:
 
-\- חל איסור מוחלט על הצוות החינוכי למרוח כל סוג של תכשיר לי תקנות משרד הבריאות. כשם שאסור לנו לתת תרופות מכל סוג, כך גם אסור לנו מרוח תכשירים כמו נוגדי יתושים וקרם הגנה. 
+\- חל איסור מוחלט על הצוות החינוכי למרוח כל סוג של תכשיר לי תקנות משרד הבריאות. כשם שאסור לנו לתת תרופות מכל סוג, כך גם אסור לנו מרוח תכשירים כמו נוגדי יתושים וקרם הגנה.
 
-\- אנחנו ממליצים מאוד לרכוש את הצמיד נגד יתושים. חלק ניכר מהילדימות מגיעים איתו לגן והוא ממגר כמעט לגמרי את העקיצות. 
+\- אנחנו ממליצים מאוד לרכוש את הצמיד נגד יתושים. חלק ניכר מהילדימות מגיעים איתו לגן והוא ממגר כמעט לגמרי את העקיצות.
 
 **מתנות סוף שנה** - אנחנו מזכירים כי בגן שלנו הצוות לא מקבל מתנות אישיות מההורים. אנחנו יודעים שמאוד חשוב לכם לברך את הצוות ולהודות לו, עם זאת אנחנו מבקשים להקפיד ולכבד את הבקשה שלנו לא להעניק מתנות אישיות. אנחנו עובדים יחד כצוות, ולכן גם את הוקרת התודה מכם נשמח לקבל כצוות, ולא כאנשים נפרדים.
 
@@ -60,7 +61,7 @@ date: '2020-06-27T18:03:03+03:00'
 
 **שבוע רגוע ושקט,**
 
-**אחינועם וכל צוות גן ילדי הטבע הדמוקרטי<br>**
+**אחינועם וכל צוות גן ילדי הטבע הדמוקרטי**
 
 ## שכבת הצעירים
 
@@ -90,7 +91,7 @@ date: '2020-06-27T18:03:03+03:00'
 
 במקביל, המשכנו לחקור את המים: לקחנו כל מיני חפצים, ופיילות מלאות מים. אחד אחד הנחנו את החפצים והתבוננו: האם הם צפים על המים? או שוקעים לתחתית? החזקנו את החפצים בידיים, והרגשנו שדברים כבדים שוקעים יותר מדברים קלים. חיפשנו בחצר עוד דברים שאפשר לנסות להכניס למים ולראות מה קורה איתם. ומה קורה כשמכניסים בקבוקון ריק פנימה? בהתחלה הוא צף, אבל אם לוחצים עליו, רואים שהוא עושה בק-בק-בק, יוצאות ממנו המון בועות, ואז הוא שוקע!
 
-בשבוע הקרוב נמשיך להעמיק במים ובנייר וניצור עיסת נייר, ובמקביל נמשיך להעמיק בספרים עצמם ובתוכן שאפשר למצוא בהם. <br>
+בשבוע הקרוב נמשיך להעמיק במים ובנייר וניצור עיסת נייר, ובמקביל נמשיך להעמיק בספרים עצמם ובתוכן שאפשר למצוא בהם.
 
 # הפינה הצהובה
 
@@ -100,7 +101,7 @@ date: '2020-06-27T18:03:03+03:00'
 
 **מעצבים ומפסלים**
 
-במקביל, המשכנו לעבוד עם החימר, חומר נפלא שעימו אנחנו לומדים עוד ועוד. השבוע גילינו שאם נמשיך לחפור בשקע שעשינו עם האצבע, או נסובב את החימר סביב האצבע, בסוף היא תצא לנו מהצד השני ויהיה לנו חור! הילדים נהנו לעשות חורים בחימר ולהתבונן דרכם: "תראו, יש לי משקפת!". <br>
+במקביל, המשכנו לעבוד עם החימר, חומר נפלא שעימו אנחנו לומדים עוד ועוד. השבוע גילינו שאם נמשיך לחפור בשקע שעשינו עם האצבע, או נסובב את החימר סביב האצבע, בסוף היא תצא לנו מהצד השני ויהיה לנו חור! הילדים נהנו לעשות חורים בחימר ולהתבונן דרכם: "תראו, יש לי משקפת!".
 
 # הפינה הכחולה
 
@@ -114,7 +115,7 @@ date: '2020-06-27T18:03:03+03:00'
 
 **בברכת קיץ מלא מים,**
 
-**צוות הצעירים: מיכל, אורטל, ימית, אלינור ונטע <br>**
+**צוות הצעירים: מיכל, אורטל, ימית, אלינור ונטע **
 
 ## שכבת הבוגרים:
 
@@ -134,7 +135,7 @@ date: '2020-06-27T18:03:03+03:00'
 
 **שבוע הספר**
 
-במפגשים חקרנו השבוע את מבנה הספר: הבנו שהכריכה העבה שומרת על הדפים הדקים ממש כמו שקליפת הפומלה העבה שומרת על הפלחים! חלק מהחברים אמרו שהכריכה היא כמו שריון שמגן על הדפים הדקים שעלולים להתקמט או להיקרע. שאלנו: האם גם לנו יש תפקיד בשמירה על הדפים? בטח! כשאנחנו מעיינים בספרים אנחנו מדפדפים בעדינות, בשתי האצבעות שלנו הופכים את הדף, וככה הדפים לא נפגעים. אחד החברים נתקל בספר שאין בו ציורים בכלל,  מה זה הספר הזה? איך אפשר לעיין בו? החברים הציעו להסתכל על האותיות ולנסות לזהות אותן. נתקלנו גם בספרים מלאים באיורים, בסוף סיכמנו שכל ספר הוא אחר, יש כאלה רק עם מילים וכאלה עם מילים ואיורים, אבל מה שבטוח הוא שעל כולם עבדו ממש קשה! מי יצרו עבורנו את הספרים?
+במפגשים חקרנו השבוע את מבנה הספר: הבנו שהכריכה העבה שומרת על הדפים הדקים ממש כמו שקליפת הפומלה העבה שומרת על הפלחים! חלק מהחברים אמרו שהכריכה היא כמו שריון שמגן על הדפים הדקים שעלולים להתקמט או להיקרע. שאלנו: האם גם לנו יש תפקיד בשמירה על הדפים? בטח! כשאנחנו מעיינים בספרים אנחנו מדפדפים בעדינות, בשתי האצבעות שלנו הופכים את הדף, וככה הדפים לא נפגעים. אחד החברים נתקל בספר שאין בו ציורים בכלל, מה זה הספר הזה? איך אפשר לעיין בו? החברים הציעו להסתכל על האותיות ולנסות לזהות אותן. נתקלנו גם בספרים מלאים באיורים, בסוף סיכמנו שכל ספר הוא אחר, יש כאלה רק עם מילים וכאלה עם מילים ואיורים, אבל מה שבטוח הוא שעל כולם עבדו ממש קשה! מי יצרו עבורנו את הספרים?
 
 לפני שקראנו כל סיפור, הקראנו את שם הסופר ושם המאייר. החברימות שאלו: מי האנשים האלה? ענינו להם שאלה האנשים שכותבים את המילים שאנחנו קוראים. את הרעיון של הסיפור ואת העלילה הם מחברים, ואז מגיע המאייר, קורא את הסיפור ומצייר את מה שהוא מדמיין מהסיפור. אחד החברים ענה שהאנשים שכותבים ומאיירים עובדים במקום סגור שרק הם נמצאים בו כדי שיוכלו להתרכז!
 
