--- a/content/weekly-update/פותחים-את-שנת-תש-ף.md
+++ b/content/weekly-update/פותחים-את-שנת-תש-ף.md
@@ -3,352 +3,245 @@ title: פותחים את שנת תש''ף!
 date: '2019-09-14T19:23:40+03:00'
 ---
 
-
 הורים יקרים שלנו
 
 השבועיים הראשונים של תחילת השנה כבר מאחורינו.
 
-אמנם רוב הילדימות כבר התשלבו לימים מלאים, אבל אנחנו מבחינתנו עדיין בתקופה של התאקלמות. זוהי תקופה של רגישות גבוהה, של הכרות ויצירת אמון הדדי בין כולנו. 
+אמנם רוב הילדימות כבר התשלבו לימים מלאים, אבל אנחנו מבחינתנו עדיין בתקופה של התאקלמות. זוהי תקופה של רגישות גבוהה, של הכרות ויצירת אמון הדדי בין כולנו.
 
-אנחנו מרגישים איך בכל יום אנחנו הופכים לקבוצה אחת, קהילה אחת, מבינים ומכירים טוב יותר, מתאימים את עצמנו אחד לשני וזה מרגש לראות. 
-
-<br>
-<br>
+אנחנו מרגישים איך בכל יום אנחנו הופכים לקבוצה אחת, קהילה אחת, מבינים ומכירים טוב יותר, מתאימים את עצמנו אחד לשני וזה מרגש לראות.
 
 **כמה הודעות של התחלה:
 **
 
-1.	יום שלישי הקרוב, יום בחירות, יום שבתון- הגן בחופש. 
+1. יום שלישי הקרוב, יום בחירות, יום שבתון- הגן בחופש.
 
+2. ימי שישי החופשיים נמצאים כולם כולל לוח החופשות בלוח השנה באתר הגן שלנו (בתחתית העמוד הראשי ) אתם מוזמנים תמיד לבדוק שם.
 
+3. משפחות מצטרפות-כל הילדימות שסיימו תהליך ההסתגלות (כלומר, נשארו לימים מלאים עד 15-16), אפשר להגיע הגעה חופשית בבוקר בין השעות 7:30-8:20. איסוף עדיין בין השעות 15:00-16:00, אלו שעות רגישות ומהוות טריגר מאחר והילדימות עדיין רואים הורים שמגיעים ונזכרים שמתגעגעים. במידה ואין לכם אפשרות להגיע עד שעה 16, אפשר להגיע גם אחרי, אנחנו מבינים את הצורך, השאיפה היא להשתדלות מצידכם כדי לא להעמיס על הילדים.
 
-2.	ימי שישי החופשיים נמצאים כולם כולל לוח החופשות בלוח השנה באתר הגן שלנו (בתחתית העמוד הראשי ) אתם מוזמנים תמיד לבדוק שם. 
+4. פינת עגלות- אכן חל שיפור משמעותי בקיפול העגלות, השמשיכו כך 
 
+5. נהלי בריאות- לצערנו כבר השבוע נאלצנו להדגיש שוב את נהלי הבריאות בגן שלנו. כפי שנאמר במפגש ההורים, וכפי שכתוב בחוברת המידע אנחנו קפדניות מאוד בנושא. אנא כבדו את נהלי הבריאות כדי לשמור על סביבה בריאה ונעימה לכולנו.
 
+6. פרידות בוקר, גם למצטרפים וגם לממשיכים רכזות השכבה כתבו בעדכון כמה נקודות בנושא, נשמח אם תקראו כדי להקל על הבקרים.
 
-3.	משפחות מצטרפות-כל הילדימות שסיימו תהליך ההסתגלות (כלומר, נשארו לימים מלאים עד 15-16), אפשר להגיע הגעה חופשית בבוקר בין השעות 7:30-8:20. איסוף עדיין בין השעות 15:00-16:00, אלו שעות רגישות ומהוות טריגר מאחר והילדימות עדיין רואים הורים שמגיעים ונזכרים שמתגעגעים. במידה ואין לכם אפשרות להגיע עד שעה 16, אפשר להגיע גם אחרי, אנחנו מבינים את הצורך, השאיפה היא להשתדלות מצידכם כדי לא להעמיס על הילדים. 
-
-
-
-4.	פינת עגלות- אכן חל שיפור משמעותי בקיפול העגלות, השמשיכו כך 
-
-
-
-5.	נהלי בריאות- לצערנו כבר השבוע נאלצנו להדגיש שוב את נהלי הבריאות בגן שלנו. כפי שנאמר במפגש ההורים, וכפי שכתוב בחוברת המידע אנחנו קפדניות מאוד בנושא. אנא כבדו את נהלי הבריאות כדי לשמור על סביבה בריאה ונעימה לכולנו. 
-
-
-
-6.	פרידות בוקר, גם למצטרפים וגם לממשיכים רכזות השכבה כתבו בעדכון כמה נקודות בנושא, נשמח אם תקראו כדי להקל על הבקרים. 
-
-
-
-7<br>חנו מתכננים כבכל שנה הרמת כוסית קלילה לפתיחת השנה (כשנסיים את כלל ההסתגלויות) נעדכן בקרוב לגבי תאריך ושעה. 
-
-
-<br>
+7חנו מתכננים כבכל שנה הרמת כוסית קלילה לפתיחת השנה (כשנסיים את כלל ההסתגלויות) נעדכן בקרוב לגבי תאריך ושעה.
 
 **שבת של מנוחה
 **
 
-<br><br>ם וכל צוות ילדי הטבע הדמוקרטי
-**
+ם וכל צוות ילדי הטבע הדמוקרטי
+\*\*
 
+## עדכון שכבת צעירים
 
+##
 
-<br><br>
-<br>
-
-
-## עדכון שכבת צעירים 
-
-## 
-<br>
-
-ע<br> ראשון לשנה זו, מרגש מאוד! 
+ע ראשון לשנה זו, מרגש מאוד!
 
 לפני שבועיים הגן היה מקום חדש וזר לחלוטין, חלק ניכר מהילדימות לא נחשפו מעולם למסגרת חינוכית מסוג כזה או אחר, לא כולם נפרדו מהורים לפרק זמן ממושך וחלק הגיעו ממסגרות קטנות.
 
-לכן את השבועיים הראשונים הקדשנו להיכרות, התאקלמות ולמידה.  
-
-
-<br>
+לכן את השבועיים הראשונים הקדשנו להיכרות, התאקלמות ולמידה.
 
 **תהליך ההסתגלות בגן
 **
 
- 
-
 אנחנו מאמינות כי תהליך היסתגלות הדרגתי למסגרת חדשה או למקום חדש מאפשר התאקלמות בריאה ונכונה יותר מבחינה ריגשית וקוגנטיבית וגם מבחינת המסוגלות של הילדימות בגילאים הרכים להתמודדות עם מצבים חדשים אליהם מרביתם לא נקלעו מעולם.
 
-  
+הגן שלנו הוא מבנה גדול ורחב, מלא במשחקים, כיתות שונות, לא מעט אנשי צוות וילדימות מתרוצצים.
 
-הגן שלנו הוא מבנה גדול ורחב, מלא במשחקים, כיתות שונות, לא מעט אנשי צוות וילדימות מתרוצצים. 
-
-ב<br>ה זה נראה מאוד כיף, כמו לונה פארק. הרבה אטרקציות ומתקנים מעניינים, אנשים מחייכים אלינו מכל כיוון, ההורים שלנו מלווים אותנו לכל מקום, בסך הכל חוויה נהדרת! 
+בה זה נראה מאוד כיף, כמו לונה פארק. הרבה אטרקציות ומתקנים מעניינים, אנשים מחייכים אלינו מכל כיוון, ההורים שלנו מלווים אותנו לכל מקום, בסך הכל חוויה נהדרת!
 
 ברגע שההורים הולכים אנחנו נשארים לבד בתוך כל הלונה פארק הזה וזה קצת מרגיש כאילו נשארנו בלב הג׳ונגל. למרות שאנחנו מוקפים באנשים חייכניים, שדואגים לנו, אנחנו עדיין לא מכירים אותם, לא סומכים עליהם לגמרי ולא מרגישים בטוחים מספיק במקום הזה עדיין. כאן למעשה מתחיל תהליך ההיכרות וההסתגלות.
 
- 
-
 לתפיסתינו על מנת להקל על הילדימות בתהליך ההתאקלמות וההתרגלות למקום חדש ולדמויות החדשות והמשמעותיות בחייהם, מחובתינו כמחנכות ומחנכים להתאים את עצמינו אל והילדים ולרכוש את תחושת האמון שלהם בנו- ועיקר הפוקוס שלנו בתקופת הההסתגלות מתמקד בעניין זה. כך למשל למדנו והכרנו את הצרכים שלהם מבעוד מועד: למה הם נמשכים, מה אוהבים, מה הן החוזקות והחולשות שלהם, כיצד נירגעים וממה הם ואתם חוששים או מפחדים.
 
-
-<br>
-<br>
-**הימים הראשונים בגן 
+**הימים הראשונים בגן
 **
 
- 
+לאחר השיחות האישיות אתכם במהלך החופשה הבנו כיצד הכי נכון להנגיש עבור הילדימות את הגן בימיו הראשונים.
 
-לאחר השיחות האישיות אתכם במהלך החופשה הבנו כיצד הכי נכון להנגיש עבור הילדימות את הגן בימיו הראשונים. 
-
-יצרנו רשימות השמעה עם השירים האהובים על הילדימות, הכנו ארגזי פעילות בהם הנחנו את כל האביזרים שמעניינים ומגרים אותם למשחק וגם מרגיעים אותם. למשל ספרים, משחקי בנייה והרכבה, משחקי השחלות, בובות פרווה, פונפונים ומכוניות. 
-
-<br>
+יצרנו רשימות השמעה עם השירים האהובים על הילדימות, הכנו ארגזי פעילות בהם הנחנו את כל האביזרים שמעניינים ומגרים אותם למשחק וגם מרגיעים אותם. למשל ספרים, משחקי בנייה והרכבה, משחקי השחלות, בובות פרווה, פונפונים ומכוניות.
 
 **חילקנו את הגן לשלושה איזורים:
 **
 
-\* כיתה אחת שקטה ורגועה בה פרסנו מראש מזרנים על הרצפה עם כריות, שמיכות ומשחקים שקטים לכל אלה שזקוקים למנוחה ויחס יותר אישי. 
+\* כיתה אחת שקטה ורגועה בה פרסנו מראש מזרנים על הרצפה עם כריות, שמיכות ומשחקים שקטים לכל אלה שזקוקים למנוחה ויחס יותר אישי.
 
-\* כיתה שנייה - כיתת משחקי רצפה גדולה. פרסנו מגנטים גדולים, קוביות עץ, חיות, בובות, השחלות כדורים וכו׳. כיתה זו היתה מיועדת לכל הילדימות שמרגישים יותר בטוחים במרחבים  סגורים ואוהבים פעילויות מובנות- שירים, יצירות, הפעלות וכו. 
+\* כיתה שנייה - כיתת משחקי רצפה גדולה. פרסנו מגנטים גדולים, קוביות עץ, חיות, בובות, השחלות כדורים וכו׳. כיתה זו היתה מיועדת לכל הילדימות שמרגישים יותר בטוחים במרחבים סגורים ואוהבים פעילויות מובנות- שירים, יצירות, הפעלות וכו.
 
 בכל פעם בחרנו בין שניים לשלושה משחקים כדי למנוע גירוי יתר והחלפנו בין המשחקים כדי לשמור על גירוי הסקרנות של הילדימות
 
 \* האיזור השלישי הוא החצר הגדולה והרחבה בה חיכו לילדימות משחקי מים, בועות סבון, ארגז החול, ג׳ימבורי, בתי העץ וכמובן שושנה התרנגולת שאכלה לא מעט בשבועיים האחרונים.
 
-
-
 בזמן שתירגלתם נשימות עמוקות או הצצתם מבחוץ, ניצלנו את הזמן כדי להכיר את הילדימות שלכם טוב יותר ולעבוד על היקשרות, לבנות תחושת את הביטחון והאמון. גילינו עליהם המון דברים חדשים והצפנו את המידע והמסקנות עליהם הגענו במהלך הישיבות שנערכו בכל בצהריים.
-<br>
- לאחר ההיכרות התאמנו את קצב ההסתגלות לתהליך של כל ילד וילדה בהתאם לחוזקות שלהם- לעל ילד וילדה התאמנו "חליפה חינוכית אישית". מה זה אומר? 
 
-יש ילדים שקשה להם יותר בבוקר והם זקוקים למנוחה לפני שהם מתחילים להתמודד עם האתגרים הצפויים להם במהלך היום. יש ילדים שצריכים את המרחבים הפתוחים. ילדים סנסורים הנרגעים בעזרת מגע במרקמים שונים אלו ילדים שבחרו לבלות בארגז החול ובשולחנות המים. 
+לאחר ההיכרות התאמנו את קצב ההסתגלות לתהליך של כל ילד וילדה בהתאם לחוזקות שלהם- לעל ילד וילדה התאמנו "חליפה חינוכית אישית". מה זה אומר?
 
-יש ילדים שחיפשו את הדברים המוכרים להם מהבית, להם השמענו את השירים האהובים והקראנו את הסיפורים שהם כבר מכירים כך יצרנו קשר ישיר בין הבית לגן ונתנו להם תחושה שאנחנו כבר מכירים אותם. יודעים למה הם מתחברים ואוהבים.  
+יש ילדים שקשה להם יותר בבוקר והם זקוקים למנוחה לפני שהם מתחילים להתמודד עם האתגרים הצפויים להם במהלך היום. יש ילדים שצריכים את המרחבים הפתוחים. ילדים סנסורים הנרגעים בעזרת מגע במרקמים שונים אלו ילדים שבחרו לבלות בארגז החול ובשולחנות המים.
 
-בעצם השתמשנו בחוזקות של הילדימות כדי להתגבר על הקושי שהם מרגישים ודאגנו שיהיה לנו מענה זמין לכל רגש שיציף אותם. התאמנו את קצב ההסתגלות לתהליך ולצרכים השונים של כל ילד וילדה.  
+יש ילדים שחיפשו את הדברים המוכרים להם מהבית, להם השמענו את השירים האהובים והקראנו את הסיפורים שהם כבר מכירים כך יצרנו קשר ישיר בין הבית לגן ונתנו להם תחושה שאנחנו כבר מכירים אותם. יודעים למה הם מתחברים ואוהבים.
 
-ברגע שהאיתנות והחוסן האישי שלהם התחזקו והתייצבו התחלנו לבנות סדר יום קבוצתי.     
+בעצם השתמשנו בחוזקות של הילדימות כדי להתגבר על הקושי שהם מרגישים ודאגנו שיהיה לנו מענה זמין לכל רגש שיציף אותם. התאמנו את קצב ההסתגלות לתהליך ולצרכים השונים של כל ילד וילדה.
 
+ברגע שהאיתנות והחוסן האישי שלהם התחזקו והתייצבו התחלנו לבנות סדר יום קבוצתי.
 
-<br>
-
-**הטמעת סדר יום 
+**הטמעת סדר יום
 **
 
-
-
-כל ילד וילדה מגיעים עם סל תכונות ויכולות משלהם, כל אחד מהם מעכל דברים בצורה ובקצב שונה. 
+כל ילד וילדה מגיעים עם סל תכונות ויכולות משלהם, כל אחד מהם מעכל דברים בצורה ובקצב שונה.
 
 כך נוצר מצב שבו בשבוע השני לתהליך ההסתגלות נוצרו שתי קבוצות.
 
- קבוצה אחת של ילדימות שקצב ההסתגלות שלהם היה מהיר יחסית והם כבר הרגישו מספיק חזקים ובטוחים 
+קבוצה אחת של ילדימות שקצב ההסתגלות שלהם היה מהיר יחסית והם כבר הרגישו מספיק חזקים ובטוחים
 
 וקבוצה שנייה של ילדימות שהיו זקוקים לעוד זמן כדי לבסס את התחושות הללו.
 
 גם כאן התאמנו את עצמינו לילדימות. הבנו שכדי שנוכל לתת להם את המענה הנכון עדיף לחלק אותם לקבוצות ולדרג את ההגעה בבוקר לשעות שונות, מוגדרות וקבועות מראש. לכל קבוצה היתה שעה מסויימת בה יכולתם להגיע בבוקר לגן וזאת על מנת לפזר את העומס של הפרידות כדי שנצליח להגיע לכל ילד וילדה הזקוקים לנו, לתת יחס אישי ומענה נכון לצרכים שלהם בבוקר. כאשר מתחילים את היום בצורה נעימה מתאימה ליכולות שלנו זה יכול להשפיע על המשך היום שלנו.
 
+קצת על סדר היום שלנו- את הבוקר פתחנו במשחק חופשי בחצר ובכיתה הצמודה, כאשר עמדה לרשות הילדימות גם כיתת המנוחה.
 
+בשעה 8:20 התכנסנו בכיתה לאיסוף המשחקים והתארגנות להפסקת מים וארוחת הבוקר.
 
-קצת על סדר היום שלנו- את הבוקר פתחנו במשחק חופשי בחצר ובכיתה הצמודה, כאשר עמדה לרשות הילדימות גם כיתת המנוחה. 
-
-בשעה 8:20  התכנסנו בכיתה לאיסוף המשחקים והתארגנות להפסקת מים וארוחת הבוקר. 
-
-דרך חלוקת הבקבוקים הכרנו את החברים החדשים שלנו ולמדנו למי שייכים הבקבוקים שבסלסלה. ראינו שחלק מהילדימות כבר עוזרים לחברים שלהם ומגישים להם את הבקבוק שלהם. 
+דרך חלוקת הבקבוקים הכרנו את החברים החדשים שלנו ולמדנו למי שייכים הבקבוקים שבסלסלה. ראינו שחלק מהילדימות כבר עוזרים לחברים שלהם ומגישים להם את הבקבוק שלהם.
 
 אנחנו עדיין לא בשלב בו אנחנו מבססים את הרגלי האכילה של הילדימות כקבוצה וכיחידים, לכן ארוחת הבוקר התנהלה בסגנון חופשי וזורם: מגוון ירקות, ממרחים וחביתות חומוס נפרסו על השולחן והילדימות ישבו או עמדו סביבו ואכלו יחדיו.
-<br>
-המשכנו למשחק בכיתה ולאחר מכן יציאה לחצר. 
 
-הימים חמים לכן דאגנו להפסקות מים ופירות צוננים. 
+המשכנו למשחק בכיתה ולאחר מכן יציאה לחצר.
 
-משם המשכנו למפגש. 
+הימים חמים לכן דאגנו להפסקות מים ופירות צוננים.
 
-המפגש הוא פעילות נעימה ומגבשת, שמעוררת הקשבה, מחשבה ומעורבות, ותורמת לתחושת ההשתייכות לקבוצה ולרצון להיות חלק ממנה. לאורך השנה מועברים במפגש תכנים שונים- אקטואליים ופרוייקטליים, אבל כרגע אנחנו מתעסקות ביצירת בסיס אחיד וחוויה משותפת. יש לנו שני שירי פתיחה קבועים ואת קופסאת ההפתעות ממנה מציצה עלינו טיטי הבובה ומברכת אותנו בבוקר טוב. הקביעות יוצרת תחושת וודאות, הילדימות יודעים מה הדבר הבא שעומד לקרות. ובכך מחזקת את תחושת הביטחון.    
+משם המשכנו למפגש.
 
-ביום השלישי למפגש רוב הילדימות שלטו בסדר של המפגש, גילו את מקום המסתור של טיטי הבובה והתרגשו מאוד מהמפגש איתה. אחרי המפגש עוברים לארוחת צהריים מזינה ושינה טובה ונעימה. כשאנחנו מתעוררים אנחנו יוצאים אט אט לחצר ,משחקים בפעילויות חופשיות ויוצרים יצירות. ככל שהזמן יחלוף ונתבסס כקבוצות התכנים ישוכללו. 
+המפגש הוא פעילות נעימה ומגבשת, שמעוררת הקשבה, מחשבה ומעורבות, ותורמת לתחושת ההשתייכות לקבוצה ולרצון להיות חלק ממנה. לאורך השנה מועברים במפגש תכנים שונים- אקטואליים ופרוייקטליים, אבל כרגע אנחנו מתעסקות ביצירת בסיס אחיד וחוויה משותפת. יש לנו שני שירי פתיחה קבועים ואת קופסאת ההפתעות ממנה מציצה עלינו טיטי הבובה ומברכת אותנו בבוקר טוב. הקביעות יוצרת תחושת וודאות, הילדימות יודעים מה הדבר הבא שעומד לקרות. ובכך מחזקת את תחושת הביטחון.
 
+ביום השלישי למפגש רוב הילדימות שלטו בסדר של המפגש, גילו את מקום המסתור של טיטי הבובה והתרגשו מאוד מהמפגש איתה. אחרי המפגש עוברים לארוחת צהריים מזינה ושינה טובה ונעימה. כשאנחנו מתעוררים אנחנו יוצאים אט אט לחצר ,משחקים בפעילויות חופשיות ויוצרים יצירות. ככל שהזמן יחלוף ונתבסס כקבוצות התכנים ישוכללו.
 
-
-
-<br>
-
-**הודעות: 
+**הודעות:
 **
 
-•	כדי לעודד את תחושת הביטחון והעצמאות של הילדים שלכם היכנסו איתם יד ביד לגן ( ולא מחובקים על הידיים)-זאת פעולה קטנה וסמלית שמעודדת את הילדימות לקחת צעד קדימה וכאמור משדרת להם תחושה של בטחון ושייכות לגן. 
-<br>
+• כדי לעודד את תחושת הביטחון והעצמאות של הילדים שלכם היכנסו איתם יד ביד לגן ( ולא מחובקים על הידיים)-זאת פעולה קטנה וסמלית שמעודדת את הילדימות לקחת צעד קדימה וכאמור משדרת להם תחושה של בטחון ושייכות לגן.
+
 ייתכן וזה ישמע לכם קצת מוזר איך שימו את עצמכם במקומם. כאשר נושאים אתכם על הידיים אתם מאבדים שליטה. מישהו מחליט לאן הולכים, מה עושים ומתי . כאשר תתנו לילדימות להיכנס יחד איתכם לגן אתם תעבירו להם שזהו מקום בטוח, מוגן, שאתם סומכים עלינו ושהילדימות שלכם מספיק עצמאיים כדי לעשות זאת בעצמם
 
+• באותו הקשר, פרידות בוקר . תיצרו טקס בוקר קבוע כאשר הילדימות שותפים לתהליך הפרידה שאותה אתם מנהלים- נכנסים לגן ומנופפים לשלום לכל הגננות, ממשיכים לקיפול העגלה, תליית התיק על המתלה ובקבוק בסלסלה. כיצד תנהלו אותה? ע״י שאילת שאלות כמו ״איפה התיק שלך אמור להיות תלוי?״, ״היכן מניחים את הבקבוק?״, ״באיזה משחק תרצי לשחק?״ כאשר סיימתם לפזר את כל הדברים ואתם מוכנים לפרידה רק אז ניגשים לאחד מאנשי הצוות, בכל בוקר מישהי אחרת כדי לעודד תחושת ביטחון עם כל אחת מאיתנו וגם כדי לא לפתח תלות במישהי מסויימת, מאחלים ליום מקסים והולכים.
 
+• התקשורת שלכם מול המובילות. אנחנו כאן כדי לתת מענה לכל השאלות והבקשות שלכן.ם. רק במידה ונרגיש שלא נוכל לתת מענה נפנה אתכם לאחינועם או לגורם המקצועי הרלוונטי לפנייה. מזכירה שאנחנו זמינות בכל יום עד השעה 19:00, לאחר מכן בבקשה כפדו את הזמן האישי שלנו.
 
-•	באותו הקשר, פרידות בוקר . תיצרו טקס בוקר קבוע כאשר הילדימות שותפים לתהליך הפרידה שאותה אתם מנהלים-  נכנסים לגן ומנופפים לשלום לכל הגננות, ממשיכים לקיפול העגלה, תליית התיק על המתלה ובקבוק בסלסלה. כיצד תנהלו אותה? ע״י שאילת שאלות כמו ״איפה התיק שלך אמור להיות תלוי?״, ״היכן מניחים את הבקבוק?״, ״באיזה משחק תרצי לשחק?״ כאשר סיימתם לפזר את כל הדברים ואתם מוכנים לפרידה רק אז ניגשים לאחד מאנשי הצוות, בכל בוקר מישהי אחרת כדי לעודד תחושת ביטחון עם כל אחת מאיתנו וגם כדי לא לפתח תלות במישהי מסויימת, מאחלים ליום מקסים והולכים. 
+• שימו לב להערה של אחינועם בפתיחת העדכון השבועי בעניין שעות הגעה ואיסוף (רלוונטית לכולם אלא אם כן הוגדר לכם אחרת באופו אישי).
 
+• לא לשכוח להביא ביום א' סדינים רעננים ובקבוקי מים מלאים.
 
-<br><br>
-•	התקשורת שלכם מול המובילות. אנחנו כאן כדי לתת מענה לכל השאלות והבקשות שלכן.ם. רק במידה ונרגיש שלא נוכל לתת מענה נפנה אתכם לאחינועם או לגורם המקצועי הרלוונטי לפנייה.  מזכירה שאנחנו זמינות בכל יום עד השעה 19:00, לאחר מכן בבקשה כפדו את הזמן האישי שלנו.     
-
-•	שימו לב להערה של אחינועם בפתיחת העדכון השבועי בעניין שעות הגעה ואיסוף  (רלוונטית לכולם אלא אם כן הוגדר לכם אחרת באופו אישי).
-
-•	לא לשכוח להביא ביום א' סדינים רעננים ובקבוקי מים מלאים. 
-
-
-<br>
-
-**שיהיה לנו שבוע נפלא! 
+**שיהיה לנו שבוע נפלא!
 **
 
-**ויקה, טניה, תמר, אורטל, אחי, צחי והדר. 
-*<br>
+\*\*ויקה, טניה, תמר, אורטל, אחי, צחי והדר.
 
-
-
-<br><br>
-
-
+-
 
 ## עדכון שכבת בוגרים
 
-## 
+##
 
 הכניסה לגן ביום הראשון תמיד מרגשת, מביאה איתה המון ציפיות, חששות, תהיות ושאלות.
 
-אחרי חיבוקים והשלמת פערים התחלנו להיכנס לעניינים ויאללה לשגרה האהובה שלנו. 
+אחרי חיבוקים והשלמת פערים התחלנו להיכנס לעניינים ויאללה לשגרה האהובה שלנו.
 
-לשמחתנו בשנה שעברה הצלחנו לייצר אצל הילדימות בסיס חזק מאוד וסדר יום ברור ומדויק ולכן הכניסה לשגרה הייתה חלקה ביותר. 
+לשמחתנו בשנה שעברה הצלחנו לייצר אצל הילדימות בסיס חזק מאוד וסדר יום ברור ומדויק ולכן הכניסה לשגרה הייתה חלקה ביותר.
 
-
-<br>
-<br>
-**שנת הצעירים חלפה עברה לה והנה אנחנו כבר... ב ו ג ר י ם. 
+**שנת הצעירים חלפה עברה לה והנה אנחנו כבר... ב ו ג ר י ם.
 **
-
-
 
 הילדימות הסתובבו בשבועיים האחרונים כמו טווסים גאים שמזכירים לכל העוברים והשבים שהם ה-בוגרים
 
- אכן עולמם של הבוגרים הוא מאוד שונה מהצעירים, פיזית אנחנו גדולים יותר, וורבאליים, אחראיים יותר לעצמנו. 
+אכן עולמם של הבוגרים הוא מאוד שונה מהצעירים, פיזית אנחנו גדולים יותר, וורבאליים, אחראיים יותר לעצמנו.
 
-הגישה החינוכית שלנו בגן היא רוחבית, אבל בכל שכבת גיל אנחנו שמים את הפוקוס על דברים קצת שונים. אם בצעירים הדגש הוא על הקניית הרגלים ומיומנויות אישיות, בבוגרים הפוקוס שלנו הוא בעיקר במיומנויות הבין אישיות, ביכולת לייצר קשרים חברתיים, להבין מי אני, מה מתאים לי ומה פחות. 
-
-
+הגישה החינוכית שלנו בגן היא רוחבית, אבל בכל שכבת גיל אנחנו שמים את הפוקוס על דברים קצת שונים. אם בצעירים הדגש הוא על הקניית הרגלים ומיומנויות אישיות, בבוגרים הפוקוס שלנו הוא בעיקר במיומנויות הבין אישיות, ביכולת לייצר קשרים חברתיים, להבין מי אני, מה מתאים לי ומה פחות.
 
 אבל רגע רגע.... לא כל כך מהר. אנחנו אמנם מתגאים מאוד בתואר הבוגרים, אבל חשוב לזכור שלפני חודש עוד היינו צעירים והשינוי הזה לא נגמר ב1.9, הוא רק מתחיל. להפוך לבוגרים זה תהליך, כמעט כל דבר בגן קורה כתהליך, בטח ובטח המעבר להיותנו בוגרים. ישנם אלמנטים רבים שנוגעים ברובם לאחריות האישית, לעצמאות, לדרך בה אנחנו פונים לילדימות
 
-בשנת הבוגרים לעומת הצעירים אנחנו עובדים פחות במודל הקבוצתי ויותר במודל השכבתי, מערבבים בין הילדימות, יוצרים קשרים חדשים, מסגלים את היכולת לפנות לשלל דמויות מחנכות ולא להסתמך רק על דמות אחת, מתוך הבנה שהמודל הזה דומה הרבה יותר ל"עולם האמיתי" ולמציאות אותה הילדימות עתידים לפגוש. כל זה מגיע כמובן יחד עם עבודה פרטנית ובקבוצות קטנות, על מנת לחזק ולשכלל את המיומנויות והיכולות כמה שרק אפשר. 
-
-
-
-<br>
-<br>
+בשנת הבוגרים לעומת הצעירים אנחנו עובדים פחות במודל הקבוצתי ויותר במודל השכבתי, מערבבים בין הילדימות, יוצרים קשרים חדשים, מסגלים את היכולת לפנות לשלל דמויות מחנכות ולא להסתמך רק על דמות אחת, מתוך הבנה שהמודל הזה דומה הרבה יותר ל"עולם האמיתי" ולמציאות אותה הילדימות עתידים לפגוש. כל זה מגיע כמובן יחד עם עבודה פרטנית ובקבוצות קטנות, על מנת לחזק ולשכלל את המיומנויות והיכולות כמה שרק אפשר.
 
 **שיעור בחברות ואמפתיה
 **
 
+אפשר לומר שבשבועיים האחרונים עברנו את התהליך הראשון שלנו כשכבה. תהליך שכלל הכלה, הבנה, סבלנות, והמון חברות. תהליך של הסתגלות הוא אף פעם לא פשוט, תארו לכם כיצד זה מרגיש להיכנס בכובע ה"חדש" לתוך עולם יציב, מתפקד, שיש לו כבר שפה משותפת והרגלים ברורים. מצד אחד זה מהווה יתרון משמעותי, מצד שני זה מאתגר , מבלבל ומערער את כל הנפשות הפועלות.
 
-
-אפשר לומר שבשבועיים האחרונים עברנו את התהליך הראשון שלנו כשכבה. תהליך שכלל הכלה, הבנה, סבלנות, והמון חברות. תהליך של הסתגלות הוא אף פעם לא פשוט, תארו לכם כיצד זה מרגיש להיכנס בכובע ה"חדש" לתוך עולם יציב, מתפקד, שיש לו כבר שפה משותפת והרגלים ברורים. מצד אחד זה מהווה יתרון משמעותי, מצד שני זה מאתגר , מבלבל ומערער את כל הנפשות הפועלות. 
-
-
-
-לשכבה שלנו הצטרפו שבעה חברים חדשים ומקסימים ועוד ארבעה חברים ישנים-חדשים ואהובים. 
+לשכבה שלנו הצטרפו שבעה חברים חדשים ומקסימים ועוד ארבעה חברים ישנים-חדשים ואהובים.
 
 אנחנו מסתכלים על התהליך הזה כעל מיזוג והפיכה למעגל גדול, ולצורך כך לכל מעגל תפקיד חשוב והרבה עבודה. החברים החדשים נדרשים למאמץ בעיקר מנטלי, לחוסן רב, לבניית אמון. החברים הוותיקים גם הם משקיעים המון מאמץ, בויתור, בהכלה, ביכולת לדחות סיפוקים ולהבין שכרגע יש כאלו שזקוקים לנו יותר. אם כבר בבוגרים עסקינן... הבגרות שהילדימות גילו השבוע כלפי חבריהם החדשים הייתה פשוט מעוררת השראה, והתוצאות מעידות על כך. אנחנו יכולים לראות שכל החברים החדשים הסתגלו לגן ולמען האמת, כבר כמעט לא ניתן להבדיל בין החברים החדשים לוותיקים.
 
- 
-
-ה<br>לנו עובד כקהילה, וככזה היה לנו חשוב לשתף את הילדימות בשינוי המשמעותי ביותר שקרה בגן בשבועיים האחרונים, הצטרפותם של שכבת צעירים חדשה לגמרי. השיח היה תמידי, הילדימות התעניינו מאוד בצעירים החדשים, איפה הם נמצאים, מה הם עושים? גילינו שמה שעוזר לחלק מהקטנטנים החדשים הוא פשוט לראות את הבוגרים משחקים לידם, וזה הפך להיות עניין שבשגרה. גם בחצר יכולנו לראות מחוות קטנות ומקסימות שהבוגרים הציעו לקטנטנים לשחק איתם, הביאו להם משחק שחפצו בו. פשוט היו ערים להם וראו אותם, בצורה הכי אותנטית שאפשר. בתהליך הזה כולם מרוויחים, גם הילדימות שנמצאים בצד הנותן והמעניק וגם אלה שנמצאים, כרגע, בצד המקבל. אלה כמו אלה מפתחים את "שרירי החברות" והיכולות הבינאישיות שלהם. 
-
- 
-
-
-<br>
+הלנו עובד כקהילה, וככזה היה לנו חשוב לשתף את הילדימות בשינוי המשמעותי ביותר שקרה בגן בשבועיים האחרונים, הצטרפותם של שכבת צעירים חדשה לגמרי. השיח היה תמידי, הילדימות התעניינו מאוד בצעירים החדשים, איפה הם נמצאים, מה הם עושים? גילינו שמה שעוזר לחלק מהקטנטנים החדשים הוא פשוט לראות את הבוגרים משחקים לידם, וזה הפך להיות עניין שבשגרה. גם בחצר יכולנו לראות מחוות קטנות ומקסימות שהבוגרים הציעו לקטנטנים לשחק איתם, הביאו להם משחק שחפצו בו. פשוט היו ערים להם וראו אותם, בצורה הכי אותנטית שאפשר. בתהליך הזה כולם מרוויחים, גם הילדימות שנמצאים בצד הנותן והמעניק וגם אלה שנמצאים, כרגע, בצד המקבל. אלה כמו אלה מפתחים את "שרירי החברות" והיכולות הבינאישיות שלהם.
 
 **קצת על סדר היום שלנו
 **
 
-בשבועיים האחרונים סדר היום היה זהה כמעט לחלוטין למוכר והידוע, גם מבחינת הזמנים. 
+בשבועיים האחרונים סדר היום היה זהה כמעט לחלוטין למוכר והידוע, גם מבחינת הזמנים.
 
-אנחנו מתחילים את הבוקר בחברותא קבוצתית, בה אנחנו יושבים יחד כל החברים, שותים מים, משוחחים על ענייני היום, בודקים מי מהחברים הגיעו ומי לא ומתכוננים להמשך היום שלנו. 
+אנחנו מתחילים את הבוקר בחברותא קבוצתית, בה אנחנו יושבים יחד כל החברים, שותים מים, משוחחים על ענייני היום, בודקים מי מהחברים הגיעו ומי לא ומתכוננים להמשך היום שלנו.
 
-מיד לאחר מכן אנחנו ניגשים לארוחת הבוקר במתכונת "בופה"(הגשה עצמית). חלק מהאלמנטים המרכזיים בשנת הבוגרים היא יכולת הבחירה והעצמאות שלנו, ארוחת הבוקר היא אחת הזירות המרכזיות ביום ללמידה והעצמה אישית. 
+מיד לאחר מכן אנחנו ניגשים לארוחת הבוקר במתכונת "בופה"(הגשה עצמית). חלק מהאלמנטים המרכזיים בשנת הבוגרים היא יכולת הבחירה והעצמאות שלנו, ארוחת הבוקר היא אחת הזירות המרכזיות ביום ללמידה והעצמה אישית.
 
-אחרי ארוחת הבוקר כל קבוצה מתכנסת למפגש, עליו אפשר לדבר במשך עדכון שלם, כמו שחלקכם כבר יודעים. 
+אחרי ארוחת הבוקר כל קבוצה מתכנסת למפגש, עליו אפשר לדבר במשך עדכון שלם, כמו שחלקכם כבר יודעים.
 
-אחרי המפגש אנחנו ניגשים לפעילות בקבוצות קטנות הגשת חומרים דוגמת הדבקות מסוגים שונים, צביעה על ניילון נצמד, טושים, עבודה עם בצק ועוד. או פעילויות של שולחנות משחק שמטרתם עבודה על מוטוריקה עדינה יותר, הרכבות, השחלות ועוד. זהו המוקד מרכזי ביום בו אנחנו עובדים בצורה פרטנית ומחזקים מיומנויות.  
+אחרי המפגש אנחנו ניגשים לפעילות בקבוצות קטנות הגשת חומרים דוגמת הדבקות מסוגים שונים, צביעה על ניילון נצמד, טושים, עבודה עם בצק ועוד. או פעילויות של שולחנות משחק שמטרתם עבודה על מוטוריקה עדינה יותר, הרכבות, השחלות ועוד. זהו המוקד מרכזי ביום בו אנחנו עובדים בצורה פרטנית ומחזקים מיומנויות.
 
-בסיום הפעילויות אנחנו יוצאים לאזור האהוב עלינו בגן... החצר . שם קורים דברים מופלאים, נוצרים קשרים וזוהי ההזדמנות מצוינת לעבוד על מיומנויות בין אישיות, להכיר יותר את עצמי ואת הסובבים אותי. 
+בסיום הפעילויות אנחנו יוצאים לאזור האהוב עלינו בגן... החצר . שם קורים דברים מופלאים, נוצרים קשרים וזוהי ההזדמנות מצוינת לעבוד על מיומנויות בין אישיות, להכיר יותר את עצמי ואת הסובבים אותי.
 
-אחרי זמן משחק בחצר אנחנו נכנסים לארוחת צהריים שכבתית במבואה ומשם התארגנות לשינה. את סוף היום שלנו אנחנו מבלים במשחק נעים בכיתה, טקס אכילת כריכים ומשם יוצאים לזמן משותף של משחקי שולחן במבואה, כפי שיכולתם לראות. אנחנו נסיים את היום שלנו באופן קבוע במבואה, מי שמגיע לאסוף קודם, יוכל למצוא אותנו בכיתות השינה. 
+אחרי זמן משחק בחצר אנחנו נכנסים לארוחת צהריים שכבתית במבואה ומשם התארגנות לשינה. את סוף היום שלנו אנחנו מבלים במשחק נעים בכיתה, טקס אכילת כריכים ומשם יוצאים לזמן משותף של משחקי שולחן במבואה, כפי שיכולתם לראות. אנחנו נסיים את היום שלנו באופן קבוע במבואה, מי שמגיע לאסוף קודם, יוכל למצוא אותנו בכיתות השינה.
 
+\*\*מפגש
 
-<br>
+-
 
-**מפגש
-*<br>
+המפגש הוא כלי עבורנו לחיזוק הקבוצתיות והעצמה אישית של הילדימות, המפגש הוא גם הזדמנות להעמקת השיח והלמידה בנושאים מסוימים, מחיי היום-יום ובכלל. חשוב לציין שבשונה מגנים מסורתיים אנחנו לא מקדישים את המפגשים רק ללמידת חגי השנה, מנהגים וכו', כל אלו הם דברים שקיימים בגן, אך מונגשים לילדימות קצת אחרת.
 
-המפגש הוא כלי עבורנו לחיזוק הקבוצתיות והעצמה אישית של הילדימות,  המפגש הוא גם הזדמנות להעמקת השיח והלמידה בנושאים מסוימים, מחיי היום-יום ובכלל. חשוב לציין שבשונה מגנים מסורתיים אנחנו לא מקדישים את המפגשים רק ללמידת חגי השנה, מנהגים וכו', כל אלו הם דברים שקיימים בגן, אך מונגשים לילדימות קצת אחרת. 
+את המפגש מלווה הנושא השבועי, שנבחר בהתאם לצרכים של הילדימות, לתחומי העניין שלהם וכמובן למציאות בה אנחנו חיים.
 
-את המפגש מלווה הנושא השבועי, שנבחר בהתאם לצרכים של הילדימות, לתחומי העניין שלהם וכמובן למציאות בה אנחנו חיים. 
+השבוע למשל הקדשנו את המפגשים לשיח סביב התחלות ואיך לא, בחירות! כל יום דרך משקפיים קצת אחרות. התחלנו מהדברים המוכרים לנו, איך מתחיל השבוע, איך מתחיל היום שלנו, איך מרגישה התחלה חדשה? המצאנו משחק של ניחושי התחלות של שירים מוכרים, המשחק הפך ללהיט ובכל סוף יום הקדשנו לו כמה דקות נוספות, הילדימות אלופים בזה! ממליצה בחום לנסות בבית.
 
-השבוע למשל הקדשנו את המפגשים לשיח סביב התחלות ואיך לא, בחירות! כל יום דרך משקפיים קצת אחרות. התחלנו מהדברים המוכרים לנו, איך מתחיל השבוע, איך מתחיל היום שלנו, איך מרגישה התחלה חדשה? המצאנו משחק של ניחושי התחלות של שירים מוכרים, המשחק הפך ללהיט ובכל סוף יום הקדשנו לו כמה דקות נוספות, הילדימות אלופים בזה! ממליצה בחום לנסות בבית. 
+שיח על התחלות מתחבר באופן הרמוני לנושא הבחירות, כשאני מתחילה את היום שלי אני בוחרת המון דברים. גם כשאני מגיעה לגן. אני בוחרת במה להתחיל לשחק, האם בבובות או בתחפושות? אני בוחרת האם להתחיל את היום שלי בחיוך, בכעס, בכיף, בעצב?
 
-שיח על התחלות מתחבר באופן הרמוני לנושא הבחירות, כשאני מתחילה את היום שלי אני בוחרת המון דברים. גם כשאני מגיעה לגן. אני בוחרת במה להתחיל לשחק, האם בבובות או בתחפושות? אני בוחרת האם להתחיל את היום שלי בחיוך, בכעס, בכיף, בעצב?  
+כמו בחיים, יש בחירות שיש לנו השפעה עליהם ויש כאלו שלא. איך מתמודדים עם הפסד בבחירות? זה יכול להיות מאוד מאכזב ומתסכל, אפשר וצריך אפילו להיות עצובים.. ומה עושים עם כל התחושות האלה?
 
-כמו בחיים, יש בחירות שיש לנו השפעה עליהם ויש כאלו שלא. איך מתמודדים עם הפסד בבחירות? זה יכול להיות מאוד מאכזב ומתסכל, אפשר וצריך אפילו להיות עצובים.. ומה עושים עם כל התחושות האלה?  
-
-במפגשים בחרנו והשפענו! הכרנו דרכים שונות לערוך הצבעה דמוקרטית, עליהן נרחיב בשבוע הבחירות. אוכל לגלות לכם שהצבענו באיזה משחק נשחק כשנתעורר, סברסים או לגו, איזה כריך נאכל בסוף יום, עם ריבה או עם טחינה וסילאן? רוצים לדעת מה ניצח? מוזמנים לשאול את הילדימות! 
+במפגשים בחרנו והשפענו! הכרנו דרכים שונות לערוך הצבעה דמוקרטית, עליהן נרחיב בשבוע הבחירות. אוכל לגלות לכם שהצבענו באיזה משחק נשחק כשנתעורר, סברסים או לגו, איזה כריך נאכל בסוף יום, עם ריבה או עם טחינה וסילאן? רוצים לדעת מה ניצח? מוזמנים לשאול את הילדימות!
 
 בעדכונים הבאים יתאפשר לתת במה גדולה יותר למפגש, עד אז קבלו טעימה קטנה לשירים ששמענו, **רקדנו ושרנו במפגשים האחרונים:
 **
 
-[קולילי 
+[קולילי
 ](https://www.youtube.com/watch?v=4PdyBgB_PxM)
 
 [מסביב לעץ התות](https://www.youtube.com/watch?v=7VpIEdeWKqI)
 
-[אילו הייתי ](https://www.youtube.com/watch?v=aM856Z3t_l0)(מתחיל ב0:55) 
+[אילו הייתי ](https://www.youtube.com/watch?v=aM856Z3t_l0)(מתחיל ב0:55)
 
 [הנשר ](https://www.youtube.com/watch?v=gHIYOUdcfxs&t=58s)
 
-
-
-<br>
-<br>
-
-
-
-**הודעות ועדכונים 
+**הודעות ועדכונים
 **
-
-
 
 1. פרידות בוקר- הימים הקשים כבר מאחורינו, אפשר לחזור לשגרה. להלן כמה דגשים:
 
-\* היכנסו עם הילדימות יד ביד, לא על הידיים, יש לזה משמעות רבה, זה מייצר תחושת ביטחון גדולה הרבה יותר והם כבר לא ממש צריכים את הידיים שלכם בבוקר. 
+\* היכנסו עם הילדימות יד ביד, לא על הידיים, יש לזה משמעות רבה, זה מייצר תחושת ביטחון גדולה הרבה יותר והם כבר לא ממש צריכים את הידיים שלכם בבוקר.
 
-\* סגלו לעצמכם את טקס הפרידה כמו שצריך- ברוטינה קבועה: הניחו את הדברים במקום בשיתוף הילדימות "איפה לתלות את התיק?" הם כבר לגמרי מסוגלים להניח את הבקבוק לבד. 
+\* סגלו לעצמכם את טקס הפרידה כמו שצריך- ברוטינה קבועה: הניחו את הדברים במקום בשיתוף הילדימות "איפה לתלות את התיק?" הם כבר לגמרי מסוגלים להניח את הבקבוק לבד.
 
-\* פרידה בקונספט של בוגרים- השתמשו באלמנטים המוכרים, דחיפה לעבודה, פרידה לצד משחק מוכר.. אין חובה בפרידה עם מחנכת, תסמכו על הילדימות. גם אם אתם מרגישים שזקוקים למחנכת, כל אחת מאיתנו יכולה לתת את המענה בפרידה. 
+\* פרידה בקונספט של בוגרים- השתמשו באלמנטים המוכרים, דחיפה לעבודה, פרידה לצד משחק מוכר.. אין חובה בפרידה עם מחנכת, תסמכו על הילדימות. גם אם אתם מרגישים שזקוקים למחנכת, כל אחת מאיתנו יכולה לתת את המענה בפרידה.
 
-2. תקשורת מול הצוות- בכל הנוגע לתהליכים ונושאים שאינם ענייני היום-יום נעשים מול שירז, מעבר לכך אפשר וכדאי להתעדכן גם מול שאר המחנכות.  
+2. תקשורת מול הצוות- בכל הנוגע לתהליכים ונושאים שאינם ענייני היום-יום נעשים מול שירז, מעבר לכך אפשר וכדאי להתעדכן גם מול שאר המחנכות.
 
-3. סוף יום- אפילו שרוב ההסתגלויות מאחורינו, סוף יום הוא עדיין זמן מאוד רגיש לחלק מהילדימות. כשאתם מגיעים לאסוף השתדלו לא להימצא הרבה זמן בחלל, זה יוצר עומס רב. מי שמגיע בין 15:15-16:00 מתבקש לחכות מחוץ לכיתת השינה, הילדימות יצאו אליכם. 
+3. סוף יום- אפילו שרוב ההסתגלויות מאחורינו, סוף יום הוא עדיין זמן מאוד רגיש לחלק מהילדימות. כשאתם מגיעים לאסוף השתדלו לא להימצא הרבה זמן בחלל, זה יוצר עומס רב. מי שמגיע בין 15:15-16:00 מתבקש לחכות מחוץ לכיתת השינה, הילדימות יצאו אליכם.
 
-כמובן לא לשכוח בקבוקים 
+כמובן לא לשכוח בקבוקים
 
-4. את נוהל תמונות יום א' אנחנו נחזיר ממש בקרוב, לא לדאוג תקבלו על כך עדכון. 
+4. את נוהל תמונות יום א' אנחנו נחזיר ממש בקרוב, לא לדאוג תקבלו על כך עדכון.
 
-
-
-5. לא לשכוח סדינים רעננים עם שמות (חשוב!) ובקבוקים מלאים. 
-
-
-<br>
+5. לא לשכוח סדינים רעננים עם שמות (חשוב!) ובקבוקים מלאים.
 
 **שבוע בחירות טובות לכולנו
 **
 
-**שירז, חולוד, אלינור, מיכל ועינב. 
+**שירז, חולוד, אלינור, מיכל ועינב.
 **
